*Empty MediaWiki Message*

--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -20,7 +20,7 @@
 
 ᏪᏌ ᎦᎷᏨ ᎭᏫᎾᏗᏢ [[List of cat breeds|ᏔᎳᏚ  ᎠᏂᏁᏉᎬ]] ᎠᎴ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ.  ᎤᏍᏆᎸᎲ ᏧᎾᏍᏗ, ᎢᎦᏛ ᎠᎴ [[Sphynx (cat)|ᏗᏄᏪᏍᏗ]] ᎠᎴ ᎢᎦᏛ ᎠᎴ [[Manx (cat)|tailless]]. ᎤᏅᏌ ᎬᏙᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᏍᎪᎯᏧᏈ ᎧᏁᎬ ᎤᏲᏴᎬ ᎠᎴ ᎢᏗᎦᎪᏘ ᎠᏰᎸ ᎦᏬᏂᎯᏍᏗ ᎾᏍᎩᎾᎢ ᏗᏛᎪᏔᏅ, ᎠᏠᏯᏍᏗᏍᎩ ᏓᏯᏂᏍᎬ ("ᎠᏠᏯᏍᏗ" ᎠᎴ "miaou"), [[purr|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[hiss|ᏌᏌ]]ᎪᎯᏳᏙᏗ, [[growling|ᎠᏠᏯᏍᏗ]], [[chirp|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[click|ᎠᎧᏁᏍᏗ]]ᎪᎯᏳᏙᏗ, ᎠᎴ [[grunt|ᎤᎵᏰᏗᏍᎬ]]ᎪᎯᏳᏙᏗ.<ref> [http://www.channel3000.com/news/1472741/detail.html Meows Mean More To Cat Lovers]. ''Channel3000.com''. Accessed [[June 14|ᏕᎭᎷᏱ 14]], [[2006]].</ref>  ᎾᏍᎩᏯᎢ ᎠᏂᏐᏈᎵ ᎠᎴ ᏐᎢ ᎫᏄᏡᏂ ᎡᎿᎢ ᎡᎥ, ᏪᏌ ᏰᎵᏇ ᏗᏙᎳᎩ [[feral cat|feral]], ᎠᎴᏂᏙᎲ ᎢᏳᎵᏍᏙᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ, ᎭᏢᏃ, ᎠᎵᏍᎦᏁᏍᎩ ᎯᎠ ᎥᎦᏔᎲᎢ Ꮎ ᎤᏅᏌ ᎠᎴ ᎤᏤᎵᏛ ᎡᎿᎢ ᎡᎥ, ᎤᏅᏌ ᏫᎵ ᎢᏳᏓᎵᎭ ᎤᏙᏢᏒ ᎤᏍᏗ [[feral cat colony|colonies]].
 
-ᏄᎵᏍᏔᏂᏙᎸ ᎠᎴ ᎢᏰᎵᏍᏗᎢ ᎬᏩᏚᏫᏛ ᎯᎠ ᏪᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎥᎦᏔᎲᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎾᏍᎩ ᎯᎠ [[Egyptian mythology|ᎯᎸᎯᏳᎢ Egyptians]], [[Chinese mythology|Chinese]], ᎠᎴ [[Norse mythology|ᎠᏯᏍᏔ]]. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎢᏧᎳ revered, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ lyudetiyvda ᎤᎬᏫᏳᎯ Wales, [[Hywel Dda]] (ᎯᎠ ᎣᏍᏛ) ᎤᎶᏒᎩ ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎠᏓᎯᏍᏗ ᎠᎴ ᎡᏍᎦ ᎢᎬᏁᎯ ᏪᏌ, ᎠᎴ vilified, ᏯᏛᎿ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎥᎦᏔᎲᎢ ᎯᎠ iyuwakodi, ᎦᎪ ᎠᎦᏎᏍᏔᏅ ᎠᏂ ᎤᏐᏅᎢ, ᎤᏚᏩᎴᎫ, ᎠᎴ ᎯᎠ ᎤᎾᏓᏡᎩ [[witches]].
+ᏄᎵᏍᏔᏂᏙᎸ ᎠᎴ ᎢᏰᎵᏍᏗᎢ ᎬᏩᏚᏫᏛ ᎯᎠ ᏪᏌ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎥᎦᏔᎲᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎾᏍᎩ ᎯᎠ [[Egyptian mythology|ᎯᎸᎯᏳᎢ Egyptians]], [[Chinese mythology|Chinese]], ᎠᎴ [[Norse mythology|ᎠᏯᏍᏔ]]. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎢᏧᎳ revered, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ lᏳᏕᏘᏴᏓ ᎤᎬᏫᏳᎯ Wales, [[Hywel Dda]] (ᎯᎠ ᎣᏍᏛ) ᎤᎶᏒᎩ ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎠᏓᎯᏍᏗ ᎠᎴ ᎡᏍᎦ ᎢᎬᏁᎯ ᏪᏌ, ᎠᎴ vilified, ᏯᏛᎿ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎥᎦᏔᎲᎢ ᎯᎠ ᎢᏳᏩᎣᏗ, ᎦᎪ ᎠᎦᏎᏍᏔᏅ ᎠᏂ ᎤᏐᏅᎢ, ᎤᏚᏩᎴᎫ, ᎠᎴ ᎯᎠ ᎤᎾᏓᏡᎩ [[witches]].
 
 ᎯᎠ ᏪᏌ ᎤᏤᎵ closest ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[domesticated|ᎫᏄᏡᏂ]] ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᎯᎠ [[Felis silvestris lybica#African wild cat|African ᎨᏯᏔᎯ ᏪᏌ]], ''Felis silvestris lybica''.<ref name = robinson>{{cite book| last = Vella | first = Carolyn| authorlink =  | coauthors = et. al. | title = Robinson's Genetics for Cat Breeders and Veterinarians, 4th ed.| publisher = Butterworh-Heinemann | date = 2002 | location = Oxford| id = ISBN 0-7506-4069-3 }}</ref>
 
@@ -48,7 +48,7 @@
 
 == ᏓᎪᏍᎬ ==
 
-ᎤᎾᏓᏟᏌᎲ ᏪᏌ ᎨᏒᎢ ᏩᏎᎸᎯ ᏥᏄᏍᏗ '''clowder''', ᎠᏍᎦᏯ ᏪᏌ ᎨᏒᎢ ᎤᏯᏅᎲ '''ᏗᏂᏤᎷᎯᏍᎩ''', ᎠᎴ ᎠᎨᏴ ᎨᏒᎢ ᎤᏯᏅᎲ '''ᎤᎬᏫᏳ ᎠᏂᏁᎳ'''. ᎯᎠ ᎠᏍᎦᏯ ᎠᏓᎦᏴᎵᎨ ᏪᏌ, ᎾᏍᎩ ᎨᏒᎢ pedigreed ᏪᏌ, ᎨᏒᎢ Ꮝ '''ᎠᏍᎦᏯ''', ᎠᎴ Ꮝ ᎠᎨᏴ ᎠᏓᎦᏴᎵᎨ ᎨᏒᎢ Ꮝ '''ᎠᏓᎦᏴᎵᎨ'''.  ᎠᏛᏍᎩ ᏪᏌ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[kitten|ᏪᏒ ᎠᏛ]]''' (ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏅᎪᏢᎯᏐᏗᏱ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎠᏲᎵ [[rat|ᏥᏍᏕᏥ]], [[rabbit|ᏥᏍᏚ]], [[hedgehog|ᎪᏍᏓᏱ]], [[beaver|ᏙᏯ]], [[squirrel|ᏌᎶᎵ]]ᎠᎴ [[skunk|ᏗᎳ]]). ᎭᏫᎾᏗᏢ [[Britain in the Middle Ages|lyudetiyvda Britain]], ᎯᎠ ᎧᏁᏨ ''ᏪᏒ ᎠᏛ'' ᏥᏄᏍᏛᎩ ᏗᎵᎪᏔᏅᎯ ᎬᏙᏗ ᎯᎠ ᎧᏁᏨ ''catling''. ᏪᏌ ᎾᏍᎩ ᎤᏤᎵ [[genealogy|ᎦᏌᏆᎸ]] ᎨᏒᎢ ᎢᎬᏱ ᎦᏰᎯ ᎠᎪᏪᎶᏗ ᎨᏒᎢ ᎤᏯᏅᎲ  [[pedigree (cat)|pedigreed ᏪᏌ]], [[purebred cat|purebred ᏪᏌ]], ᎠᎴ [[show cat|ᎤᎾᏛᏁᎸᏗ ᏪᏌ]] (ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎤᎾᏛᏁᎸᏗ ᏪᏌ ᎠᎴ pedigreed ᎠᎴ purebred). ᎭᏫᎾᏗᏢ ᎠᏓᏅᏖᎯᏌᏛ ᏓᏓᎴᏂᏍᎬ, purebred ᏪᏌ ᎨᏒᎢ ᏌᏊ ᎾᏍᎩ ᎤᏤᎵ ᎦᏌᏆᎸ ᎢᎦᎢ ᎨᏐ ᎾᏍᎩ ᎤᏩᏒ ᏗᏂᏏᏴᏫᎭ ᎯᎠ ᎤᏠᏱ ᎠᏂᏁᏉᎬ. pedigreed ᏪᏌ ᎨᏒᎢ ᏌᏊ ᎾᏍᎩ ᎤᏤᎵ ᎦᏌᏆᎸ ᎨᏒᎢ ᎪᏪᎳᏅᎯ, ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᏄᏓᎴᎿᎥ ᎠᏂᏁᏉᎬ (ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎢᏤ ᎠᏂᏁᏉᎬ; ᏪᏌ registries ᎠᎴ ᎤᏙᎯᏳ ᎠᏓᏅᏖᎯᏌᏛ ᎬᏩᏚᏫᏛ ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᏰᎵᏇ ᎾᏍᏋ mated ᎢᏧᎳ).   ᏪᏌ ᎦᏟᏌᏅ ᎦᏌᏆᎸ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[domestic longhair cat|ᏄᏍᏛ ᎤᏪᏅᏒ longhairs]] ᎠᎴ [[domestic shorthair cat|ᏄᏍᏛ ᎤᏪᏅᏒ shorthairs]] ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᏥᏄᏍᏗ ᎤᏍᏆᏂᎪᏗ-ᏗᏓᏓᏂᎸᏣᏘ, moggies, ᏧᏠᎯᏍᏗ, mutt-ᏪᏌ ᎠᎴ ᎦᏁᎸ ᏪᏌ.  ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏍᏛ ᏧᎦᏴᎵᎨ/purebred ᏪᏌ ᎤᏍᏆᏂᎪᏗ-ᏗᏓᏓᏂᎸᏣᏘ ᏪᏌ varies ᏂᏛᎴᏅᏓ ᏙᏱᏗᏢ ᎦᏚᎲ ᏙᏱᏗᏢ ᎦᏚᎲ. ᏱᏂᎬᏛᎾ, ᏂᎦᎥᏊ ᎦᏬᏂᏍᎬ, purebreds ᎠᎴ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ ᏍᎪᎯ ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ gantlai ᎾᏂᎥ ᏴᏫ.<ref>''ASPCA ᎧᎵᏬᎯ ᎠᏓᏎᎮᏗ ᏪᏌ'' ᎾᎥᎢ James R. Richards, DVM</ref>
+ᎤᎾᏓᏟᏌᎲ ᏪᏌ ᎨᏒᎢ ᏩᏎᎸᎯ ᏥᏄᏍᏗ '''clowder''', ᎠᏍᎦᏯ ᏪᏌ ᎨᏒᎢ ᎤᏯᏅᎲ '''ᏗᏂᏤᎷᎯᏍᎩ''', ᎠᎴ ᎠᎨᏴ ᎨᏒᎢ ᎤᏯᏅᎲ '''ᎤᎬᏫᏳ ᎠᏂᏁᎳ'''. ᎯᎠ ᎠᏍᎦᏯ ᎠᏓᎦᏴᎵᎨ ᏪᏌ, ᎾᏍᎩ ᎨᏒᎢ pedigreed ᏪᏌ, ᎨᏒᎢ Ꮝ '''ᎠᏍᎦᏯ''', ᎠᎴ Ꮝ ᎠᎨᏴ ᎠᏓᎦᏴᎵᎨ ᎨᏒᎢ Ꮝ '''ᎠᏓᎦᏴᎵᎨ'''.  ᎠᏛᏍᎩ ᏪᏌ ᎨᏒᎢ ᎤᏯᏅᎲ '''[[kitten|ᏪᏒ ᎠᏛ]]''' (ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏅᎪᏢᎯᏐᏗᏱ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎠᏲᎵ [[rat|ᏥᏍᏕᏥ]], [[rabbit|ᏥᏍᏚ]], [[hedgehog|ᎪᏍᏓᏱ]], [[beaver|ᏙᏯ]], [[squirrel|ᏌᎶᎵ]]ᎠᎴ [[skunk|ᏗᎳ]]). ᎭᏫᎾᏗᏢ [[Britain in the Middle Ages|ᏳᏕᏘᏴᏓ Britain]], ᎯᎠ ᎧᏁᏨ ''ᏪᏒ ᎠᏛ'' ᏥᏄᏍᏛᎩ ᏗᎵᎪᏔᏅᎯ ᎬᏙᏗ ᎯᎠ ᎧᏁᏨ ''catling''. ᏪᏌ ᎾᏍᎩ ᎤᏤᎵ [[genealogy|ᎦᏌᏆᎸ]] ᎨᏒᎢ ᎢᎬᏱ ᎦᏰᎯ ᎠᎪᏪᎶᏗ ᎨᏒᎢ ᎤᏯᏅᎲ  [[pedigree (cat)|pedigreed ᏪᏌ]], [[purebred cat|purebred ᏪᏌ]], ᎠᎴ [[show cat|ᎤᎾᏛᏁᎸᏗ ᏪᏌ]] (ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎤᎾᏛᏁᎸᏗ ᏪᏌ ᎠᎴ pedigreed ᎠᎴ purebred). ᎭᏫᎾᏗᏢ ᎠᏓᏅᏖᎯᏌᏛ ᏓᏓᎴᏂᏍᎬ, purebred ᏪᏌ ᎨᏒᎢ ᏌᏊ ᎾᏍᎩ ᎤᏤᎵ ᎦᏌᏆᎸ ᎢᎦᎢ ᎨᏐ ᎾᏍᎩ ᎤᏩᏒ ᏗᏂᏏᏴᏫᎭ ᎯᎠ ᎤᏠᏱ ᎠᏂᏁᏉᎬ. pedigreed ᏪᏌ ᎨᏒᎢ ᏌᏊ ᎾᏍᎩ ᎤᏤᎵ ᎦᏌᏆᎸ ᎨᏒᎢ ᎪᏪᎳᏅᎯ, ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᏄᏓᎴᎿᎥ ᎠᏂᏁᏉᎬ (ᎾᎥᏂᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎢᏤ ᎠᏂᏁᏉᎬ; ᏪᏌ registries ᎠᎴ ᎤᏙᎯᏳ ᎠᏓᏅᏖᎯᏌᏛ ᎬᏩᏚᏫᏛ ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᏰᎵᏇ ᎾᏍᏋ mated ᎢᏧᎳ).   ᏪᏌ ᎦᏟᏌᏅ ᎦᏌᏆᎸ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[domestic longhair cat|ᏄᏍᏛ ᎤᏪᏅᏒ longhairs]] ᎠᎴ [[domestic shorthair cat|ᏄᏍᏛ ᎤᏪᏅᏒ shorthairs]] ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᏥᏄᏍᏗ ᎤᏍᏆᏂᎪᏗ-ᏗᏓᏓᏂᎸᏣᏘ, moggies, ᏧᏠᎯᏍᏗ, mutt-ᏪᏌ ᎠᎴ ᎦᏁᎸ ᏪᏌ.  ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏄᎾᏍᏛ ᏧᎦᏴᎵᎨ/purebred ᏪᏌ ᎤᏍᏆᏂᎪᏗ-ᏗᏓᏓᏂᎸᏣᏘ ᏪᏌ varies ᏂᏛᎴᏅᏓ ᏙᏱᏗᏢ ᎦᏚᎲ ᏙᏱᏗᏢ ᎦᏚᎲ. ᏱᏂᎬᏛᎾ, ᏂᎦᎥᏊ ᎦᏬᏂᏍᎬ, purebreds ᎠᎴ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ ᏍᎪᎯ ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ gantlai ᎾᏂᎥ ᏴᏫ.<ref>''ASPCA ᎧᎵᏬᎯ ᎠᏓᏎᎮᏗ ᏪᏌ'' ᎾᎥᎢ James R. Richards, DVM</ref>
 
 ᎯᎠ ᎧᏁᏨ ''ᏪᏌ'' ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎠᎦᏴᎵ ᎩᎵᏏ ''catt'', ᎦᏙ ᎤᏍᏗ ᎤᏙᏣᎵ ᎤᎾᏓᏟᏌᎲ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᏂᏁᏨ ᎭᏫᎾᏗᏢ European ᏗᎦᏬᏂᎯᏍᏗ, ᎠᏠᏯᏍᏗᏍᎩ Latin ''cattus'', Byzantine ᎠᎪᎢ κάττα, ᎠᎦᏴᎵ ᎦᏁᎳ ''ᏪᏌ'', ᎠᎴ ᎠᎦᏴᎵ ᏗᎦᎳᏫᏍᏗ ᎷᏏᎥ ''kotka''. ᎯᎠ ᎤᎵᏍᏛ ᏗᏓᎴᎲᏍᎬ ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᏓᏓᎴᏂᏍᎬ, ᏱᏂᎬᏛᎾ, ᎨᏒᎢ ᎤᎧᏁᎳ.<ref>''Oxford ᎩᎵᏏ ᏗᏕᏠᏆᏍᏙᏗ'' .v. ''ᏪᏌ''</ref>
 
@@ -82,7 +82,7 @@
 
 ᏧᏓᎴᎿᎢ ᎠᏂᎩᏟ ᎠᎴ ᎤᎪᏗᏗ gantlai, ᏪᏌ ᎠᎢᏒ ᎾᎥᎢ ᎠᏓᏅ ᎢᏧᎳ ᏗᏂᏅᏍᎨᏂ ᎾᎿ ᏌᏊ ᎠᏍᏆᎨᏂ ᎠᎴ ᎾᎯᏳᎢ ᎢᏧᎳ ᏗᏂᏅᏍᎨᏂ ᎾᎿ ᎯᎠ ᏐᎢ. ᎤᎪᏗᏗ gantlai ᎠᏓᏅᏍᏗ ᏗᏂᏅᏍᎨᏂ ᎾᎿ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᏍᏆᎨᏂ ᎭᏫᎾᏗᏢ ᎠᏍᏓᏩᏗᏒ. ᏪᏌ ᎠᏓᏲᏔᎡᏗ ᎪᎯ ᏓᎦᏘᎴᎬ ᎾᏛᏁᎲ ᎠᎢᏒ ᎬᏙᏗ ᎨᎻᎵ ᎠᎴ ᎤᏙᎯᏳ ᎦᏲᎵ ᏐᎢ gantlai. ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎤᎾᏅᏛ ᏗᎵᎪᏔᏅᎯ ᎠᏰᎵ ᎨᎻᎵ ᎠᎴ ᏪᏌ ᎦᏙ ᎤᏍᏗ ᏄᎵᏂᎬᎬ ᏗᎪᏏᏐᏗ ᎪᎯ.  
 
-ᎾᏍᎩᏯᎢ ᏂᎦᏛ ᎠᏁᎳ [[family (biology)|ᏏᏓᏁᎸᎯ]] [[felidae]], ᎬᏙᏗ ᎯᎠ ᏓᎦᏘᎴᎬ ᎯᎠ [[cheetah|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]], ᏪᏌ ᎤᎭ retractable [[claw|ᎠᎩᏍᎬᎢ]]. ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏄᎶᏒᏍᏛᎾ, tohi adedi ᎾᎿ ᎦᏙᎬ ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎴ sheathed ᎬᏙᏗ ᎯᎠ ᎦᏁᎦ ᎠᎴ ᎤᏭᏯᏔᏅ yvwatuwidv ᎯᎠ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ. ᎪᎯ ᎤᏍᏆᏂᎪᏗ ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎪᏍᏓᏯ ᎾᎥᎢ ᎠᎴᏫᏍᏔᏅ ᎠᏄᏬᏍᏗ ᏂᏛᎴᏅᏓ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᎯᎠ ᎦᏙᎯ ᎠᎴ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ tonudvhna ᎾᏛᏁᎸ ᎠᎵᏍᏓᏴᏗ.  ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎾᎿ ᎯᎠ forefeet ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏯᏍᏔ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎾᎿ ᎯᎠ ᎣᏂᏗᏢ ᏧᎾᎳᏏᏕᎾ. ᏪᏌ ᏰᎵᏇ ᎧᏁᏉᏍᏗ ᎤᎾᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᏫᎵ ᎾᎿ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᏩᏱ ᎾᎾᎢ ᏫᎵ. ᏪᏌ ᎠᎾᏍᎬᏘ ᎧᏁᏉᏍᏗ ᎤᎾᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏂᏃᎯᎵᏙᎲ ᎠᎴ ᎣᏩᏒ-ᎤᎵᏍᏕᎸᏗ, ᏥᎵᎱ, "[[Kneading (cats)|ᏧᏠᎯᏍᏗ]]", ᎠᎴ ᎾᏍᎩᎾᎢ ᎤᏤᎵᏛ ᏫᏓᏲᎯᏍᏗ ᎾᎿ ᏩᏂᎨᎢ ᎦᏚᎢ (bedspreads, ᎤᎭᎨᏛ ᏯᏖᏃ ᏗᏰᏍᏛᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.). ᎯᎠ ᎠᎷᏚᎧᏘ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎾᏍᎬᏘ ᏗᏙᎳᎩ ᏓᎧᏁᎲ ᎭᏫᎾᏗᏢ ᏯᏖᏃ ᎠᏰᏍᏛᏗ ᎠᎴ ᎤᎭᎨᏛ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏂᎬᏂᏏᏍᎬ ᎠᏥᏐᏅᏅ ᎢᏳᏃ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎠᏎᏊᎢ ᎤᏩᏌᏊ.
+ᎾᏍᎩᏯᎢ ᏂᎦᏛ ᎠᏁᎳ [[family (biology)|ᏏᏓᏁᎸᎯ]] [[felidae]], ᎬᏙᏗ ᎯᎠ ᏓᎦᏘᎴᎬ ᎯᎠ [[cheetah|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]], ᏪᏌ ᎤᎭ retractable [[claw|ᎠᎩᏍᎬᎢ]]. ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏄᎶᏒᏍᏛᎾ, ᎣᎯ ᎠᏕᏗ ᎾᎿ ᎦᏙᎬ ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎴ sheathed ᎬᏙᏗ ᎯᎠ ᎦᏁᎦ ᎠᎴ ᎤᏭᏯᏔᏅ ᏴᏩᎤᏫᏛ ᎯᎠ ᎧᎾᏌᏛ ᏗᏯᎦᎸᏗ. ᎪᎯ ᎤᏍᏆᏂᎪᏗ ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎪᏍᏓᏯ ᎾᎥᎢ ᎠᎴᏫᏍᏔᏅ ᎠᏄᏬᏍᏗ ᏂᏛᎴᏅᏓ ᏚᏓᏂᏴᏒ ᎬᏙᏗ ᎯᎠ ᎦᏙᎯ ᎠᎴ ᎠᎵᏍᎪᎸᏙᏗ ᎯᎠ ᎣᏄᏛᎿ ᎾᏛᏁᎸ ᎠᎵᏍᏓᏴᏗ.  ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎾᎿ ᎯᎠ forefeet ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏯᏍᏔ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎾᎿ ᎯᎠ ᎣᏂᏗᏢ ᏧᎾᎳᏏᏕᎾ. ᏪᏌ ᏰᎵᏇ ᎧᏁᏉᏍᏗ ᎤᎾᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᏫᎵ ᎾᎿ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᏩᏱ ᎾᎾᎢ ᏫᎵ. ᏪᏌ ᎠᎾᏍᎬᏘ ᎧᏁᏉᏍᏗ ᎤᎾᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᎭᏫᎾᏗᏢ ᎠᏂᏃᎯᎵᏙᎲ ᎠᎴ ᎣᏩᏒ-ᎤᎵᏍᏕᎸᏗ, ᏥᎵᎱ, "[[Kneading (cats)|ᏧᏠᎯᏍᏗ]]", ᎠᎴ ᎾᏍᎩᎾᎢ ᎤᏤᎵᏛ ᏫᏓᏲᎯᏍᏗ ᎾᎿ ᏩᏂᎨᎢ ᎦᏚᎢ (bedspreads, ᎤᎭᎨᏛ ᏯᏖᏃ ᏗᏰᏍᏛᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.). ᎯᎠ ᎠᎷᏚᎧᏘ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎾᏍᎬᏘ ᏗᏙᎳᎩ ᏓᎧᏁᎲ ᎭᏫᎾᏗᏢ ᏯᏖᏃ ᎠᏰᏍᏛᏗ ᎠᎴ ᎤᎭᎨᏛ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᏂᎬᏂᏏᏍᎬ ᎠᏥᏐᏅᏅ ᎢᏳᏃ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᏰᎵ ᏄᎵᏂᎬᎬᎾ ᎠᏎᏊᎢ ᎤᏩᏌᏊ.
 
 ᎤᎪᏗᏗ ᏪᏌ ᎤᎭ 4 ᎠᏍᏆᏂᎪᏙᏗ ᎾᎾᎢ ᎯᎠ ᎣᏂᏗᏢ ᎠᎴ 5 ᎾᎾᎢ ᎤᎾᏤᎵ ᎢᎬᏱᏗᏢ ᎤᏩᏱ. ᎠᎴ ᎢᎬᏂᏏᏍᎩ ᏗᎦᎶᏄᎮᏍᎩ gene ᏪᏌ ᎠᎴ ᎠᏞᏴᏍᏙᏗ [[polydactyly]], ᎠᎴ ᎢᎦᏛ ᎤᎭ 6 ᎠᎴ 7 ᎧᎾᏌᏛ. ᎯᎠ 5th ᎢᎬᏱᏗᏢ ᎠᎩᏍᎬᎢ, ᎯᎠ ᎤᏚᏂᎯᏯᏍᏓ, ᎨᏒᎢ ᎾᎿ ᎤᏣᏘ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎾᎿ ᎦᏙᎬ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎯᎠ ᏐᎢ ᏕᎦᏰᏌᏛ. ᎾᎯᏳᎢ ᎢᏧᎳᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ, ᎾᎿᎢ ᎤᏁᎵᏒᎯ ᎾᏍᏋ 6th ᎦᏰᏌᏛ, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ.
 ᎪᎯ ᎤᏤᎵᏛ ᏄᏍᏛ ᏗᎧᏃᏗ ᎯᎠ ᎢᎬᏱᏗᏢ ᎤᏩᏱ, ᎾᎿ ᎯᎠ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎵᏰᏑᏜᏗᏍᏗ, ᎨᏒᎢ ᎯᎠ [[carpal pad|carpal ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎾᎿ ᎯᎠ ᎤᏩᏱ ᎡᏆ ᏪᏌ ᎠᎴ ᎠᏂᎩᏟ. ᎾᏍᎩ ᎤᎭ Ꮭ ᎤᏯᎾᏛᏁᏗ ᎭᏫᎾᏗᏢ ᏄᎶᏒᏍᏛᎾ ᎠᎢᏒᎢ ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎾᏍᏋ anti-skidding ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᎯᏳᎨᏒ ᏓᎵᏔᏕᎬ. ᎢᏳᏃ ᎡᏙᎠ, ᎯᎠ 5th ᎠᎩᏍᎬᎢ ᎾᎾᎢ ᎯᎠ ᎣᏂᏗᏢ ᏗᏂᏅᏍᎨᏂ, ᏓᎾᏓᏛᎩᏍᎬ ᎬᏙᏗ ᎯᎠ ᎡᏆ ᎧᎾᏌᏛ, ᎨᏒᎢ ᎤᏯᏅᎲ ᎯᎠ ᎤᎯᏌᏛ-ᎠᎩᏍᎬᎢ.
@@ -104,14 +104,14 @@
 
 ==== ᎠᎪᏩᏛᏗ ====
 [[File:Green-eyed cat.jpg|thumb|ᎯᎠ tapetum lucidum ᎪᎱᏍᏗ ᎨᏒ ᎢᏤ ᎢᏳᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎾᏕᎶᏆᏍᎩ   ᏪᏌ.]]
-ᎠᎦᏛᏗ ᎠᎾᏓᏎᎮ Ꮎ ᏪᏌ ᎤᏤᎵ ᎠᎪᏩᏛᏗ ᎨᏒᎢ ᏄᎬᏫᏳᏌᏕᎩ [[night vision|ᎾᎾᎢ ᏒᏃᏱ]] ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏂᏴᏫ, ᎠᎴ ᎡᎳᏗᏢ ᎦᏙᎩ ᎭᏫᎾᏗᏢ ᎡᎦᎫᏘ. ᏪᏌ, ᎾᏍᎩᏯᎢ ᎠᏂᎩᏟ ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᎤᎭ ''[[tapetum lucidum]]'' Ꮎ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎤᏤᎵᏛ ᎠᏨᏍᏛ ᎯᎠ ᎠᎪᏩᏛᏗ. ᎾᎯᏳᎢ ᎪᎯ ᎧᏁᏉᎩ ᎯᎠ ᏅᏏᎾᏒ ᎠᎪᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎡᎳᏗ ᎠᏨᏍᏛ, ᎾᏍᎩ ᎦᎾᏄᎪᎦ ᎠᎦᏲᎳᏅ ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ [[visual acuity|ᎠᎪᏩᏛᏗ ᎪᏍᏓᏱ]], ᎯᎠ ᎢᏴ ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ ᎯᎳᎪ ᎢᏳ ᎠᏨᏍᏛ ᎨᏒᎢ ᎬᏩᎶᏒᏍᏗ. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏧᎸᏌᏓ ᎠᏨᏍᏛ, ᎯᎠ ᎠᎽᏰᎵ-ᎾᏍᎩᏯᎢ [[Iris (anatomy)|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]] ᏓᏍᏚᎲᏍᎦ ᎤᏙᎯᏳ ayatoli ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[eye|agatoli]], ᎠᎦᏲᎳᏗᏍᎩ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᏨᏍᏛ ᎾᎿ ᎯᎠ ᎤᏁᏟᏴᏌᏘ [[retina|ᎠᎪᏩᏛᏗ]], ᎠᎴ ᎪᏢᎯᏏᏍᎬ [[depth of field|ᎤᏒᏙᏂ  ᏠᎨᏏ]]. ᎯᎠ tapetum ᎠᎴ ᏐᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏓᏁᏗ ᎯᎠ ᏪᏌ ᏭᏍᏗᎬᎢ ᎠᏨᏍᏛ ᎪᎷᏩᏛᏗ ᎠᏓᎴᏂᏍᎬ ᎦᎸᎳᏗᏢ ᎦᎵᏉᎩ itsuwakodi ᎡᎳᏗᎨ ᎬᎾᏬᏍᎬ Ꮎ ᎠᏂᏴᏫ. ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ ᏪᏌ' digatoli ᎭᏫᎾᏗᏢ [[Flash (photography)|ᎤᏥᏍᏓᎷᎩᏍᎬ]] [[photograph|ᏣᎦᏟᎶᏍᏔᏅ]]ᎨᏒᎢ ᎡᏆᏯ ᎤᏍᏆᎸᎲ ᎯᎠ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎯᎠ ᎤᏥᏍᏓᎷᎩᏍᎬ ᎬᏙᏗ ᎯᎠ [[Tapetum lucidum|tapetum]].
+ᎠᎦᏛᏗ ᎠᎾᏓᏎᎮ Ꮎ ᏪᏌ ᎤᏤᎵ ᎠᎪᏩᏛᏗ ᎨᏒᎢ ᏄᎬᏫᏳᏌᏕᎩ [[night vision|ᎾᎾᎢ ᏒᏃᏱ]] ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏂᏴᏫ, ᎠᎴ ᎡᎳᏗᏢ ᎦᏙᎩ ᎭᏫᎾᏗᏢ ᎡᎦᎫᏘ. ᏪᏌ, ᎾᏍᎩᏯᎢ ᎠᏂᎩᏟ ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᎤᎭ ''[[tapetum lucidum]]'' Ꮎ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎤᏤᎵᏛ ᎠᏨᏍᏛ ᎯᎠ ᎠᎪᏩᏛᏗ. ᎾᎯᏳᎢ ᎪᎯ ᎧᏁᏉᎩ ᎯᎠ ᏅᏏᎾᏒ ᎠᎪᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎡᎳᏗ ᎠᏨᏍᏛ, ᎾᏍᎩ ᎦᎾᏄᎪᎦ ᎠᎦᏲᎳᏅ ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ [[visual acuity|ᎠᎪᏩᏛᏗ ᎪᏍᏓᏱ]], ᎯᎠ ᎢᏴ ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ ᎯᎳᎪ ᎢᏳ ᎠᏨᏍᏛ ᎨᏒᎢ ᎬᏩᎶᏒᏍᏗ. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏧᎸᏌᏓ ᎠᏨᏍᏛ, ᎯᎠ ᎠᎽᏰᎵ-ᎾᏍᎩᏯᎢ [[Iris (anatomy)|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]] ᏓᏍᏚᎲᏍᎦ ᎤᏙᎯᏳ ᎠᏯᎣᎵ ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[eye|agatoli]], ᎠᎦᏲᎳᏗᏍᎩ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᏨᏍᏛ ᎾᎿ ᎯᎠ ᎤᏁᏟᏴᏌᏘ [[retina|ᎠᎪᏩᏛᏗ]], ᎠᎴ ᎪᏢᎯᏏᏍᎬ [[depth of field|ᎤᏒᏙᏂ  ᏠᎨᏏ]]. ᎯᎠ tapetum ᎠᎴ ᏐᎢ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏓᏁᏗ ᎯᎠ ᏪᏌ ᏭᏍᏗᎬᎢ ᎠᏨᏍᏛ ᎪᎷᏩᏛᏗ ᎠᏓᎴᏂᏍᎬ ᎦᎸᎳᏗᏢ ᎦᎵᏉᎩ ᎢᏧᏩᎣᏗ ᎡᎳᏗᎨ ᎬᎾᏬᏍᎬ Ꮎ ᎠᏂᏴᏫ. ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ ᏪᏌ' ᏗᎦtᎣᎵ ᎭᏫᎾᏗᏢ [[Flash (photography)|ᎤᏥᏍᏓᎷᎩᏍᎬ]] [[photograph|ᏣᎦᏟᎶᏍᏔᏅ]]ᎨᏒᎢ ᎡᏆᏯ ᎤᏍᏆᎸᎲ ᎯᎠ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎯᎠ ᎤᏥᏍᏓᎷᎩᏍᎬ ᎬᏙᏗ ᎯᎠ [[Tapetum lucidum|tapetum]].
 
-ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏪᏌ ᎤᎭ ᎠᎪᏩᏛᏗ [[field of view|ᏠᎨᏏ  ᏗᎧᏃᏗᎢ]] ᎠᎦᏎᏍᏔᏅ ᎾᎾᎢ 200°, ᎢᏚᏳᎪᏛ 180° ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎬᏙᏗ ᏗᏓᎨᏗ ᏠᎨᏏ (ᎫᏢᎥᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏍᎩᏯᎢ ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ agatoli) narrower ᎬᎾᏬᏍᎬ Ꮎ ᎠᏂᏴᏫ. ᏥᏄᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ predators, ᎤᎾᏤᎵ digatoli ᎤᎧᏛ ᎢᎬᏱᏗᏢ ᎠᏂᎩᏍᏗ, ᏰᎵ ᎢᏳᏛᏂ [[depth perception|ᎤᏒᏙᏂ ᎥᎦᏔᎲᎢ]] ᎾᎾᎢ ᎯᎠ ᏓᎵᎬᏩᎸᏍᎬ ᏠᎨᏏ ᏗᎧᏃᏗᎢ. ᏠᎨᏏ ᏗᎧᏃᏗᎢ ᎨᏒᎢ ᎡᏆᏯ ᎦᏛᎢ ᎾᏍᎩ ᎯᎠ placement ᎯᎠ digatoli, ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ agatoli ᎤᏤᎵ ᎠᏁᏍᎨᎲ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎯᎠ [[Optic fovea|fovea]] ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎠᏂᏴᏫ ᎪᏍᏓᏯ ᎠᏰᎵ ᎠᎪᏩᏛᏗ, ᏪᏌ ᎤᎭ ᎠᏰᎵ ᏗᏂᏤᎷᎯᏍᎩ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎠᎪᏩᏛᏗ ᏂᎦᏅᎯᏒ. ᏪᏌ ᏰᎵᏇ ᎬᎪᏩᏛᏘᏉ differentiate ᏄᎾᏛᏅ [[color|ᏗᎧᏃᏗ]], ᎾᏍᎩ ᎨᏒᎢ ᎾᎾᎢ ᎠᏍᏚᏗ ᎠᏍᏓᏅᏅ, ᎠᎴ ᏄᏠᏯᏍᏛᎾ appreciable ᎤᏚᏃᎯᏍᏔᏍᎧ.
+ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏪᏌ ᎤᎭ ᎠᎪᏩᏛᏗ [[field of view|ᏠᎨᏏ  ᏗᎧᏃᏗᎢ]] ᎠᎦᏎᏍᏔᏅ ᎾᎾᎢ 200°, ᎢᏚᏳᎪᏛ 180° ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ, ᎬᏙᏗ ᏗᏓᎨᏗ ᏠᎨᏏ (ᎫᏢᎥᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏍᎩᏯᎢ ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ agatoli) narrower ᎬᎾᏬᏍᎬ Ꮎ ᎠᏂᏴᏫ. ᏥᏄᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ predators, ᎤᎾᏤᎵ ᏗᎦᎣᎵ ᎤᎧᏛ ᎢᎬᏱᏗᏢ ᎠᏂᎩᏍᏗ, ᏰᎵ ᎢᏳᏛᏂ [[depth perception|ᎤᏒᏙᏂ ᎥᎦᏔᎲᎢ]] ᎾᎾᎢ ᎯᎠ ᏓᎵᎬᏩᎸᏍᎬ ᏠᎨᏏ ᏗᎧᏃᏗᎢ. ᏠᎨᏏ ᏗᎧᏃᏗᎢ ᎨᏒᎢ ᎡᏆᏯ ᎦᏛᎢ ᎾᏍᎩ ᎯᎠ placement ᎯᎠ ᏗᎦtᎣᎵ, ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᎠᎦᎣᎵ ᎤᏤᎵ ᎠᏁᏍᎨᎲ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎯᎠ [[Optic fovea|fovea]] ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎠᏂᏴᏫ ᎪᏍᏓᏯ ᎠᏰᎵ ᎠᎪᏩᏛᏗ, ᏪᏌ ᎤᎭ ᎠᏰᎵ ᏗᏂᏤᎷᎯᏍᎩ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎠᎪᏩᏛᏗ ᏂᎦᏅᎯᏒ. ᏪᏌ ᏰᎵᏇ ᎬᎪᏩᏛᏘᏉ differentiate ᏄᎾᏛᏅ [[color|ᏗᎧᏃᏗ]], ᎾᏍᎩ ᎨᏒᎢ ᎾᎾᎢ ᎠᏍᏚᏗ ᎠᏍᏓᏅᏅ, ᎠᎴ ᏄᏠᏯᏍᏛᎾ appreciable ᎤᏚᏃᎯᏍᏔᏍᎧ.
 
 [[File:Two eyes cat.jpg|thumb|left| ᏧᏓᎴᎿᎢ-ᎠᎪᏩᏛᏗ ᎤᏁᎬ ᏪᏌ.]]
 ᏪᏌ ᎤᎭ ᏦᎢᏁ eyelid, ᎯᎠ [[nictitating membrane|nictitating ᏫᏚᏳᎪᏛ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏌᎨᎢ ᎫᏢᏗ Ꮎ ᏓᏍᏚᎲᏍᎦ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏍᏆᎨᏂ ᎠᎴ ᎦᎾᏄᎪᎦ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏪᏌ ᎤᏤᎵ eyelid ᎠᎵᏍᏚᎢᎠ. ᎪᎯ ᏫᏚᏳᎪᏛ ᎠᏍᏓᏩᏛᏍᏗ ᏓᏍᏚᎲᏍᎦ ᎢᏳᏃ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᎤᏢᎩ; ᎾᏍᎩ ᎤᏁᎳᎩ ᎭᏫᎾᏗᏢ ᎦᎸᏍᎩ, ᎣᏍᏛ ᎤᏓᏅᏘ ᏪᏌ ᎪᎯ ᏫᏚᏳᎪᏛ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎬᎪᏩᏛᏗ. ᎢᏳᏃ ᏪᏌ chronically ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᏦᎢᏁ eyelid, ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎠᎩᏒᎯ [[veterinary surgeon|veterinary ᎦᎾᎦᏘ]].
 
-ᏪᏌ ᎤᎭ ᎠᏯᏖᎾ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ agatoli ᏗᎧᏃᏗ, ᎯᎠ ᎤᎪᏗᏗ ᏫᏚᏳᎪᏛ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᎴᏂᏙᎲ ᏓᎶᏂᎨᏍᏙᏗ, ᎢᏤ ᎢᏳᏍᏗ ᎠᎴ ᎠᏓᎶᏂᎨ. ᏌᎪᏂᎨ digatoli ᎠᎴ ᎤᏠᏱᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ Siamese ᎠᏂᏁᏉᎬ, ᎠᎴ ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᏁᎬ ᏪᏌ. ᎢᏳᏃ ᎤᏁᎬ ᏪᏌ ᎤᎭ ᏔᎵ ᏌᎪᏂᎨ digatoli, ᎾᏍᎩ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏧᎵᎡᎾ; ᏱᏂᎬᏛᎾ, ᎠᏓᎶᏂᎨ digatoli ᎤᏠᏱᎭ ᎠᏓᏎᎮᏗ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᎠᏎᏊᎢ ᎠᏛᎩᏍᎬ ᏗᎦᏎᏍᏙᏗ. ᎤᏁᎬ ᏪᏌ ᎤᎲᎢ ᏌᏊ ᏌᎪᏂᎨ ᎠᎴ ᏌᏊ ᏐᎢ-ᎠᏑᏫᏒ agatoli ᎠᎴ ᎤᏯᏅᎲ "ᏧᏓᎴᎿᎢ-ᎠᎪᏩᏛᏗ" ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏧᎵᎡᎾ ᎾᎿ ᎯᎠ ᎤᏠᏱ ᎠᏍᏆᎨᏂ ᏥᏄᏍᏗ ᎯᎠ ᏌᎪᏂᎨ agatoli.<ref>{{cite web|url=http://www.messybeast.com/whitecat.htm|title=White Cats, Eye Colours and Deafness|lastname=Hartwell|firstname=Sarah|accessdate=2006-09-05}}</ref>  ᎪᎯ ᎨᏒᎢ ᎯᎠ ᏄᎵᏍᏔᏅ ᎯᎠ ᏓᎶᏂᎨ ᏗᎦᏣᏄᎶ ᎤᎾᏣ pigmentation ᎠᎵᏌᎳᏗᏍᎬ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ agatoli, ᏥᏄᏍᏗ ᏌᎪᏂᎨ digatoli ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎾᎾᎢ ᎤᏕᏅ ᎤᏓᎷᎸ ᎯᎠ ᎤᏔᎾ pigmentation ᎤᎭ ᎠᏰᎲ ᎤᏝᏅᏓᏕᎲ ᎢᎦᏪᏍᏗ ᎤᏩᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ agatoli().
+ᏪᏌ ᎤᎭ ᎠᏯᏖᎾ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎠᎦᎣᎵ ᏗᎧᏃᏗ, ᎯᎠ ᎤᎪᏗᏗ ᏫᏚᏳᎪᏛ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᎴᏂᏙᎲ ᏓᎶᏂᎨᏍᏙᏗ, ᎢᏤ ᎢᏳᏍᏗ ᎠᎴ ᎠᏓᎶᏂᎨ. ᏌᎪᏂᎨ ᏗᎦᎣᎵ ᎠᎴ ᎤᏠᏱᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ Siamese ᎠᏂᏁᏉᎬ, ᎠᎴ ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᏁᎬ ᏪᏌ. ᎢᏳᏃ ᎤᏁᎬ ᏪᏌ ᎤᎭ ᏔᎵ ᏌᎪᏂᎨ digatoli, ᎾᏍᎩ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏧᎵᎡᎾ; ᏱᏂᎬᏛᎾ, ᎠᏓᎶᏂᎨ ᏗᎦᎣᎵ ᎤᏠᏱᎭ ᎠᏓᏎᎮᏗ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᎠᏎᏊᎢ ᎠᏛᎩᏍᎬ ᏗᎦᏎᏍᏙᏗ. ᎤᏁᎬ ᏪᏌ ᎤᎲᎢ ᏌᏊ ᏌᎪᏂᎨ ᎠᎴ ᏌᏊ ᏐᎢ-ᎠᏑᏫᏒ agatoli ᎠᎴ ᎤᏯᏅᎲ "ᏧᏓᎴᎿᎢ-ᎠᎪᏩᏛᏗ" ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏧᎵᎡᎾ ᎾᎿ ᎯᎠ ᎤᏠᏱ ᎠᏍᏆᎨᏂ ᏥᏄᏍᏗ ᎯᎠ ᏌᎪᏂᎨ ᎠᎦᎣᎵ.<ref>{{cite web|url=http://www.messybeast.com/whitecat.htm|title=White Cats, Eye Colours and Deafness|lastname=Hartwell|firstname=Sarah|accessdate=2006-09-05}}</ref>  ᎪᎯ ᎨᏒᎢ ᎯᎠ ᏄᎵᏍᏔᏅ ᎯᎠ ᏓᎶᏂᎨ ᏗᎦᏣᏄᎶ ᎤᎾᏣ pigmentation ᎠᎵᏌᎳᏗᏍᎬ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ agatoli, ᏥᏄᏍᏗ ᏌᎪᏂᎨ ᏗᎦᎣᎵ ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎾᎾᎢ ᎤᏕᏅ ᎤᏓᎷᎸ ᎯᎠ ᎤᏔᎾ pigmentation ᎤᎭ ᎠᏰᎲ ᎤᏝᏅᏓᏕᎲ ᎢᎦᏪᏍᏗ ᎤᏩᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎦᎣᎵ().
 
 ==== ᎠᏛᎩᏍᎬ ====
 ᎠᏂᏴᏫ ᎠᎴ ᏪᏌ ᎤᎭ ᎤᏠᏱ ᎠᏍᏓᏅᏅ ᎠᏛᎩᏍᎬ ᎾᎿ ᎯᎠ ᎡᎳᏗ ᎤᎵᏍᏛ ᎯᎠ ᏗᎦᏛᏗ, ᎠᎴ ᏪᏌ ᏰᎵᏇ ᎠᏛᎩ ᎤᏣᏘ ᎦᎸᎳᏗᎨᏍᏙᏗ-ᏂᏓᏙᎳᎬᎾ ᏚᏃᏴᎬ, ᎦᎸᎳᏗᏢ 64 [[Hertz|kHz]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ 1.6 ᎠᏟᎶᏍᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᏍᏓᏅᏅ ᏴᏫ, ᎠᎴ ᎢᏧᎳᎭ 1 ᎠᏟᎶᏍᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᏍᏓᏅᏅ ᎩᏟ.<ref>[http://www.lsu.edu/deafness/HearingRange.html Strain, G.M., How Well Do Dogs and Other Animals Hear?]</ref> ᎯᎳᎪ ᎢᏳ ᏍᎨ ᎾᏍᎩᎾᎢ ᎪᎱᏍᏗ, ᏪᏌ ᎤᏤᎵ ᏗᎦᎴᏂ ᏫᎵ ᎠᏕᏲᎲ ᎭᏫᎾᏗᏢ Ꮎ ᎢᏚᏳᎪᏛ; ᏪᏌ ᎤᏤᎵ ᎦᎴᏂ ᎫᏢᏗ ([[pinna]]e) ᏰᎵᏇ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎪᏍᏓᏱ ᎠᏏᏂ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎦᏁᏟᏴᏍᏗ ᎠᎴ ᎠᎷᏚᎧᏘ pinpoint ᎯᎠ ᏗᏓᎴᎲᏍᎬ ᎯᎠ [[sound|ᎤᏃᏴᎬ]]. ᏪᏌ ᏰᎵᏇ ᏗᎫᎪᏗᏍᎩ ᎭᏫᏂᏗᏢ ᏦᎢ ᎢᏯᏏᏔᏗᏍᏗ (7.5&nbsp;cm) ᎯᎠ ᎦᎷᎯᏍᏗ ᎤᏃᏴᎬ ᎠᎴᏂᏙᎲ ᎪᏢᏅᎯ ᏌᏊ ᏑᏟᎶᏛ (ᎾᎥᏂᎨᏍᏙᏗᏇ ᏌᏊ ᎠᏎᎯᎯ) ᎤᏣᏘᎾ - ᎪᎯ ᏰᎵᏇ ᎾᏍᏋ ᎤᎵᏍᎨᏓ ᎾᏍᎩᎾᎢ localizing ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎤᏠᏯᏍᏗ. 
@@ -119,7 +119,7 @@
 [[File:Kot Leni.jpg|thumb|left|200px| ᏪᏌ ᎬᏗᏍᎬᎢ Ꮝ ᎣᏓᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏂᎦᏛᎲᏍᎩ]]
 
 ==== ᎦᏩᏒᎬ ====
-ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᎤᏤᎵ ᎤᏓᏅᏖᏗ ᎦᏩᏒᎬ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᏂᎦᏚ itsuwakodi ᏥᏄᏍᏗ ᎤᎳᏂᎩᏓ ᏥᏄᏍᏗ ᏴᏫ'.<!-- I can't find this reference {{ref|littergarden}}-->  ᏪᏌ ᎤᎭ ᏔᎵ ᎢᏳᏩᎫᏗ ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎦᏩᏒᎬ-ᎤᏁᏟᏴᏌᏘ ᎦᏁᎸ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎦᏴᏐᎵ ᏥᏄᏍᏗ ᏴᏫ ᎿᏛᎦ, ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎤᏅᏌ ᏰᎵᏇ ᎦᏩᏒᎬ ᏧᏓᎴᏅᏓ ᎢᏧᎳ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏧᎳᎭ gayatohvsdi . ᏪᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎦᏩᏒᎬ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏦᏔ ᎤᎾᏤᎵ ᎠᎰᎵ ᎤᏯᏅᎲ ᎯᎠ [[vomeronasal organ|vomeronasal]], ᎠᎴ Jacobson ᎤᏤᎵ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ, ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᏪᏌ ᏗᏙᎳᎩ ᏭᎶᏒᏍᏔᏅ ᎤᏁᏟᏴᏌᏘ ᏫᏂᏚᏳᎪᏛ ᎠᏍᏚᎢᏛ ᎠᏓᏪᎳᎩᏍᎬ, ᎠᏥᎸ, ᎠᎴ ᎦᎴᏴᏍᎬ ᏓᎦᏘᎴᎦ. ᎯᎳᎪ ᎢᏳ ᏪᏌ ᏧᎵᏆᏙᏏᏰᏛ Ꮝ ᎤᎵᏴᏑᎸ, ᎡᎳᏗᎨ Ꮝ ᎠᏂᎭᏳᎨᏂ, ᎠᎴ ᎤᎵᏍᎪᎸᏔᏅ Ꮝ ᎦᏅᎪ ᎦᏛᏗ ᎤᏍᎦᎶᏨ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏍᏚᎢᏍᎬ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎠ vomeronasal. ᎪᎯ ᎨᏒᎢ ᎤᏯᏅᎲ ''ᎠᏍᏚᎢᏍᎬ'', "ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ", ᎠᎴ "flehming". ᎠᏍᏚᎢᏍᎬ ᎨᏒᎢ ᎯᎠ ᎢᏗᎦᏘᎭ ᎯᎠ [[Flehmen response|Flehmen ᎦᏬᎯᎵᏴᏓ]] ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᏯᏛᎿ ᏥᏄᏍᏗ [[dog|ᎩᏟ]], [[horses|ᎠᏂᏐᏈᎵ]] ᎠᎴ [[big cat|ᎡᏆ ᏪᏌ]].
+ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᎤᏤᎵ ᎤᏓᏅᏖᏗ ᎦᏩᏒᎬ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᏂᎦᏚ itsuwakodi ᏥᏄᏍᏗ ᎤᎳᏂᎩᏓ ᏥᏄᏍᏗ ᏴᏫ'.<!-- I can't find this reference {{ref|littergarden}}-->  ᏪᏌ ᎤᎭ ᏔᎵ ᎢᏳᏩᎫᏗ ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎦᏩᏒᎬ-ᎤᏁᏟᏴᏌᏘ ᎦᏁᎸ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎦᏴᏐᎵ ᏥᏄᏍᏗ ᏴᏫ ᎿᏛᎦ, ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎤᏅᏌ ᏰᎵᏇ ᎦᏩᏒᎬ ᏧᏓᎴᏅᏓ ᎢᏧᎳ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏧᎳᎭ ᎦᏯᎣᎲᏍᏗ. ᏪᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎦᏩᏒᎬ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏦᏔ ᎤᎾᏤᎵ ᎠᎰᎵ ᎤᏯᏅᎲ ᎯᎠ [[vomeronasal organ|vomeronasal]], ᎠᎴ Jacobson ᎤᏤᎵ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ, ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᏪᏌ ᏗᏙᎳᎩ ᏭᎶᏒᏍᏔᏅ ᎤᏁᏟᏴᏌᏘ ᏫᏂᏚᏳᎪᏛ ᎠᏍᏚᎢᏛ ᎠᏓᏪᎳᎩᏍᎬ, ᎠᏥᎸ, ᎠᎴ ᎦᎴᏴᏍᎬ ᏓᎦᏘᎴᎦ. ᎯᎳᎪ ᎢᏳ ᏪᏌ ᏧᎵᏆᏙᏏᏰᏛ Ꮝ ᎤᎵᏴᏑᎸ, ᎡᎳᏗᎨ Ꮝ ᎠᏂᎭᏳᎨᏂ, ᎠᎴ ᎤᎵᏍᎪᎸᏔᏅ Ꮝ ᎦᏅᎪ ᎦᏛᏗ ᎤᏍᎦᎶᏨ, ᎾᏍᎩ ᎨᏒᎢ ᎠᏍᏚᎢᏍᎬ ᎯᎠ ᎦᎶᎯᏍᏗ ᎯᎠ vomeronasal. ᎪᎯ ᎨᏒᎢ ᎤᏯᏅᎲ ''ᎠᏍᏚᎢᏍᎬ'', "ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ", ᎠᎴ "flehming". ᎠᏍᏚᎢᏍᎬ ᎨᏒᎢ ᎯᎠ ᎢᏗᎦᏘᎭ ᎯᎠ [[Flehmen response|Flehmen ᎦᏬᎯᎵᏴᏓ]] ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᏯᏛᎿ ᏥᏄᏍᏗ [[dog|ᎩᏟ]], [[horses|ᎠᏂᏐᏈᎵ]] ᎠᎴ [[big cat|ᎡᏆ ᏪᏌ]].
 
 ==== ᎠᏒᎾᏍᏗ ====
 [[File:Whiskers on cat paw.jpg|thumb|right|200px|ᎠᎭᏄᎸᏒ ᏰᎵ ᏧᎸᏌᏓ ᏧᏓᎴᎿᎢ ᎾᎿ ᎯᎠ ᎠᎵᏰᏑᏜᏗᏍᏗ  ᎢᏧᎳᎭ  ᎦᏅᎯᏓ haired ᏪᏌ]]
@@ -128,13 +128,13 @@
 
 ᎠᎭᏄᎸᏒ (ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎤᏯᏅᎲ [[vibrissae]]) ᏰᎵᏇ ᎠᏓᏍᏕᎸᏗ ᎬᏙᏗ [[navigation|ᎠᏂᎩᏍᏗ ᏥᏳ]] ᎠᎴ ᎠᏒᎾᏍᏗᏱ. ᎠᎭᏄᎸᏒ ᎠᎾᏍᎬᏘ ᎪᎷᏩᏛᏗ ᎤᏙᎯᏳ ᎤᏍᏗ ᎤᏦᎠᏎᏗ ᎭᏫᎾᏗᏢ [[wind|ᎤᏃᎴ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ]], enabling ᏪᏌ ᎣᎾᏛ ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨ ᎠᏍᏚᎲᎢ ᏄᏠᏯᏍᏛᎾ ᎤᏙᎯᏳᎯᏯ ᎥᎪᏩᏘᏍᎬ ᎠᏂ. ᎯᎠ ᎦᎸᎳᏗᏢ ᏔᎵ ᏚᏓᏅ ᎠᎭᏄᎸᏒ ᏰᎵᏇ ᎠᏓᏅᏍᏗ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎡᎳᏗᎨ ᏔᎵ ᏚᏓᏅ ᎾᏍᎩᎾᎢ ᎢᏧᎳᎭ ᎤᏟ ᎢᎦᎢ ᏚᏳᎪᏛ ᎠᏟᎶᏍᏗ ᎦᏙᎯ.
 
-ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᏪᏌ ᎠᎾᏍᎬᏘ ᎠᏑᏰᏍᏗ rely ᎾᎿ ᎯᎠ ᎠᎭᏄᎸᏒ ᎭᏫᎾᏗᏢ ᎤᎳᏏᎬᎢ ᎠᏨᏍᏛ ᎭᏢᏃ ᎠᏂᎧᎵ ᏛᏍᏓᏅᏅᏍᎬ ᎯᎠ ᏗᎾᏕᎶᏆᏍᎩ ᏯᏓᎢᏗᏏ ᎠᎦᏲᎳᏅ Ꮝ ᏅᏏᎾᏒ ᎠᏰᎵ ᎾᎿ ᎠᏍᏚᏗ ᏓᎦᏘᎴᎦ. ᎯᎠ ᎠᎭᏄᎸᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᏍᏛᏗ atsinuqowisgv ᎾᎥᏂᎨᏍᏙᏗ ᏥᏄᏍᏗ ᎠᏯᏖᎾ ᏥᏄᏍᏗ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎠᏰᎸ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏗᎫᎪᏗᏍᎩ ᎢᏳᏃ ᎾᏍᎩ ᏰᎵᏇ ᏰᎵ ᎢᎩᏛ ᏗᎬᏩᎶᏒ ᎠᏍᏚᎢᏍᎬ.
+ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᏪᏌ ᎠᎾᏍᎬᏘ ᎠᏑᏰᏍᏗ rely ᎾᎿ ᎯᎠ ᎠᎭᏄᎸᏒ ᎭᏫᎾᏗᏢ ᎤᎳᏏᎬᎢ ᎠᏨᏍᏛ ᎭᏢᏃ ᎠᏂᎧᎵ ᏛᏍᏓᏅᏅᏍᎬ ᎯᎠ ᏗᎾᏕᎶᏆᏍᎩ ᏯᏓᎢᏗᏏ ᎠᎦᏲᎳᏅ Ꮝ ᏅᏏᎾᏒ ᎠᏰᎵ ᎾᎿ ᎠᏍᏚᏗ ᏓᎦᏘᎴᎦ. ᎯᎠ ᎠᎭᏄᎸᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᏍᏛᏗ ᎠᏥᏄᎣᏫᏍᎬ ᎾᎥᏂᎨᏍᏙᏗ ᏥᏄᏍᏗ ᎠᏯᏖᎾ ᏥᏄᏍᏗ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎠᏰᎸ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏗᎫᎪᏗᏍᎩ ᎢᏳᏃ ᎾᏍᎩ ᏰᎵᏇ ᏰᎵ ᎢᎩᏛ ᏗᎬᏩᎶᏒ ᎠᏍᏚᎢᏍᎬ.
 
 ᎠᎭᏄᎸᏒ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᏄᏍᏛ ᎣᏓᏅᏛ. ᎠᎭᏄᎸᏒ ᎪᏍᏓᏱ ᎢᎬᏱᏗᏢ ᎠᏂᎩᏍᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᎠᏍᏆᏂᎪᎯᏍᏗ ᎠᎴ ᎤᎾᎵᎢᏴ, ᎠᎴ ᎦᎾᎬᎢ ᎤᏩᎾᏕᏍᎩ ᎾᎿ ᎯᎠ ᎤᎧᏛ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏪᏌ ᎨᏒᎢ ᎠᎴᏂᏙᎲ ᎤᎾᏓᏟᏌᎲ ᎠᎴ ᏗᎦᏘᎸᏍᏗ.
 
-ᏪᏌ ᎤᎭ ᎬᏩᏚᏫᏛ ᏔᎳᏍᎪᎯ-ᏅᎩ ᎠᏌᎳᏙᏗ ᎠᎭᏄᎸᏒ, ᏔᎵᏚ ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ Ꮝ ᎦᏴᏐᎵ (ᎢᎦᏛ ᏪᏌ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏟ ᎢᎦᎢ). ᎠᎭᏄᎸᏒ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏔᎵ ᎢᏳᏩᎫᏗ ᏥᏄᏍᏗ ᎤᎭᎨᏛ ᏥᏄᏍᏗ ᏧᏣᏔᏊ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎤᎾᏤᎵ ᎠᎲᏏᏓᏍᏗ ᎠᎴ ᎠᏫᏒᏗ ᏦᎢ itsuwakodi deeper ᎬᎾᏬᏍᎬ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏪᏌ ᎤᏤᎵ ᏂᎦᏛ. ᏂᎬᎢ ᎠᏓᏁᎸᎩ ᎬᏙᏗ ᎣᏓᎾᏛ ᎠᎵᏍᏆᏗᏍᎬ, ᎠᎭᏄᎸᏒ ᎠᏓᏁᏗ ᏪᏌ extraordinarily ᎤᏎᎸᎩ ᎢᎬᏁᏗ ᎠᏓᏃᎯᏎᏗ ᎬᏩᏚᏫᏛ ᎤᏃᎴ ᎠᏓᏅᏏᏙᎠ, ᎤᏃᎴ ᎤᎳᏂᎬᎬ ᎠᎴ ᏂᎦᎥᏇ ᎤᏅᏌ ᎠᏒᎾᏍᏗ.
+ᏪᏌ ᎤᎭ ᎬᏩᏚᏫᏛ ᏔᎳᏍᎪᎯ-ᏅᎩ ᎠᏌᎳᏙᏗ ᎠᎭᏄᎸᏒ, ᏔᎵᏚ ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ Ꮝ ᎦᏴᏐᎵ (ᎢᎦᏛ ᏪᏌ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏟ ᎢᎦᎢ). ᎠᎭᏄᎸᏒ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏔᎵ ᎢᏳᏩᎫᏗ ᏥᏄᏍᏗ ᎤᎭᎨᏛ ᏥᏄᏍᏗ ᏧᏣᏔᏊ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎤᎾᏤᎵ ᎠᎲᏏᏓᏍᏗ ᎠᎴ ᎠᏫᏒᏗ ᏦᎢ ᎢᏧᏩᎣᏗ deeper ᎬᎾᏬᏍᎬ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏪᏌ ᎤᏤᎵ ᏂᎦᏛ. ᏂᎬᎢ ᎠᏓᏁᎸᎩ ᎬᏙᏗ ᎣᏓᎾᏛ ᎠᎵᏍᏆᏗᏍᎬ, ᎠᎭᏄᎸᏒ ᎠᏓᏁᏗ ᏪᏌ extraordinarily ᎤᏎᎸᎩ ᎢᎬᏁᏗ ᎠᏓᏃᎯᏎᏗ ᎬᏩᏚᏫᏛ ᎤᏃᎴ ᎠᏓᏅᏏᏙᎠ, ᎤᏃᎴ ᎤᎳᏂᎬᎬ ᎠᎴ ᏂᎦᎥᏇ ᎤᏅᏌ ᎠᏒᎾᏍᏗ.
 
-ᎯᎠ ᎠᏏᎾᏍᏛ ᎧᏁᏨ ᎾᏍᎩᎾᎢ ᎠᎭᏄᎸᏒ ᎨᏒᎢ vibrissae, ᏚᏙᎥ Ꮎ ᎠᏂᏁᎢᏍᏗ ᎤᎾᏤᎵ ᎤᏬᏚ ᎦᎸᏈᏍᏗ sensitivity ᏧᏩᏚᏃᎯ ᎭᏫᎾᏗᏢ ᎤᏃᎴ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ. ᏥᏄᏍᏗ ᎤᏃᎴ swirls ᎠᎴ eddies yvwatuwidv ᏓᎦᏘᎴᎦ, ᎠᎭᏄᎸᏒ ᏧᏩᏚᏃᎯ ᎦᏟᏐᏗᎩ. ᏪᏌ ᎬᏙᏗ ᎨᏥᏃᎯᏎᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏧᏩᏚᏃᎯ ᎤᏓᏅᏖᏗ ᎯᎠ ᎡᏙᎲᎩ, ᏂᎬᎢ, ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏲᎠᏍᏗᏍᎩ ᏄᏠᏯᏍᏛᎾ ᎥᎪᏩᏘᏍᎬ ᎠᎴ ᎠᏒᏂᎲᎢ ᎠᏂ. ᎠᎭᏄᎸᏒ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎣᏍᏛ ᎠᏂᏃᎯᎵᏙᎲ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ. ᏪᏌ ᎾᏍᎩ ᎤᏤᎵ ᎠᎭᏄᎸᏒ ᎤᎭ ᏭᏪᏙᎢ ᎠᏲᏍᏔᏅᎯ ᎠᎾᏍᎬᏘ ᎠᏓᏍᎧᎷᏥ ᎯᎠ ᎦᎵᏓᏍᏔᏅᎯ ᎢᎦᏛ ᏥᏍᏕᏥ ᎾᏍᎩ ᎤᏤᎵ ᏗᎦᏘᎸᏍᏗ, ᎠᎾᏓᏎᎮᎲᎢ Ꮎ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎾᏍᎩ ᎯᎠ ᏩᏂᎨ ᎠᏛᎯᏍᏙᏗ ᎠᏓᏁᎳᏁᏗ ᏪᏌ ᎬᏙᏗ ᏭᎵᏍᎨᏗᏴᎢ ᎠᏓᏃᎯᏎᏗ ᎬᏩᏚᏫᏛ ᎯᎠ ᎤᏙᏢᏒᎢ ᎠᎴ ᎠᎵᏂᎬᏁᏗᎢ Ꮝ ᎠᎵᏍᏓᏴᏗ - ᎤᏍᏆᏂᎪᏗ, ᎠᎭᏄᎸᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᏪᏌ ᎪᎷᏩᏛᏗ ᎦᏩᏒᎬ.
+ᎯᎠ ᎠᏏᎾᏍᏛ ᎧᏁᏨ ᎾᏍᎩᎾᎢ ᎠᎭᏄᎸᏒ ᎨᏒᎢ vibrissae, ᏚᏙᎥ Ꮎ ᎠᏂᏁᎢᏍᏗ ᎤᎾᏤᎵ ᎤᏬᏚ ᎦᎸᏈᏍᏗ sensitivity ᏧᏩᏚᏃᎯ ᎭᏫᎾᏗᏢ ᎤᏃᎴ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ. ᏥᏄᏍᏗ ᎤᏃᎴ swirls ᎠᎴ eddies ᏴᏩᎤᏫᏛ ᏓᎦᏘᎴᎦ, ᎠᎭᏄᎸᏒ ᏧᏩᏚᏃᎯ ᎦᏟᏐᏗᎩ. ᏪᏌ ᎬᏙᏗ ᎨᏥᏃᎯᏎᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏧᏩᏚᏃᎯ ᎤᏓᏅᏖᏗ ᎯᎠ ᎡᏙᎲᎩ, ᏂᎬᎢ, ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏲᎠᏍᏗᏍᎩ ᏄᏠᏯᏍᏛᎾ ᎥᎪᏩᏘᏍᎬ ᎠᎴ ᎠᏒᏂᎲᎢ ᎠᏂ. ᎠᎭᏄᎸᏒ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎣᏍᏛ ᎠᏂᏃᎯᎵᏙᎲ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ. ᏪᏌ ᎾᏍᎩ ᎤᏤᎵ ᎠᎭᏄᎸᏒ ᎤᎭ ᏭᏪᏙᎢ ᎠᏲᏍᏔᏅᎯ ᎠᎾᏍᎬᏘ ᎠᏓᏍᎧᎷᏥ ᎯᎠ ᎦᎵᏓᏍᏔᏅᎯ ᎢᎦᏛ ᏥᏍᏕᏥ ᎾᏍᎩ ᎤᏤᎵ ᏗᎦᏘᎸᏍᏗ, ᎠᎾᏓᏎᎮᎲᎢ Ꮎ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎾᏍᎩ ᎯᎠ ᏩᏂᎨ ᎠᏛᎯᏍᏙᏗ ᎠᏓᏁᎳᏁᏗ ᏪᏌ ᎬᏙᏗ ᏭᎵᏍᎨᏗᏴᎢ ᎠᏓᏃᎯᏎᏗ ᎬᏩᏚᏫᏛ ᎯᎠ ᎤᏙᏢᏒᎢ ᎠᎴ ᎠᎵᏂᎬᏁᏗᎢ Ꮝ ᎠᎵᏍᏓᏴᏗ - ᎤᏍᏆᏂᎪᏗ, ᎠᎭᏄᎸᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᏪᏌ ᎪᎷᏩᏛᏗ ᎦᏩᏒᎬ.
 
 ᎠᎭᏄᎸᏒ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ udeyatodi ᏪᏌ, ᎾᏍᎩ ᎨᏒᎢ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏪᏌ tries ᎠᎩᏍᏗ ᎠᎵᏍᏓᏴᏗ atsinuqowisgv ᎠᏟᏍᏙᏗ. ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎠᎭᏄᎸᏒ ᎠᏒᏂᎲᎢ ᎯᎠ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᏟᏍᏙᏗ ᏫᏓᏲᎯᏍᏗ ᎤᏦᎠᏎᏗ ᎠᏒᎾᏍᏗᏱ Ꮝ ᎤᏅᏥᏓ, ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᎠᏍᏓᏯ ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎬᎵᏱᎵᏒ ᎠᎵᏍᏓᏴᎲᏍᎬ.
 
@@ -152,12 +152,12 @@
 [[File:Cat eating mouse.jpg|thumb|right|220px| ᏪᏌ ᎠᎵᏍᏓᏴᎲᏍᎬ  [[mouse|ᏥᏍᏕᏥ]] ᎾᏍᎩ ᎦᏂᏴᏛ]]
 ᎦᏃᏢᏥᏙᎯ ᏂᎬᎢ, ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᎠᎴ ᎤᏙᎯᏳ ᎢᏳᎵᏍᏙᏗᏱ predators. ᎤᏅᏌ ᎠᏓᎭᎷᏗ ᎠᎴ ᎤᎵᏍᏓ ᎠᏍᏆᏗᏍᏗ vertebrate [[Predation|ᎠᎵᏍᏓᏴᏗ]] ᎬᏗᏍᎬᎢ ᎾᏛᏁᎲ ᎤᏠᏱ ᎾᏍᎩ [[leopard|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]]ᎠᎴ [[tiger|ᏢᏓᏥ]]ᎾᎥᎢ pouncing; ᎤᏅᏌ ᎾᎯᏳᎢ ᏩᎯᏗ ᎠᏓᎯᏍᏗ ᎠᎩᎳᎨᏂ ᎠᏓᏍᎧᎷᏥ ᎬᏙᏗ ᎤᎾᏤᎵ ᎦᏅᎯᏓ [[canine tooth|ᎩᏟ ᎢᏳᏍᏗ ᏕᎦᏅᏙᎬ]] Ꮎ ᎠᎽᏰᎵ ᎯᎠ ᎠᏥᏐᏅᏅ ᎤᏤᎵ [[spinal cord|ᎠᏰᎵ ᎤᏂᏆᏖᎾ ᎠᏍᏗ]], ᎠᎴ ᎠᏓᎯᏍᏗ ᎾᏍᎩ ᎾᎥᎢ ᎤᏦᎠᏎᏗ ᎯᎠ ᎠᎲᏣᏬᎳᏛ. ᎯᎠ ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᏰᎵᏇ ᎦᏃᎭᎵᏓᏍᏗ ᎠᎴ ᎠᎩᏍᏗ ᎬᏩᏚᏫᏛ ᏌᏊ ᎠᎦᏴᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]—many [[big cat|ᎡᏆ ᏪᏌ]]ᏫᎵ ᎠᎩᏍᏗ ᎦᏲᎳᎨᎢᏍᏗ ᎬᎾᏬᏍᎬ 100. ᎾᏍᎩ ᎤᏁᎳᎩ, ᎠᎵᏍᎪᎸᏔᏅᎯ, ᎡᏆ ᏪᏌ ᏰᎵᏇ ᎠᏓᎯᏍᏗ ᎤᎪᏗᏗ ᎾᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ, ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᎸᎲ ᎯᎠ ᏗᎦᏃᏢᎩ ᎡᎳᏗ nutritional ᎣᏍᏛ ᎤᏓᏅᏘ Ꮎ ᎠᏂᎦᏲᎵ ᎡᎿᎢ ᎡᎥ ᎠᏓᏁᎳᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏁᎸᏙᏗ. ᏓᎦᏘᎴᎬ ᎨᏒᎢ ᎯᎠ [[leopard|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]], ᎦᏙ ᎤᏍᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎦᏃᎭᎵᏓᏍᏗ ᏥᏍᏚ ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᎠᏂᎦᏲᎵ ᎡᎿᎢ ᎡᎥ.
 
-ᎢᏧᎳᎭ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎨᎶᎸᎯ ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᏫᎵ ᎦᏃᎭᎵᏓᏍᏗ ᎠᎴ ᎠᏓᎯᏍᏗ ᎯᎸᏍᎩ ᏥᏍᏆ, ᏥᏍᏕᏥ, ᏥᏍᏕᏥ ᎠᎴ ᏐᎢ ᎤᏍᏗ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ. ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎡᏙᎠ ᏯᏛᎿ trophies ᎤᎾᏤᎵ ᎤᏤᎵᎢ. ᎯᎠ motivation ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᏂᎦᏛ ᏧᎸᏌᏓ, ᎠᎴ ᎤᎾᎵᎢᏴ ᎠᏚᏓᎸᏙ ᎾᏛᏁᎲᎢ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᏯᏛᎿ ᎠᎵᏖᎸᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏰᎵᏊ Ꮎ ᏪᏌ ᎭᏫᎾᏗᏢ ᎪᎯ ᏄᏍᏗᏓᏅ utugi gvdi ᎾᏍᏋ ᎪᎯᎤᏔᏅ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎾᏓᏁᎲ ᎯᎠ ᎤᎾᏓᏟᏌᎲ. ᎢᎦᏛ theories ᎧᏁᎢᏍᏙᏗ Ꮎ ᏪᏌ ᎠᎪᏩᏛᏗ ᎤᎾᏤᎵ ᎤᎾᏤᎵᎢ ᎤᏂᎩᏒ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ itsuwakodi ᎯᎠ ᎢᎦ ᎠᎴ ᎢᏰᎵᏍᏗ ᎤᏅᏌ ᎠᎴ atsinuqowisgv ᎠᏂᏃᎯᎵᏙᎲ, ᏥᏄᏍᏗ ᎤᏅᏌ ᏂᎪᎯᎸᎢ ᎤᎭ ᎡᎵᏉ ᎠᎵᏍᏓᏴᏗ ᏰᎵ ᎠᏩᏛᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᏪᏌ ᎠᏓᏁᎲᎢ Ꮝ ᎤᏤᎵᎢ ᎬᏙᏗ ᎤᏲᎱᏒ gantlai ᏁᎵᏍᎬᎢ ᎾᏍᎩ ᎤᏤᎵ 'ᎠᎵᏍᏕᎵᎭ atsinuqowisgv' ᎾᎥᎢ ᎠᏲᎯᎲ ᎣᏪᏅᏒ ᎯᎠ ᎠᏓᎯᏍᏗ.{{fact}}
+ᎢᏧᎳᎭ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎨᎶᎸᎯ ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᏫᎵ ᎦᏃᎭᎵᏓᏍᏗ ᎠᎴ ᎠᏓᎯᏍᏗ ᎯᎸᏍᎩ ᏥᏍᏆ, ᏥᏍᏕᏥ, ᏥᏍᏕᏥ ᎠᎴ ᏐᎢ ᎤᏍᏗ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ. ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᎡᏙᎠ ᏯᏛᎿ trophies ᎤᎾᏤᎵ ᎤᏤᎵᎢ. ᎯᎠ motivation ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᏂᎦᏛ ᏧᎸᏌᏓ, ᎠᎴ ᎤᎾᎵᎢᏴ ᎠᏚᏓᎸᏙ ᎾᏛᏁᎲᎢ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᏯᏛᎿ ᎠᎵᏖᎸᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏰᎵᏊ Ꮎ ᏪᏌ ᎭᏫᎾᏗᏢ ᎪᎯ ᏄᏍᏗᏓᏅ ᎤᎤᎩ ᎬᏗ ᎾᏍᏋ ᎪᎯᎤᏔᏅ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎾᏓᏁᎲ ᎯᎠ ᎤᎾᏓᏟᏌᎲ. ᎢᎦᏛ theories ᎧᏁᎢᏍᏙᏗ Ꮎ ᏪᏌ ᎠᎪᏩᏛᏗ ᎤᎾᏤᎵ ᎤᎾᏤᎵᎢ ᎤᏂᎩᏒ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᎢᏧᏩᎣᏗ ᎯᎠ ᎢᎦ ᎠᎴ ᎢᏰᎵᏍᏗ ᎤᏅᏌ ᎠᎴ ᎠᏥᏄᎣᏫᏍᎬ ᎠᏂᏃᎯᎵᏙᎲ, ᏥᏄᏍᏗ ᎤᏅᏌ ᏂᎪᎯᎸᎢ ᎤᎭ ᎡᎵᏉ ᎠᎵᏍᏓᏴᏗ ᏰᎵ ᎠᏩᏛᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᏪᏌ ᎠᏓᏁᎲᎢ Ꮝ ᎤᏤᎵᎢ ᎬᏙᏗ ᎤᏲᎱᏒ ᎦᏝᎢ ᏁᎵᏍᎬᎢ ᎾᏍᎩ ᎤᏤᎵ 'ᎠᎵᏍᏕᎵᎭ ᎠᏥᏄᎣᏫᏍᎬ' ᎾᎥᎢ ᎠᏲᎯᎲ ᎣᏪᏅᏒ ᎯᎠ ᎠᏓᎯᏍᏗ.{{fact}}
 
 ᎤᏍᏆᎸᎲ ᎤᎾᏤᎵ ᎠᏂᏃᎯᎵᏙᎲ behaviour, ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ feral ᏪᏌ ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᎠᏍᎩᎾᏗᏍᏗ. ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎤᎭ ᎢᎦᎢ ᎨᏒᎩ ᏪᏌ ᏓᏍᏆᎶᏗ ᎠᎴ ᎾᏍᏋ ᎠᏍᏆᏂᎪᏔᏅ ᎭᏫᎾᏗᏢ ᏰᎵ ᏂᎦᏛ, ᏥᏄᏍᏗ ᎤᏅᏌ ᏰᎵᏇ ᎾᏍᏋ ᎦᏂᏰᎩ ᎾᎿ ᎢᏴ ᎦᏂᏰᎩ ᏥᏍᏆ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᏧᏓᎴᏅᏓ municipalities ᎭᏫᎾᏗᏢ Australia ᎤᎭ enacted ᏯᏛᎿ ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ localities, ᎤᎾᏤᎵᎢ ᏰᎵ ᎢᎩᏛ ᎤᎾᏤᎵ ᏪᏌ ᎬᏙᏗ ᎤᎭᎸᏂ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᎠᎵᏍᏓᏴᏗ Ꮝ ᎤᎾᏄᎪᎢᏍᏗ. ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎤᎭᎸᏂ ᎤᎭ ᎯᎠ unwanted ᎢᏳᎵᏍᏙᏗ "ᎠᎨᏲᎲᏍᎬ" ᎯᎠ ᏪᏌ ᎾᏍᏋ ᎢᏧᎳᎭ stealthier ᏗᎯ.{{fact}}
 
 [[File:Cat_yawning.jpg|thumb|right|220px| ᏪᏌ [[yawn|ᎤᎭᎶᎨᏍᎬ]]ᎪᎯᏳᏙᏗ, ᎠᎾᏓᏎᎮᎲᎢ ᎨᎦᏓᏅᏖᏗ [[canine tooth|ᎩᏟ ᎢᏳᏍᏗ ᏕᎦᏅᏙᎬ]]]] 
-ᏪᏌ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏗ specialized ᏕᎦᏅᏙᎬ ᎠᎴ digestive ᎧᏃᎮᎸᏍᎩ ᏗᎾᏙᎳᎩ ᎯᎠ ᎠᏓᏁᎳᏅᎯ ᎭᏫᏯ. ᎯᎠ premolar ᎠᎴ ᎢᎬᏱ ᏂᎯ ᎢᏧᎳ ᎪᏪᎶᏗ ᎯᎠ carnassial ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᎰᎵ, ᎦᏙ ᎤᏍᏗ ᎠᏏᎾᏍᏛ ᎤᏯᎾᏛᏁᏗ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏯ ᎾᏍᎩᏯᎢ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᏗᎳᏍᏙᏯᏗ. ᎾᎯᏳᎢ ᎪᎯ ᎨᏒᎢ ᎡᏙᎠ ᎭᏫᎾᏗᏢ [[Canidae|ᎩᏟ ᎢᏳᏍᏗ]], ᎾᏍᎩ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ gantlai. ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎦᏅᎪ ᎤᎭ ᎪᏍᏓᏯ ᎪᏍᏓᏱ, ᎠᎴ [[papillae]], ᎤᎵᏍᎨᏓ ᎾᏍᎩᎾᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎴ ripping ᎤᏇᏓᎵ ᏂᏛᎴᏅᏓ ᎤᎵᏬᏨᎯ. ᎾᏍᎩ ᎯᎠ papillae ᎠᎴ ᎤᏍᏗ ᎠᏏᏁᎩ-ᎠᏰᎵ ᏑᏗ Ꮎ ᎢᎦᎢ ᎨᏒ [[keratin]] ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎠᏍᎦᏯ ᏣᎦᏨᏍᏗᏍᎩ. ᎫᏄᏡᏂ ᏪᏌ ᎠᎩᏍᏗ ᏗᎦᏃᏢᎩ ᎤᏍᏗ ᎢᏴ ᎠᏂᏙᎾᎥ ᎢᏳᏍᏗ ᏯᏛᎿ. ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏣᏔᏊ, ᏱᏂᎬᏛᎾ, ᎾᏍᎩᎾᎢ ᏪᏌ ᎢᏳᏓᎵᎭᏊ ᎠᎧᎵᏏᏌᏅᎯ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ ᎬᏙᏗ ᎤᏍᏗ ᎢᎦᎢ ᎨᏒ ᎧᏁᏍᎦ ᎠᎴ ᏐᎢ ᎦᎪᏘ ᎢᏳᏍᏗ ᏯᏛᎿ ᎠᎵᏍᏕᎸᏗ ᎤᎾᏤᎵ digestive ᎧᏃᎮᎸᏍᎩ. ᎠᎦᏎᏍᏙᏗ [[bear|ᎠᎵᏐᏆᎸᏗ]]ᎠᎴ ᎠᏂᎩᏟ ᏱᏓᏟᎶᏍᏔᏅ ᎠᎧᎵᏏᏌᏅᎯ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎭᏫᏯ ᎬᏙᏗ ᎤᏓᏔᏅ ᎠᎩᏍᏗ, berries, ᎠᎲᏏᏓᏍᏗ, ᎠᎴ ᏩᏚᎵᏏ ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏰᎵᏇ ᎠᎩᏍᏗᏱ ᎠᏂ, ᏪᏌ ᎤᏟ ᎬᏰᎸᏗ ᎨᎳᏍᏙᏗ ᎠᎬᏫᏳᏛ ᎾᎿ ᎭᏫᏯ. ᏂᎦᏛ gantlai, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎡᏆ ᏪᏌ, ᎤᎭ ᎠᏛᎯᏍᏙᏗ ᎠᏰᎵ ᏗᏂᎦᏘᎴᎩ Ꮎ ᎠᎴᏫᏍᏔᏅ ᎠᏂ ᏂᏛᎴᏅᏓ ᏄᏍᏛ ᎠᎩᏍᏗ ᏰᎵ ᎤᎦᎾᏍᏛ <ref>{{cite web | title=PLoS Genetics: Pseudogenization of a Sweet-Receptor Gene Accounts for Cats' Indifference toward Sugar | url=http://genetics.plosjournals.org/perlserv/?request=get-document&doi=10.1371/journal.pgen.0010003 | accessdate=August 8 | accessyear=2005 }}</ref>, ᎦᏙ ᎤᏍᏗ, ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏄᏓᎷᎸᎾ, ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᎾᏤᎵ ᎭᏫᏯ dominated ᎠᎵᏍᏓᏴᎲᏍᎬ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ, ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎤᏙᎯᏳᎯᏯ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᎾᏤᎵ ᏂᎦᎸᏉᏛᎾ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᎴ berries.  ᎭᏫᎾᏗᏢ ᎠᎨᏔᏗᏍᏗ, ᏪᏌ ᏝᏰᎵ ᎠᎴᏂᏓᏍᏗ ᎾᎿ unsupplemented [[vegetarianism|ᎣᏩᏒ]] ᎠᎵᏍᏓᏴᏗ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏝᏰᎵ synthesize ᎯᎸᏍᎩ nutrients ᎤᏅᏌ ᎤᏚᎳᏗ ᎠᎴ Ꮎ ᎠᎴ ᏁᏙᎲᎾ ᎠᎴ ᎢᏳᏓᎵᎭ ᎭᏫᎾᏗᏢ ᎦᎪᏘ ᎠᎵᏍᏓᏴᏗ. ᎪᎯ ᏂᎬᎾᏗᏍᎪ ᎠᎬᏫᏳᏛ [[taurine]], [[vitamin A|vitamin]]  (ᏪᏌ ᏝᏰᎵ ᎤᎧᏛ ᎯᎠ ᎤᏬᏢᏗ-vitamin Ꮎ ᎨᏒᎢ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ digakohidi vitamin ᏗᏙᎳᎩ) ᎠᎴ ᎤᏙᎯᏳ [[fatty acids|ᎦᎵᏦᎯᏛ ᏧᏄᏦᏍᏔ]]. ᎯᎠ ᏅᏙᎲᏅ taurine ᏂᏕᎬᏂᏏᏍᎬ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎠᎪᏩᏛᏗ ᎷᏍᎦᏃᎵ ᎠᏲᎶᎬ, causing agatoli ᏗᎦᏎᏍᏙᏗ ᎠᎴ (ᏭᎵᏱᎶᎸ) ᎪᏢᏒᎢ ᏗᎦᎪᏗ. ᎪᎯ ᏄᏍᏗᏓᏅ ᎨᏒᎢ ᎤᏯᏅᎲ [[central retinal degeneration|ᎠᏰᎵ retinal ᎠᏲᎶᎬ]] (CRD). ᏩᎦ ᎤᏤᎵ ᎤᏅᏗ ᎨᏒᎢ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᏗᏓᎴᎲᏍᎬ taurine ᎠᎴ ᎤᏔᎾ ᏪᏌ ᎠᎴ ᏂᎦᎥᏊ [[lactose intolerant|lactose ᎦᎵᏓᏍᏛ]]. Lactose-ᎠᏎᏊᎢ ᎤᏅᏗ ᎨᏒᎢ ᎠᎧᎵᏬᎯ ᏂᎦᎾᏰᎬᎾ, ᎠᎴ ᏙᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏅᎪᏢᎯᏐᏗᏱ ᎾᏍᎩᎾᎢ ᎭᏫᏯ. ᎪᎯ ᏧᏓᎴᎾᎢ ᎬᏙᏗ ᎫᏄᏡᏂ ᎠᏂᎩᏟ, ᎦᎪ ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴ ᎨᎶᎸᎯ ᏧᏠᎯᏍᏗ ᎭᏫᏯ ᎠᎴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎬᏙᏗ-supplemented ᎣᏩᏒ ᎠᎵᏍᏓᏴᏗ (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ supplementation ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎤᏟ ᎢᏲᏍᏛ ᎾᏍᎩᎾᎢ ᎠᏂᎩᏟ ᎦᏟᏐᏗᎩ). ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎴᏴᏛ-ᏚᏙᎥ [[cat food|ᏪᏌ ᎠᎵᏍᏓᏴᏗ]]ᎠᎴ ᎢᎬᏱᏗᏢ ᎤᏛᏒ ᎤᎦᏔ ᏚᎳᏏᏔᏅᎩ, ᎢᏳᏓᎵᎭ ᎢᎦᎢ ᏕᎨᏒᎢ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᏎᎷ ᎠᎴ diligwu ᎠᎴ supplemented ᎬᏙᏗ ᎭᏫᏯ byproducts ᎠᎴ ᎪᎢ ᎠᎴ vitamins.
+ᏪᏌ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏗ specialized ᏕᎦᏅᏙᎬ ᎠᎴ digestive ᎧᏃᎮᎸᏍᎩ ᏗᎾᏙᎳᎩ ᎯᎠ ᎠᏓᏁᎳᏅᎯ ᎭᏫᏯ. ᎯᎠ premolar ᎠᎴ ᎢᎬᏱ ᏂᎯ ᎢᏧᎳ ᎪᏪᎶᏗ ᎯᎠ carnassial ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎾᎿ ᎠᏂᏏᏴᏫᎭ ᎠᏍᏆᎨᏂ ᎯᎠ ᎠᎰᎵ, ᎦᏙ ᎤᏍᏗ ᎠᏏᎾᏍᏛ ᎤᏯᎾᏛᏁᏗ ᎠᎦᏲᎳᏗᏍᏗ ᎭᏫᏯ ᎾᏍᎩᏯᎢ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᏗᎳᏍᏙᏯᏗ. ᎾᎯᏳᎢ ᎪᎯ ᎨᏒᎢ ᎡᏙᎠ ᎭᏫᎾᏗᏢ [[Canidae|ᎩᏟ ᎢᏳᏍᏗ]], ᎾᏍᎩ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᎤᏙᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ ᎦᏝᎢ. ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎦᏅᎪ ᎤᎭ ᎪᏍᏓᏯ ᎪᏍᏓᏱ, ᎠᎴ [[papillae]], ᎤᎵᏍᎨᏓ ᎾᏍᎩᎾᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᎴ ripping ᎤᏇᏓᎵ ᏂᏛᎴᏅᏓ ᎤᎵᏬᏨᎯ. ᎾᏍᎩ ᎯᎠ papillae ᎠᎴ ᎤᏍᏗ ᎠᏏᏁᎩ-ᎠᏰᎵ ᏑᏗ Ꮎ ᎢᎦᎢ ᎨᏒ [[keratin]] ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎠᏍᎦᏯ ᏣᎦᏨᏍᏗᏍᎩ. ᎫᏄᏡᏂ ᏪᏌ ᎠᎩᏍᏗ ᏗᎦᏃᏢᎩ ᎤᏍᏗ ᎢᏴ ᎠᏂᏙᎾᎥ ᎢᏳᏍᏗ ᏯᏛᎿ. ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏣᏔᏊ, ᏱᏂᎬᏛᎾ, ᎾᏍᎩᎾᎢ ᏪᏌ ᎢᏳᏓᎵᎭᏊ ᎠᎧᎵᏏᏌᏅᎯ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᎵᏍᏓᏴᏗ ᎬᏙᏗ ᎤᏍᏗ ᎢᎦᎢ ᎨᏒ ᎧᏁᏍᎦ ᎠᎴ ᏐᎢ ᎦᎪᏘ ᎢᏳᏍᏗ ᏯᏛᎿ ᎠᎵᏍᏕᎸᏗ ᎤᎾᏤᎵ digestive ᎧᏃᎮᎸᏍᎩ. ᎠᎦᏎᏍᏙᏗ [[bear|ᎠᎵᏐᏆᎸᏗ]]ᎠᎴ ᎠᏂᎩᏟ ᏱᏓᏟᎶᏍᏔᏅ ᎠᎧᎵᏏᏌᏅᎯ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎭᏫᏯ ᎬᏙᏗ ᎤᏓᏔᏅ ᎠᎩᏍᏗ, berries, ᎠᎲᏏᏓᏍᏗ, ᎠᎴ ᏩᏚᎵᏏ ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏰᎵᏇ ᎠᎩᏍᏗᏱ ᎠᏂ, ᏪᏌ ᎤᏟ ᎬᏰᎸᏗ ᎨᎳᏍᏙᏗ ᎠᎬᏫᏳᏛ ᎾᎿ ᎭᏫᏯ. ᏂᎦᏛ gantlai, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ ᎡᏆ ᏪᏌ, ᎤᎭ ᎠᏛᎯᏍᏙᏗ ᎠᏰᎵ ᏗᏂᎦᏘᎴᎩ Ꮎ ᎠᎴᏫᏍᏔᏅ ᎠᏂ ᏂᏛᎴᏅᏓ ᏄᏍᏛ ᎠᎩᏍᏗ ᏰᎵ ᎤᎦᎾᏍᏛ <ref>{{cite web | title=PLoS Genetics: Pseudogenization of a Sweet-Receptor Gene Accounts for Cats' Indifference toward Sugar | url=http://genetics.plosjournals.org/perlserv/?request=get-document&doi=10.1371/journal.pgen.0010003 | accessdate=August 8 | accessyear=2005 }}</ref>, ᎦᏙ ᎤᏍᏗ, ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏄᏓᎷᎸᎾ, ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᎾᏤᎵ ᎭᏫᏯ dominated ᎠᎵᏍᏓᏴᎲᏍᎬ ᎢᏳᎾᏛᏁᎵᏓᏍᏗ, ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎤᏙᎯᏳᎯᏯ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᎾᏤᎵ ᏂᎦᎸᏉᏛᎾ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᎴ berries.  ᎭᏫᎾᏗᏢ ᎠᎨᏔᏗᏍᏗ, ᏪᏌ ᏝᏰᎵ ᎠᎴᏂᏓᏍᏗ ᎾᎿ unsupplemented [[vegetarianism|ᎣᏩᏒ]] ᎠᎵᏍᏓᏴᏗ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏝᏰᎵ synthesize ᎯᎸᏍᎩ nutrients ᎤᏅᏌ ᎤᏚᎳᏗ ᎠᎴ Ꮎ ᎠᎴ ᏁᏙᎲᎾ ᎠᎴ ᎢᏳᏓᎵᎭ ᎭᏫᎾᏗᏢ ᎦᎪᏘ ᎠᎵᏍᏓᏴᏗ. ᎪᎯ ᏂᎬᎾᏗᏍᎪ ᎠᎬᏫᏳᏛ [[taurine]], [[vitamin A|vitamin]]  (ᏪᏌ ᏝᏰᎵ ᎤᎧᏛ ᎯᎠ ᎤᏬᏢᏗ-vitamin Ꮎ ᎨᏒᎢ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗᏢ ᏗᎦᎣᎯᏗ vitamin ᏗᏙᎳᎩ) ᎠᎴ ᎤᏙᎯᏳ [[fatty acids|ᎦᎵᏦᎯᏛ ᏧᏄᏦᏍᏔ]]. ᎯᎠ ᏅᏙᎲᏅ taurine ᏂᏕᎬᏂᏏᏍᎬ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎠᎪᏩᏛᏗ ᎷᏍᎦᏃᎵ ᎠᏲᎶᎬ, causing ᎠᎦᎣᎵ ᏗᎦᏎᏍᏙᏗ ᎠᎴ (ᏭᎵᏱᎶᎸ) ᎪᏢᏒᎢ ᏗᎦᎪᏗ. ᎪᎯ ᏄᏍᏗᏓᏅ ᎨᏒᎢ ᎤᏯᏅᎲ [[central retinal degeneration|ᎠᏰᎵ retinal ᎠᏲᎶᎬ]] (CRD). ᏩᎦ ᎤᏤᎵ ᎤᏅᏗ ᎨᏒᎢ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᏗᏓᎴᎲᏍᎬ taurine ᎠᎴ ᎤᏔᎾ ᏪᏌ ᎠᎴ ᏂᎦᎥᏊ [[lactose intolerant|lactose ᎦᎵᏓᏍᏛ]]. Lactose-ᎠᏎᏊᎢ ᎤᏅᏗ ᎨᏒᎢ ᎠᎧᎵᏬᎯ ᏂᎦᎾᏰᎬᎾ, ᎠᎴ ᏙᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏅᎪᏢᎯᏐᏗᏱ ᎾᏍᎩᎾᎢ ᎭᏫᏯ. ᎪᎯ ᏧᏓᎴᎾᎢ ᎬᏙᏗ ᎫᏄᏡᏂ ᎠᏂᎩᏟ, ᎦᎪ ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴ ᎨᎶᎸᎯ ᏧᏠᎯᏍᏗ ᎭᏫᏯ ᎠᎴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎤᎾᏛᎯᏍᏔᏅ ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎬᏙᏗ-supplemented ᎣᏩᏒ ᎠᎵᏍᏓᏴᏗ (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ supplementation ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎤᏟ ᎢᏲᏍᏛ ᎾᏍᎩᎾᎢ ᎠᏂᎩᏟ ᎦᏟᏐᏗᎩ). ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏂᎪᏗᏗ ᎦᎴᏴᏛ-ᏚᏙᎥ [[cat food|ᏪᏌ ᎠᎵᏍᏓᏴᏗ]]ᎠᎴ ᎢᎬᏱᏗᏢ ᎤᏛᏒ ᎤᎦᏔ ᏚᎳᏏᏔᏅᎩ, ᎢᏳᏓᎵᎭ ᎢᎦᎢ ᏕᎨᏒᎢ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᏎᎷ ᎠᎴ ᏗᎵᏭ ᎠᎴ supplemented ᎬᏙᏗ ᎭᏫᏯ byproducts ᎠᎴ ᎪᎢ ᎠᎴ vitamins.
 
 ᏪᏌ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᎠᎵᏍᏓᏴᏗ ᎾᎿ ᎧᏁᏍᎦ, ᏧᎦᎶᎦ, ᎦᎪᏘ ᎠᎴ houseplants ᎠᏏᏅᏍᏗ ᎢᏳᏍᏗᏊ ᎨᏒᎢ upsetting ᎤᎾᏤᎵ ᎤᏍᏉᎵ.
 
