--- a/ᎤᏍᏗᏰᎬ.mw
+++ b/ᎤᏍᏗᏰᎬ.mw
@@ -1,19 +1,19 @@
 [[Image:Anderson Sophie Young Girl Fixing Her Hair.jpg|thumb|right|"ᎠᏲᎵ ᎠᎨᏳᏣ ᎣᏍᏛ ᎢᎬᏁᏗ ᎾᏍᎩ ᎠᎨᏴ ᎤᏍᏗᏰᎬ", ᎾᎥᎢ [[Sophie Gengembre Anderson]]]]
-'''ᎤᏍᏗᏰᎬ''' ᎨᏒᎢ ᎠᏍᏓᏅᏅ ᎦᏂᏓᏛ ᏂᏛᎴᏅᏓ ᎯᎠ [[skin|ᎦᏁᎦ]], ᎠᏩᏛᏗ ᎠᎬᏫᏳᏛ ᎭᏫᎾᏗᏢ [[mammal|gantlai]].
+'''ᎤᏍᏗᏰᎬ''' ᎨᏒᎢ ᎠᏍᏓᏅᏅ ᎦᏂᏓᏛ ᏂᏛᎴᏅᏓ ᎯᎠ [[skin|ᎦᏁᎦ]], ᎠᏩᏛᏗ ᎠᎬᏫᏳᏛ ᎭᏫᎾᏗᏢ [[mammal|ᎦᏂᏝᎢ ]].
 
-ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎨᏒᎢ ᏁᏙᎲᎾ ᎾᎾᎢ ᎤᏙᎯᏳ ᎠᏓᏅᏍᏗ ᎥᎴᏂᏙᎲ. ᎾᏍᎩ ᎠᏎᎸᎯ ᏂᏛᎴᏅᏓ ᎯᎠ [[epidermis (skin)|ᎠᏰᎵ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎠᏛᏍᎦ ᏂᏛᎴᏅᏓ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[dermis]]. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ "ᎤᏍᏗᏰᎬ" ([[trichome]]) ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎾᎿ [[plant|ᎦᎪᏘ]]. ᎯᎠ ᏂᎯ ᎾᎿ [[arthropod]], ᏯᏛᎿ ᏥᏄᏍᏗ [[insect|ᏨᏍᎪᏱ]]ᎠᎴ [[spider|ᎧᎿᏁᏍᎩ]]ᎠᎴ ᎤᏙᎯᏳᎯᏯ [[insect|ᏨᏍᎪᏱ]] [[bristle|ᎪᏍᏓᏱ]]. ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-[[human|ᏴᏫ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[fur|ᎤᏭᏯᏔᏅ]]. ᎾᎿᎢ ᎠᎴ varieties [[cat|ᏪᏌ]], [[dog|ᎩᏟ]], ᎠᎴ [[mouse|ᏥᏍᏕᏥ]] ᏗᏓᏓᏂᎸᏣᏘ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎬᎪᏩᏛᏗ ᎤᏍᏗᏰᎬ.
+ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎨᏒᎢ ᏁᏙᎲᎾ ᎾᎾᎢ ᎤᏙᎯᏳ ᎠᏓᏅᏍᏗ ᎥᎴᏂᏙᎲ. ᎾᏍᎩ ᎠᏎᎸᎯ ᏂᏛᎴᏅᏓ ᎯᎠ [[epidermis (skin)|ᎠᏰᎵ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎠᏛᏍᎦ ᏂᏛᎴᏅᏓ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[dermis]]. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ "ᎤᏍᏗᏰᎬ" ([[trichome]]) ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎾᎿ [[plant|ᎦᎪᏘ]]. ᎯᎠ ᏂᎯ ᎾᎿ [[arthropod]], ᏯᏛᎿ ᏥᏄᏍᏗ [[insect|ᏨᏍᎪᏱ]] ᎠᎴ [[spider|ᎧᎿᏁᏍᎩ]] ᎠᎴ ᎤᏙᎯᏳᎯᏯ [[insect|ᏨᏍᎪᏱ]] [[bristle|ᎪᏍᏓᏱ]]. ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-[[human|ᏴᏫ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[fur|ᎤᏭᏯᏔᏅ]]. ᎾᎿᎢ ᎠᎴ varieties [[cat|ᏪᏌ]], [[dog|ᎩᏟ]], ᎠᎴ [[mouse|ᏥᏍᏕᏥ]] ᏗᏓᏓᏂᎸᏣᏘ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎬᎪᏩᏛᏗ ᎤᏍᏗᏰᎬ.
 
 == ᏴᏫ ᎤᏍᏗᏰᎬ ==
 === ᎠᏰᎸ ᎤᏍᏗᏰᎬ ===
-ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎤᎪᏗᏗ [[mammal|gantlai]], ᎠᏂᏴᏫ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏂᎦᏛ-ᎦᏃᎴᏍᎬ, ᎤᎭᎨᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎤᎾᏤᎵ ᏗᏂᏰᎸ. ᎾᎯᏳᎢ ᎯᎠ [[great apes|ᎡᏆ ᏗᏟᎶᏍᏔᏅ]] ᎤᎭ ᏗᎦᏃᏢᎩ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᎢᎦᏛ ᎤᏰᎸᎭ ᎡᏍᎦᏂ, ᎪᎯ ᎨᏒᎢ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ: coverage ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏂᎦᏲᎵ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᎠᏓᏁᏗ ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎠᎧᎵᏬᎯ ᎤᏰᎸᎭ ᎦᏁᎦ (ᏯᏛᎾ ᎯᎠ ᎠᎴᏂᏍᎬ "[[The Naked Ape|ᎤᏰᎸᎭ ᏗᏟᎶᏍᏔᏅ]]").
+ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎤᎪᏗᏗ [[mammal|ᎦᏂᏝᎢ]], ᎠᏂᏴᏫ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏂᎦᏛ-ᎦᏃᎴᏍᎬ, ᎤᎭᎨᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎤᎾᏤᎵ ᏗᏂᏰᎸ. ᎾᎯᏳᎢ ᎯᎠ [[great apes|ᎡᏆ ᏗᏟᎶᏍᏔᏅ]] ᎤᎭ ᏗᎦᏃᏢᎩ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᎢᎦᏛ ᎤᏰᎸᎭ ᎡᏍᎦᏂ, ᎪᎯ ᎨᏒᎢ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᏂᏴᏫ: coverage ᎨᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏂᎦᏲᎵ Ꮎ ᎾᏍᎩ ᏰᎵᏇ ᎠᏓᏁᏗ ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎠᎧᎵᏬᎯ ᎤᏰᎸᎭ ᎦᏁᎦ (ᏯᏛᎾ ᎯᎠ ᎠᎴᏂᏍᎬ "[[The Naked Ape|ᎤᏰᎸᎭ ᏗᏟᎶᏍᏔᏅ]]").
 
 ᎯᎸᏍᎩ ᎠᏓᏅᏖᏍᎬ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ ᏗᎪᏏᏐᏗ ᎯᎠ ᎠᏚᎳᏗ ᏴᏫ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᏌᏊ ᎠᏂᏁᎢᏍᏗ Ꮎ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎠᏑᏰᏛ ᎠᏂᏴᏫ ᎾᏍᎩᎾᎢ ᏍᏆᎵᎯᎨᏍᏗ ᎠᎴ thinner ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᎢᎦᏛ ᎠᏫᏒᏗ adaptations ᎯᎠ ᎤᎦᎾᏩ [[plains|ᏂᎬᏅ]] ᎯᎠ [[savanna|ᏂᎬᏅ]], ᎠᏠᏯᏍᏗᏍᎩ [[bipedal]] [[locomotion|ᎠᏌᎳᏙᏗ]] ᎠᎴ ᎦᎸᎳᏗ ᎠᎦᏘ [[posture|ᏄᏍᏗᏓᏅ]]. ᎭᏫᎾᏗᏢ ᎪᎯ ᎪᎷᏩᏛᏗ ᎯᎠ ᎠᏚᎳᏗ ᏴᏫ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎠᎵᏍᏕᎸᏗ ᎠᎨᏔᏗᏍᏗ [[body temperature|ᎠᏰᎸ ᏄᏁᏌᏴᏢ]]. ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᏗᎦᏎᏍᏙᏗ ᎬᏙᏗ ᎪᎯ ''ᏂᎬᏅ'' ᎪᎷᏩᏛᏗ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏂᎦᏲᎵ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ Ꮎ [[cursorial hunting|cursorial ᎠᏂᏃᎯᎵᏙᎲ]] ᎨᏒᎢ ᎬᏔᏅᎯ ᎾᎥᎢ ᏐᎢ ᎡᎿᎢ ᎡᎥ Ꮎ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏛᏁᎸᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ thinning ᎤᏍᏗᏰᎬ, ᎠᎴ Ꮎ [[chimpanzee]] ᎠᎴ [[gorilla|ᏄᏁᎸᎾ]] ᎤᏍᏗᏰᎬ ᎾᏍᎩ ᎾᏍᏇ ᏚᏓᏩᏗᏍᎬ ᎯᎠ ᎦᏁᎦ ᏂᏛᎴᏅᏓ [[radiant heat|ᏚᎸᏌᏛ ᎤᎦᎾᏭ]] ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᎤᏗᎴᎩ ᏅᎩᏨᎴ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏄᏓᎴ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎤᎦᎾᏭ ᎤᏲᎱᏎᎸ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎧᏁᏨ ᎢᏯᏛᏁᏗ. ᏄᏓᎴ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎨᏒᎢ Ꮎ bipedal ᎠᏌᎳᏙᏗ ᎬᎪᏩᏛᏘᏉ predates [[hominid]]' ᎠᏓᏅ ᏂᏛᎴᏅᏓ [[forest|ᎠᏙᎯ ᎢᎾᎨ]] ᏄᏍᏗᏓᏅ ᏂᎬᏅ ᏄᏍᏗᏓᏅ{{citation needed}}.
 
-ᎤᏟ ᎢᎦᎢ ᎾᏞᎬ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ (ᎯᎠ "[[Aquatic ape hypothesis|Aquatic ᏗᏟᎶᏍᏔᏅ ᏄᏍᏗᏓᏅ]]") ᎤᎭ ᎿᏛᎦ ᎬᏙᏗ postulated ᎠᎴᏫᏍᏙᏗ [[bipedal]] ᏛᏍᏓᏅᏅᏍᎬ ᎭᏫᎾᏗᏢ [[salt marsh|ᎠᎹ ᎤᎯᏌᏛ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Danakil]] ᎤᏔᏂᏗ ᎦᏙᎯ [[Ethiopia]], ᎠᏎᏱᎩ ᏂᎦᎳᏍᏗᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[hominid]] ᏚᎾᏓᏚᏓᎸ ᎠᏰᎵ 5 ᎠᎴ 7 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ. ᏥᏄᏍᏗ ᏛᏍᏓᏅᏅᏍᎬ gantlai, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎤᏟ ᎢᎦᎢ ᎠᏏᎾᏍᏛ ᎤᏙᎷᏬᏗ ᏍᏆᎳᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᏫᏚᏳᎪᏛ ᎭᏫᎾᏗᏢ ᎦᎵᏦᎯᏓ ᎾᏍᎩᎾᎢ streamlining ᎠᎴ ᎠᎽᏰᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[aquatic]] ᏄᏍᏗᏓᏅ; ᎯᎠ [[eccrine]] [[sweat glands|ᎠᎵᎠᎷ glands]] ᎤᏙᎷᏩᏛᏓ ᎤᎶᏐᏅ ᎯᎠ hominids ᎠᎦᏍᎦᏂ ᎯᎠ ᎠᎹ. ᏱᏂᎬᏛᎾ, ᎪᎯ ᎪᎷᏩᏛᏗ ᎤᏄᎸᏅ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᎢᏧᎳ chimpanzees ᎠᎴ ᏄᏁᎸᎾ ᎤᎭ ᎯᎠ ᎤᏠᏱ ᎠᏫᏒᏗ ᎠᎴ ᏗᏗᎦᎴᏴ eccrine glands, ᎠᎴ Ꮎ ᎤᏅᏌ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ ᎾᏍᎩᎾᎢ ᎠᎵᎠᎷ ᎠᏛᎯᏍᏙᏗ. 
+ᎤᏟ ᎢᎦᎢ ᎾᏞᎬ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ (ᎯᎠ "[[Aquatic ape hypothesis|Aquatic ᏗᏟᎶᏍᏔᏅ ᏄᏍᏗᏓᏅ]]") ᎤᎭ ᎿᏛᎦ ᎬᏙᏗ postulated ᎠᎴᏫᏍᏙᏗ [[bipedal]] ᏛᏍᏓᏅᏅᏍᎬ ᎭᏫᎾᏗᏢ [[salt marsh|ᎠᎹ ᎤᎯᏌᏛ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Danakil]] ᎤᏔᏂᏗ ᎦᏙᎯ [[Ethiopia]], ᎠᏎᏱᎩ ᏂᎦᎳᏍᏗᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[hominid]] ᏚᎾᏓᏚᏓᎸ ᎠᏰᎵ 5 ᎠᎴ 7 ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ. ᏥᏄᏍᏗ ᏛᏍᏓᏅᏅᏍᎬ ᎦᏂᏝᎢ, ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᎤᏟ ᎢᎦᎢ ᎠᏏᎾᏍᏛ ᎤᏙᎷᏬᏗ ᏍᏆᎳᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎴ ᏫᏚᏳᎪᏛ ᎭᏫᎾᏗᏢ ᎦᎵᏦᎯᏓ ᎾᏍᎩᎾᎢ streamlining ᎠᎴ ᎠᎽᏰᎵ ᎭᏫᎾᏗᏢ ᎯᎠ [[aquatic]] ᏄᏍᏗᏓᏅ; ᎯᎠ [[eccrine]] [[sweat glands|ᎠᎵᎠᎷ glands]] ᎤᏙᎷᏩᏛᏓ ᎤᎶᏐᏅ ᎯᎠ hominids ᎠᎦᏍᎦᏂ ᎯᎠ ᎠᎹ. ᏱᏂᎬᏛᎾ, ᎪᎯ ᎪᎷᏩᏛᏗ ᎤᏄᎸᏅ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ ᎢᏧᎳ chimpanzees ᎠᎴ ᏄᏁᎸᎾ ᎤᎭ ᎯᎠ ᎤᏠᏱ ᎠᏫᏒᏗ ᎠᎴ ᏗᏗᎦᎴᏴ eccrine glands, ᎠᎴ Ꮎ ᎤᏅᏌ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᏭᏪᏙᎢ ᎤᏙᎷᏩᏛᏓ ᎾᏍᎩᎾᎢ ᎠᎵᎠᎷ ᎠᏛᎯᏍᏙᏗ. 
 
-ᏦᎢᏁ ᎪᎷᏩᏛᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᏴᏫ ᎠᎵᏔᏲᏍᏗ Ꮎ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᏚᎾᏁᎶᏅ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎠᎭᏂ (ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏑᏰᏍᏗ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ){{citation needed}}. ᏰᎵᏊ ᏱᎩ ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎬᏙᏗ [[neoteny]], ᎬᏙᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ [[juvenile|ᎠᏛᏍᎩ]]-ᎦᎾᏄᎪᎬᎢ ᎠᎨᏴ ᎠᎴᏂᏙᎲ ᎠᏑᏰᏛ ᎾᎥᎢ ᎠᏍᎦᏯ ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ ᏂᎪᎯᎸ ᎤᏚᎳᏗ (ᎠᎪᏩᏛᏗ [[#Types of hair|ᎢᏗᎦᎪᏘ  ᎤᏍᏗᏰᎬ]] ᎠᎴ [[vellus hair|vellus ᎤᏍᏗᏰᎬ]]). ᎯᎠ ᏴᏫ ᎠᎨᏴ ᎠᏰᎸ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏟ ᎢᎦᎢ [[vellus hair|vellus ᎤᏍᏗᏰᎬ]] (ᎠᏃᏢᏍᎬ ᎯᎠ ᎦᏁᎦ ᎦᎾᏄᎪᎢᏍᏗ ᎤᏰᎸᎭ), ᎾᎯᏳᎢ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏟ ᎢᎦᎢ [[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]] (ᎾᏍᎩ ᎨᏒᎢ ᎾᎿ ᎯᎠ [[chest hair|ᎦᏁᏥ]], [[abdominal hair|ᎤᏍᏉᎵ]] ᎠᎴ ᎦᏐᎯ). ᎯᎠ ᎢᏴ [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᏰᎵᏇ ᏗᎪᏏᏐᏗ ᎯᎠ [[sexual dimorphism]] ᎭᏫᎾᏗᏢ ᏴᏫ ᎠᏰᎸ ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᏑᏰᏍᏗ ᎠᎴᏂᏙᎲ ᎤᏟ ᎢᎦᎢ ᎥᏝ ᏳᏓᎷᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎨᏴ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᎦᏯ, ᎪᏍᏓᏱ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏐᎢ ᏔᎵ theories ᏝᏰᎵ ᎾᎿ ᎨᏒ ᏩᏎᏍᏗ ᏄᏠᏯᏍᏛᎾ ᎤᏓᏂᎳ ᎠᏏᏴᏫ ᏄᏓᎴᎿᎥ ᎾᏛᏁᎲᎢ ᎠᏰᎵ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ. ᏰᎵᏊ ᎪᎯᏳᏙ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ [[depilation|ᏗᏟᎶᏍᏔᏅ ᎤᏰᎸᎭ]] ᏗᏂᏃᎨᏂ ᎠᎴ ᏗᏂᏅᏍᎨᏂ, ᎠᎴ ᎤᏠᏯᏍᏗ., ᎠᎴ ᎠᎪᎲᎢ ᏥᏄᏍᏗ "[[sexy]]" ᎾᎿ ᎠᏂᎨᏴ ᎢᏧᎳᎭ ᎪᎯ ᎢᎦ, ᎾᎯᏳᎢ ᎠᏰᎸ [[shaving|ᎠᏍᏓᏩᏛᏍᏗ]] ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᏧᏣᏔᏊ ᎾᏍᎩᎾᎢ ansigaya.
+ᏦᎢᏁ ᎪᎷᏩᏛᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏌᎨᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᏴᏫ ᎠᎵᏔᏲᏍᏗ Ꮎ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᏚᎾᏁᎶᏅ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎠᎭᏂ (ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏑᏰᏍᏗ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ){{citation needed}}. ᏰᎵᏊ ᏱᎩ ᎪᎯ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎬᏙᏗ [[neoteny]], ᎬᏙᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ [[juvenile|ᎠᏛᏍᎩ]]-ᎦᎾᏄᎪᎬᎢ ᎠᎨᏴ ᎠᎴᏂᏙᎲ ᎠᏑᏰᏛ ᎾᎥᎢ ᎠᏍᎦᏯ ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ ᏂᎪᎯᎸ ᎤᏚᎳᏗ (ᎠᎪᏩᏛᏗ [[#Types of hair|ᎢᏗᎦᎪᏘ  ᎤᏍᏗᏰᎬ]] ᎠᎴ [[vellus hair|vellus ᎤᏍᏗᏰᎬ]]). ᎯᎠ ᏴᏫ ᎠᎨᏴ ᎠᏰᎸ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏟ ᎢᎦᎢ [[vellus hair|vellus ᎤᏍᏗᏰᎬ]] (ᎠᏃᏢᏍᎬ ᎯᎠ ᎦᏁᎦ ᎦᎾᏄᎪᎢᏍᏗ ᎤᏰᎸᎭ), ᎾᎯᏳᎢ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎭ ᎤᏟ ᎢᎦᎢ [[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]] (ᎾᏍᎩ ᎨᏒᎢ ᎾᎿ ᎯᎠ [[chest hair|ᎦᏁᏥ]], [[abdominal hair|ᎤᏍᏉᎵ]] ᎠᎴ ᎦᏐᎯ). ᎯᎠ ᎢᏴ [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᏰᎵᏇ ᏗᎪᏏᏐᏗ ᎯᎠ [[sexual dimorphism]] ᎭᏫᎾᏗᏢ ᏴᏫ ᎠᏰᎸ ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎯᎠ ᏂᏚᎵᏍᏔᏅ ᎠᏑᏰᏍᏗ ᎠᎴᏂᏙᎲ ᎤᏟ ᎢᎦᎢ ᎥᏝ ᏳᏓᎷᎳ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎨᏴ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᎦᏯ, ᎪᏍᏓᏱ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏐᎢ ᏔᎵ theories ᏝᏰᎵ ᎾᎿ ᎨᏒ ᏩᏎᏍᏗ ᏄᏠᏯᏍᏛᎾ ᎤᏓᏂᎳ ᎠᏏᏴᏫ ᏄᏓᎴᎿᎥ ᎾᏛᏁᎲᎢ ᎠᏰᎵ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ. ᏰᎵᏊ ᎪᎯᏳᏙ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏯᏛᎾ ᎤᏙᎯᏳ Ꮎ [[depilation|ᏗᏟᎶᏍᏔᏅ ᎤᏰᎸᎭ]] ᏗᏂᏃᎨᏂ ᎠᎴ ᏗᏂᏅᏍᎨᏂ, ᎠᎴ ᎤᏠᏯᏍᏗ., ᎠᎴ ᎠᎪᎲᎢ ᏥᏄᏍᏗ "[[sexy]]" ᎾᎿ ᎠᏂᎨᏴ ᎢᏧᎳᎭ ᎪᎯ ᎢᎦ, ᎾᎯᏳᎢ ᎠᏰᎸ [[shaving|ᎠᏍᏓᏩᏛᏍᏗ]] ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᏧᏣᏔᏊ ᎾᏍᎩᎾᎢ ᎠᏂᏍᎦᏯ.
 
-ᏄᏓᎴ ᎪᎷᏩᏛᏗ Ꮎ ᎨᏒᎢ ᎦᏟᏐᏗᎩ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎬᏙᏗ [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎨᏒᎢ Ꮎ ᎠᏂᏴᏫ ᎤᎴᎾᎯᏛ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎦᏲᎳᏅ ᎤᎾᏤᎵ ᎦᏂᏰᎩ [[fur|ᎤᏭᏯᏔᏅ]]-ᎠᎨᏳᎯ [[parasite|ᎠᏥᎾᏝᎢ]]ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎠᎿᏗᏢ ᏧᏠᎯᏍᏗ. "ᎭᏫᎾᏗᏢ ᎡᎿᎢ ᎡᎥ, [[ectoparasite]]ᎾᏍᎩᏯᎢ [[biting flies|ᎤᏴᏢ anitvga]], ᏄᎵᏂᎬᎬ ᎤᎪᏗᏳ ᏓᏓᏁᏤᎸ ᏚᏂᎬᏩᎶᏛ - ᎤᏅᏌ ᎤᏙᎯᏳᎯ ᎦᎸᏉᏙᏗ ᎠᏆᏤᎵ ᎠᏰᎸ ᏄᏛᎿᏕᎬ", "ᎠᏆᏤᎵ ᏗᎧᏃᏗᎢ ᎨᏒᎢ Ꮎ hairlessness ᎨᏒᎢ adaptation ᎾᏍᎩᎾᎢ ᎠᎦᏲᎳᏗᏍᎩ ᎯᎠ ectoparasite ᎠᎧᎵᎢ." ᎠᏗᎭ ᎤᏙᏪᎸ Pagel, [[evolutionary biologist]], ᎠᎴ ᎤᏤᎵ ᎤᎾᏓᏡᎩ [[Walter Bodmer]] ᎾᎾᎢ ᎯᎠ [[University of Reading|ᏗᏕᎶᏆᏍᏗ  ᏓᎪᎵᏰᏍᎬ]], [[UK]]. ᏥᏄᏍᏗ ᎠᏂᏴᏫ ᎤᏙᎷᏩᏛᏓ ᎯᎠ ᏅᏏᎾᏒ ᎠᎨᏔᏗᏍᏗ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎠᏓᏁᎸ ᎠᏥᎸ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᏃᏢᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ 'ᎤᏭᏯᏔᏅ' ᎬᏙᏗ ᏧᎾᏄᏬ ᎬᏙᏗ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᏴᏫ ᎥᎦᏔᎲᎢ, ᎪᎯ adaptation ᎠᏓᏁᏟᏴᏍᏗ ᏰᎵᏊ. "ᎾᏍᎩ ᎤᏤᎵ ᏌᏊ ᎾᏍᎩ ᎣᏍᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ gene/ᎥᎦᏔᎲᎢ ᎢᏗᎦᏘᎭ-ᎠᏓᎴᏂᏍᎬ" ᎠᏗᎭ Pagel. "ᎾᏍᎩ ᎤᏤᎵ ᎯᎠ ᎥᎦᏔᎲᎢ ᎦᏙ ᎤᏍᏗ ᎤᎵᏍᏕᎸᎲᎩ ᎢᏧᎳ ᎠᏴ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎤᏅᏔᏂᏓᏍᏗ ᎤᏓᏲᎱᏎᏗ ᎠᏆᏤᎵ ᎤᏍᏗᏰᎬ." ᎭᏫᎾᏗᏢ ᎪᎯ scenario [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎤᎵᏍᏕᎸᎲᎩ ᎦᏣᏄᎳᎯᏍᏗ ᎯᎠ ᎤᏲᎱᏎᎸ ᎤᏭᏯᏔᏅ.
+ᏄᏓᎴ ᎪᎷᏩᏛᏗ Ꮎ ᎨᏒᎢ ᎦᏟᏐᏗᎩ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎬᏙᏗ [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎨᏒᎢ Ꮎ ᎠᏂᏴᏫ ᎤᎴᎾᎯᏛ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎠᎦᏲᎳᏅ ᎤᎾᏤᎵ ᎦᏂᏰᎩ [[fur|ᎤᏭᏯᏔᏅ]]-ᎠᎨᏳᎯ [[parasite|ᎠᏥᎾᏝᎢ]] ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎠᎿᏗᏢ ᏧᏠᎯᏍᏗ. "ᎭᏫᎾᏗᏢ ᎡᎿᎢ ᎡᎥ, [[ectoparasite]] ᎾᏍᎩᏯᎢ [[biting flies|ᎤᏴᏢ ᎠᏂᏛᎦ]], ᏄᎵᏂᎬᎬ ᎤᎪᏗᏳ ᏓᏓᏁᏤᎸ ᏚᏂᎬᏩᎶᏛ - ᎤᏅᏌ ᎤᏙᎯᏳᎯ ᎦᎸᏉᏙᏗ ᎠᏆᏤᎵ ᎠᏰᎸ ᏄᏛᎿᏕᎬ", "ᎠᏆᏤᎵ ᏗᎧᏃᏗᎢ ᎨᏒᎢ Ꮎ hairlessness ᎨᏒᎢ adaptation ᎾᏍᎩᎾᎢ ᎠᎦᏲᎳᏗᏍᎩ ᎯᎠ ectoparasite ᎠᎧᎵᎢ." ᎠᏗᎭ ᎤᏙᏪᎸ Pagel, [[evolutionary biologist]], ᎠᎴ ᎤᏤᎵ ᎤᎾᏓᏡᎩ [[Walter Bodmer]] ᎾᎾᎢ ᎯᎠ [[University of Reading|ᏗᏕᎶᏆᏍᏗ  ᏓᎪᎵᏰᏍᎬ]], [[UK]]. ᏥᏄᏍᏗ ᎠᏂᏴᏫ ᎤᏙᎷᏩᏛᏓ ᎯᎠ ᏅᏏᎾᏒ ᎠᎨᏔᏗᏍᏗ ᎤᎾᏤᎵ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎠᏓᏁᎸ ᎠᏥᎸ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᏃᏢᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ 'ᎤᏭᏯᏔᏅ' ᎬᏙᏗ ᏧᎾᏄᏬ ᎬᏙᏗ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᏴᏫ ᎥᎦᏔᎲᎢ, ᎪᎯ adaptation ᎠᏓᏁᏟᏴᏍᏗ ᏰᎵᏊ. "ᎾᏍᎩ ᎤᏤᎵ ᏌᏊ ᎾᏍᎩ ᎣᏍᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ gene/ᎥᎦᏔᎲᎢ ᎢᏗᎦᏘᎭ-ᎠᏓᎴᏂᏍᎬ" ᎠᏗᎭ Pagel. "ᎾᏍᎩ ᎤᏤᎵ ᎯᎠ ᎥᎦᏔᎲᎢ ᎦᏙ ᎤᏍᏗ ᎤᎵᏍᏕᎸᎲᎩ ᎢᏧᎳ ᎠᏴ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎤᏅᏔᏂᏓᏍᏗ ᎤᏓᏲᎱᏎᏗ ᎠᏆᏤᎵ ᎤᏍᏗᏰᎬ." ᎭᏫᎾᏗᏢ ᎪᎯ scenario [[sexual selection|sexual ᎠᏑᏰᏍᏗ]] ᎤᎵᏍᏕᎸᎲᎩ ᎦᏣᏄᎳᎯᏍᏗ ᎯᎠ ᎤᏲᎱᏎᎸ ᎤᏭᏯᏔᏅ.
 
 ᎾᏍᎩᎾᎢ ᎯᎠ newscientist ᎤᏓᏡᎬ ᎬᏙᏗ ᎯᎠ ᏕᎬᏔᏛ:
 http://www.newscientist.com/ᎤᏓᏡᎬ.ns?id=dn3807
@@ -28,34 +28,34 @@ http://www.anthro.utah.edu/~rogers/pubs/Pagel-BL-270-S117.pdf
 * [[Terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]], ᎯᎠ ᎠᏂᎧᎵ ᎤᏙᎷᏩᏛᏓ ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏂᎦᎥᏊ ᎦᏅᎯᏓᎨ, coarser, thicker, ᎠᎴ darker ᎬᎾᏬᏍᎬ vellus ᎤᏍᏗᏰᎬ
 
 === ᎤᏛᏏᏗᏒ ===
-ᎯᎠ ᎤᎪᏗᏗ noticeable ᎢᎦᏛ ᏴᏫ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏛᏍᎬ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎾᎿ ᎤᎪᏗᏗ ᎦᏝᎢ. Ꮝ ᏅᏙᎲᏅ ᎨᏒᎢ termed [[alopecia]], ᏱᏓᏟᎶᏍᏔᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[baldness]]. 
+ᎯᎠ ᎤᎪᏗᏗ noticeable ᎢᎦᏛ ᏴᏫ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ, ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏛᏍᎬ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎾᎿ ᎤᎪᏗᏗ ᎦᏂᏝᎢ. Ꮝ ᏅᏙᎲᏅ ᎨᏒᎢ termed [[alopecia]], ᏱᏓᏟᎶᏍᏔᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[baldness]]. 
 
 ᎯᎠ ᏐᎢ ᎢᎦᏛᎭ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᏄᏍᏛ ᏗᎧᏃᏗ ᏄᏓᎴᎿᎥ ᎢᏗᎦᎪᏘ ᎤᏍᏗᏰᎬ. ᏂᏛᎴᏅᏓ ᎠᏛᏍᎩ ᎾᎿ '''[[vellus hair|vellus ᎤᏍᏗᏰᎬ]]''' ᏗᎫᏝᎢ ᎯᎠ ᏂᎦᏛ ᏴᏫ ᎠᏰᎸ ᎾᎪᎲᎾ [[sex|ᏧᏠᎯᏍᏗ]] ᎠᎴ [[race|ᏧᎾᏓᎴᏅᏓ ᏴᏫ]] ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎷᎯᏍᏗ:  ᎯᎠ [[lips|ᎠᏓᎴᏂᏍᎬ]], ᎯᎠ [[nipple|ᏂᎯ]], ᎯᎠ ᏂᎦᏅᎯᏒ [[hand|ᎤᏬᏰᏂ]], ᎯᎠ ᎠᎳᏑᎶ ᎦᎵᏍᏜᎥ [[feet|ᏧᎾᎳᏏᏕᎾ]], ᎤᏙᎯᏳ ᎤᏓᏎᎦᏤᏗ ᎠᏛᎯᏍᏙᏗ ᎡᏍᎦᏂ, ᎯᎠ [[navel|ᎠᏰᎵ]] ᎠᎴ [[scar|ᎤᏁᎸᏒ]] ᏂᎦᏛ.  ᎯᎠ [[density|ᎠᏫᏒᏗ]] ᎯᎠ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ [[square centimeter|ᏅᎩ ᏧᏅᏏᏯ centimeter]]) varies ᏂᏛᎴᏅᏓ ᏌᏊ ᎠᏏᏴᏫ ᏄᏓᎴ.
 [[Image:Androgenic hair.JPG|thumb|left|ᏗᏗᎦᎴᏴ  androgenic ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᎨᏴ ᎠᎴ ᎠᏍᎦᏯ ᎠᏰᎸ]]
 
-ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ ᎤᏩᎾᏕᏍᎩ ᎠᏍᎦᏯ [[hormone]]([[androgen]]) ᎾᎯᏳᎨᏒ [[puberty|ᎠᏛᏍᎩ]] ᏂᏕᎬᏂᏏᏍᎬ '''ᏧᎾᏍᏗ ᏧᎵᎬᏩᎳᏅᎯ''' vellus ᎤᏍᏗᏰᎬ ᎾᎾᎯ '''[[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]]''' ᎾᎿ ᎯᎸᏍᎩ ᎢᎦᏛᎭ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ. ᎯᎠ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎦᏬᎯᎵᏴᏍᏗ [[androgen]], ᎢᎬᏱᏗᏢ [[testosterone]] ᎠᎴ Ꮝ ᏗᏟᎶᏍᏔᏅ; ᎯᎠ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎯᎠ ᎢᏴ termed '''[[androgenic hair|androgenic ᎤᏍᏗᏰᎬ]]'''. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᏍᏗᏰᎬ ᎧᏁᏉᎩ. ᏱᏂᎬᏛᎾ, ᏄᏓᎴᎿᎥ ᎡᏍᎦᏂ ᎦᏬᎯᎵᏴᏍᏗ ᎬᏙᏗ ᏄᏓᎴᎿᎥ sensitivities. ᏥᏄᏍᏗ  ᎤᏩᎾᏕᏍᎩ ᎧᏁᏉᎠ, ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎾᏄᎪᏨᎢ androgenic ᎤᏍᏗᏰᎬ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎯᎠ ᎠᏓᏅᏍᏗ androgen sensitivity. ᎯᎠ [[pubic]] ᎡᏍᎦᏂ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ, ᎠᎴ ᎦᎨᏓᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎠᏛᏍᎦ ᎾᎿᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ androgens.
+ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ ᎤᏩᎾᏕᏍᎩ ᎠᏍᎦᏯ [[hormone]]([[androgen]]) ᎾᎯᏳᎨᏒ [[puberty|ᎠᏛᏍᎩ]] ᏂᏕᎬᏂᏏᏍᎬ '''ᏧᎾᏍᏗ ᏧᎵᎬᏩᎳᏅᎯ''' vellus ᎤᏍᏗᏰᎬ ᎾᎾᎯ '''[[terminal hair|ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ]]''' ᎾᎿ ᎯᎸᏍᎩ ᎢᎦᏛᎭ ᎯᎠ ᎠᏍᎦᏯ ᎠᏰᎸ. ᎯᎠ [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎦᏬᎯᎵᏴᏍᏗ [[androgen]], ᎢᎬᏱᏗᏢ [[testosterone]] ᎠᎴ Ꮝ ᏗᏟᎶᏍᏔᏅ; ᎯᎠ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᎦᎷᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎯᎠ ᎢᏴ termed '''[[androgenic hair|androgenic ᎤᏍᏗᏰᎬ]]'''. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎴ ᎯᎠ ᏄᏓᎨᏒ ᎯᎠ ᎤᏍᏗᏰᎬ ᎧᏁᏉᎩ. ᏱᏂᎬᏛᎾ, ᏄᏓᎴᎿᎥ ᎡᏍᎦᏂ ᎦᏬᎯᎵᏴᏍᏗ ᎬᏙᏗ ᏄᏓᎴᎿᎥ sensitivities. ᏥᏄᏍᏗ testosterone ᎤᏩᎾᏕᏍᎩ ᎧᏁᏉᎠ, ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎦᎾᏄᎪᏨᎢ androgenic ᎤᏍᏗᏰᎬ ᏄᏍᏛ ᏨᏓᏓ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎯᎠ ᎠᏓᏅᏍᏗ androgen sensitivity. ᎯᎠ [[pubic]] ᎡᏍᎦᏂ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ, ᎠᎴ ᎦᎨᏓᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎠᏛᏍᎦ ᎾᎿᎢ ᎢᎬᏱ ᎭᏫᎾᏗᏢ ᎦᏬᎯᎵᏴᏓ androgens.
 
-ᎡᏍᎦᏂ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ Ꮎ ᎤᏙᎷᏬᏗ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎤᏍᏆᎸᎲ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes, ᎠᏏᎦᏯ ᎠᎴ ᎠᏂᎨᏴ, ᎠᎴ ᎯᎠ [[axillary hair|underarms]] ᎠᎴ ᎯᎠ [[pubic hair|pubic ᎡᏍᎦᏂ]]. ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ᎠᏏᎦᏯ ᎠᏛᏍᎬ androgenic ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᏍᎦᏂ. ᎾᎿᎢ ᎨᏒᎢ '''[[sexual dimorphism]]''' ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎴ ᏗᏗᎦᎴᏴ androgenic ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎠᏍᎦᏯ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ (ᎾᏍᎩᎾ ᎨᏒ [[facial hair|facial ᎤᏍᏗᏰᎬ]], [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]], [[abdominal hair|ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ]] ᎠᎴ ᎤᏍᏗᏰᎬ ᎾᎿ [[human leg|ᏗᏂᏅᏍᎨᏂ]] ᎠᎴ [[arm|ᎧᏃᎨᏂ]]) ᎠᎴ ᎠᎨᏴ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ vellus ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎪᏩᏛᏗ. ᎯᎠ [[gene]]tic ᏚᏂᏲᏍᎬ ᏗᎫᎪᏙᏗ ᎯᎠ ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᎠᎴ ᎠᏂᏏᏴᏫᎭ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ androgenic ᎤᏍᏗᏰᎬ. 
+ᎡᏍᎦᏂ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ Ꮎ ᎤᏙᎷᏬᏗ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎤᏍᏆᎸᎲ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes, ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ, ᎠᎴ ᎯᎠ [[axillary hair|underarms]] ᎠᎴ ᎯᎠ [[pubic hair|pubic ᎡᏍᎦᏂ]]. ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ᎠᏂᏍᎦᏯ ᎠᏛᏍᎬ androgenic ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᏐᎢ ᎡᏍᎦᏂ. ᎾᎿᎢ ᎨᏒᎢ '''[[sexual dimorphism]]''' ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᎴ ᏗᏗᎦᎴᏴ androgenic ᎤᏍᏗᏰᎬ, ᎬᏙᏗ ᎠᏍᎦᏯ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏛ ᎤᏍᏗᏰᎬ (ᎾᏍᎩᎾ ᎨᏒ [[facial hair|facial ᎤᏍᏗᏰᎬ]], [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]], [[abdominal hair|ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ]] ᎠᎴ ᎤᏍᏗᏰᎬ ᎾᎿ [[human leg|ᏗᏂᏅᏍᎨᏂ]] ᎠᎴ [[arm|ᎧᏃᎨᏂ]]) ᎠᎴ ᎠᎨᏴ ᎤᎲᎢ ᎤᏟ ᎢᎦᎢ vellus ᎤᏍᏗᏰᎬ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎪᏩᏛᏗ. ᎯᎠ [[gene]]tic ᏚᏂᏲᏍᎬ ᏗᎫᎪᏙᏗ ᎯᎠ ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᎠᎴ ᎠᏂᏏᏴᏫᎭ ᎠᎵᏌᎳᏗᏍᎬ androgens ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ androgenic ᎤᏍᏗᏰᎬ. 
 
 ᎤᏁᏉᏨᎯ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᎨᏴ ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ ᏰᎵᏇ ᎾᏍᏋ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[hirsutism]]. ᎤᎶᏒᏍᏔᏅ ᎠᎴ ᎧᎵ ᏂᎨᏒᎾ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎾᎿ ᎯᎠ ᎠᏰᎸ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ ᎨᏒᎢ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ [[hypertrichosis]]. ᎠᎦᏎᏍᏗᏍᎬ ᎠᏂᏏᏴᏫᎭ ᏄᏍᏗᏓᏅ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᎧᎵ ᏂᎨᏒᎾ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏍᏆᏂᎪᏗ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎦᏃᏢᎩ ᏅᏬᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎾᎿ cultural ᎠᎴ ᎠᎾᏓᏟᏏᏍᎬ ᏄᏍᏛ ᎣᏓᏅᏛ.
 
 [[Image:Gray945.png|thumb|left|150px|ᏫᏚᏳᎪᏛ   ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ]]
-[[Image:Shuau with long hair.jpg|thumb|right|150px| ᎠᏏᏴᏫ ᎬᏙᏗ ᏭᎶᏒᏍᏔᏅ gantlai ᎤᏍᏗᏰᎬ]]
-ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᎴᏪᎢᏍᏙᏗ ᎤᏛᏏᏗᏒ ᎠᎴ dormancy. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏛᏏᏗᏒ ᎢᎦᏛ ᎯᎠ ᎠᏓᏠᎯᏍᏗ, [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᎴ ᎦᏅᎯᏓ ᎠᎴ [[bulbous|ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏓᏌᎳᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᏦᎢᏁ [[millimeter]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ. ᎤᎶᏐᏅ ᏦᎢ ᏑᏓᎵ ᎢᏯᏅᏓ, ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎾᎴᏫᏍᏗᏍᎬ (ᎯᎠ pubic ᎠᎴ armpit ᎡᏍᎦᏂ ᎤᎲᎢ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᎤᏛᏏᏗᏒ ᎠᎴᏫᏍᏙᏗ). ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏛᏍᎦ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎠᏍᏓᏩᏗᏒ ᎠᎴᏫᏍᏙᏗ [[dormancy]], ᏄᏓᎴ ᎤᏛᏏᏗᏒ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎢᏤ ᎤᏍᏗᏰᎬ pushes ᎯᎠ ᎠᎦᏴᎵ ᏌᏊ ᎠᏥᏄᎣᏫᏍᎬ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏂᏛᎴᏅᏓ ᎭᏫᎾᏗᏢ. ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ, ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏛᏍᎦ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ ᎢᏳᏩkᎣᏗ ᎠᎴ ᎡᏆ ᏂᎦᏅᎯᏒ ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ ᏚᎦᏔᏬᎸ. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.25 centimeters, ᎠᎴ ᎬᏩᏚᏫᏛ 0.5 [[inch|ᎢᏯᏏᏔᏛ]]es, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏏᏅᏙ. [[Anthropologist]]ᎠᏩᏒᏗᏱ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏛᎬᎢ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ [[adornment|ᎠᏣᏅᏙ]], byproduct ᎠᏂᎦᏲᎵ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]] ᏌᏊ ᎢᏳᏩᎫᏗ ᏐᎢ [[somatic|ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎤᏍᏗᏰᎬ ᎠᏰᎲ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᏄᏓᎴ ᎤᏝᏅᏓᏕᎲ ᎨᏒᎢ Ꮎ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]], ᎭᏢᏃ ᎦᏅᎯᏓ ᎠᏨᏍᏛ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎬᎪᏩᏛᏗ [[marker]] ᎾᏍᎩᎾᎢ ᏅᏩtᎣᎯᏯᏛ ᎠᏂᏏᏴᏫᎭ (ᎬᏙᏗ ᎣᏍᏛ ᎠᏓᏍᏕᎸᏗ, ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ ᎤᏍᏗᏰᎬ&mdash;ᎾᎥᏂᎨᏍᏙᏗᏇ 1 ᎠᏎᎯᎯ ᎠᎴ 39 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ&mdash;ᏯᏓᎢᏗᏏ ᎠᎩᏍᏗ ᏴᏩtᎤᏫᏛ 80 ᎢᏯᏅᏓ, ᎠᎴ ᎣᏍᏛ ᎭᏫᎾᏗᏢ 7 ᏧᏕᏘᏴᏓ, ᎠᏛᏍᎬ). ᎪᎯ ᏯᏓᎢᏗᏏ ᏗᎪᏏᏐᏗ ᎦᏙᏃ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes) ᎨᏒᎢ viewed ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎢᏧᎳᎭ ᎾᏊ.
+[[Image:Shuau with long hair.jpg|thumb|right|150px| ᎠᏏᏴᏫ ᎬᏙᏗ ᏭᎶᏒᏍᏔᏅ ᎦᏂᏝᎢ ᎤᏍᏗᏰᎬ]]
+ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ ᎠᏓᏁᏟᏴᏍᏗᎭ ᏗᎴᏪᎢᏍᏙᏗ ᎤᏛᏏᏗᏒ ᎠᎴ dormancy. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏛᏏᏗᏒ ᎢᎦᏛ ᎯᎠ ᎠᏓᏠᎯᏍᏗ, [[hair follicles|ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]] ᎠᎴ ᎦᏅᎯᏓ ᎠᎴ [[bulbous|ᎤᏚᏃᎯᏍᏔᏍᎧ]], ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏓᏌᎳᏙᏗ ᎤᏓᏎᎦᏤᏗ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᏦᎢᏁ [[millimeter]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᎦ. ᎤᎶᏐᏅ ᏦᎢ ᏑᏓᎵ ᎢᏯᏅᏓ, ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ ᎠᎾᎴᏫᏍᏗᏍᎬ (ᎯᎠ pubic ᎠᎴ armpit ᎡᏍᎦᏂ ᎤᎲᎢ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᎤᏛᏏᏗᏒ ᎠᎴᏫᏍᏙᏗ). ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎯᎠ [[root|ᎤᎾᏍᏕᏢ]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏛᏍᎦ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎠᏍᏓᏩᏗᏒ ᎠᎴᏫᏍᏙᏗ [[dormancy]], ᏄᏓᎴ ᎤᏛᏏᏗᏒ ᎠᏓᏠᎯᏍᏗ ᎠᏂᎩᏍᏗ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎢᏤ ᎤᏍᏗᏰᎬ pushes ᎯᎠ ᎠᎦᏴᎵ ᏌᏊ ᎠᏥᏄᏉᏫᏍᎬ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏂᏛᎴᏅᏓ ᎭᏫᎾᏗᏢ. ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ, ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏛᏍᎦ ᎾᏍᎩᎾᎢ ᎦᏅᎯᏓ [[time|ᎢᏳᏩᎪᏗ]] ᎠᎴ ᎡᏆ ᏂᎦᏅᎯᏒ ᎤᏓᎷᎸ ᎠᎴᏂᏙᎲ ᏚᎦᏔᏬᎸ. ᎯᎠ ᏓᎬᏩᎶᏛ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.25 centimeters, ᎠᎴ ᎬᏩᏚᏫᏛ 0.5 [[inch|ᎢᏯᏏᏔᏛ]]es, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏏᏅᏙ. [[Anthropologist]] ᎠᏩᏒᏗᏱ Ꮎ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏛᎬᎢ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᎾᏍᎬᏘ ᎾᏍᏋ [[adornment|ᎠᏣᏅᏙ]], byproduct ᎠᏂᎦᏲᎵ [[natural selection|ᏂᎬᏩᏍᏛ ᎠᏑᏰᏍᏗ]] ᏌᏊ ᎢᏳᏩᎫᏗ ᏐᎢ [[somatic|ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎤᏍᏗᏰᎬ ᎠᏰᎲ ᏭᏪᏙᎢ ᎤᎴᎾᎯᏛ. ᏄᏓᎴ ᎤᏝᏅᏓᏕᎲ ᎨᏒᎢ Ꮎ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ [[Fisherian runaway|Fisherian ᎠᏑᎳᎪᎢᏍᏗ]] [[sexual selection|sexual ᎠᏑᏰᏍᏗ]], ᎭᏢᏃ ᎦᏅᎯᏓ ᎠᏨᏍᏛ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎬᎪᏩᏛᏗ [[marker]] ᎾᏍᎩᎾᎢ ᏅᏩᏙᎯᏯᏛ ᎠᏂᏏᏴᏫᎭ (ᎬᏙᏗ ᎣᏍᏛ ᎠᏓᏍᏕᎸᏗ, ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ ᎤᏍᏗᏰᎬ&mdash;ᎾᎥᏂᎨᏍᏙᏗᏇ 1 ᎠᏎᎯᎯ ᎠᎴ 39 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ&mdash;ᏯᏓᎢᏗᏏ ᎠᎩᏍᏗ ᏴᏩᏚᏫᏛ 80 ᎢᏯᏅᏓ, ᎠᎴ ᎣᏍᏛ ᎭᏫᎾᏗᏢ 7 ᏧᏕᏘᏴᏓ, ᎠᏛᏍᎬ). ᎪᎯ ᏯᏓᎢᏗᏏ ᏗᎪᏏᏐᏗ ᎦᏙᏃ ᎦᏅᎯᏓ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ (ᎭᏫᎾᏗᏢ ᎢᏧᎳ sexes) ᎨᏒᎢ viewed ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎢᏧᎳᎭ ᎾᏊ.
 
 === Aging ===
 [[Image:Old Hmong Man (Sapa Vietnam).jpg|150px|right|thumb| ᎠᎦᏴᎳᎯᎨᏍᏙᏗ [[Hmong people|Hmong]] ᎠᏍᎦᏯ ᎬᏙᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ]]
 
-ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colourless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏏᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
+ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏴᏫ ᏫᏚᏳᎪᏛ ᎤᏙᎷᏬᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎢᎬᏂᏏᏍᎩ ᎯᎠ [[pigment|ᏗᎧᏃᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎤᎴᎾᎯᏛ ᎠᎴ ᎯᎠ ᎤᏍᏗᏰᎬ ᏗᏙᎳᎩ colourless. ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᎨᎦᏓᏅᏖᏗ ᏄᎶᏒᏍᏛᎾ aging. ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᎯ ᏄᎵᏍᏔᏅ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ 75 ᏧᏕᏘᏴᏓ ᎠᎴ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᎤᎭ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᎠᏂᏍᎦᏯ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎾᎾᎢ ᎠᏲᎵᎨ ᎤᎧᏁᎳ ᎬᎾᏬᏍᎬ ᎠᏂᎨᏴ. 
 
-ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ atsinuqowisgv ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ lyudetiyvda; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]]ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ansigaya ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ iyuwakodi ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ansigaya" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ.. ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
+ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ ᏱᏂᎬᏛᎾ, Ꮎ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ - ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎯᎠ ᏧᏓᎴᎾᎢ ᎠᏰᎵ ᎯᎠ ᎤᎳᏏᎩ ᎠᎴ ᎤᏁᎬ/ᎤᏓᏂᎳᎯᎨ ᎤᏍᏗᏰᎬ ᏑᏓᎴᎩ overall 'ᎤᏍᎪᎸ ᏌᎪᏂᎨ' ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᎾᎿ. ᏥᏄᏍᏗ ᏯᏛᎿ, ᏴᏫ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎬᏙᏗ ᎤᏙᎯᏳ ᎤᏔᏂᏗ ᎦᏙᎯ [[blond|ᎠᏍᎪᎸᎬ]] ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ ᎤᏙᎷᏬᏗ ᎤᏁᎬ ᎤᏍᏗᏰᎬ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎤᏍᏗᏰᎬ ᎯᎳᎪ ᎢᏳ aging. ᎩᎦᎨ ᎤᏍᏗᏰᎬ ᎤᏠᏱᎭ doesn't ᎠᎦᏔᎲᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎬᏙᏗ ᎢᏳᏕᏘᏴᏓ; ᎤᏟ ᎬᏰᎸᏗ ᎾᏍᎩ ᏗᏙᎳᎩ ᏃᏯᎭ ᏗᎧᏃᏗ ᎠᎴ afterward ᎠᎦᏔᎲᎠ ᎤᏁᎬ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎯᎠ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎴ ᎤᏁᎬ ᎦᎾᏄᎪᏨᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏍᏗᏰᎬ [[fiber|ᎠᏍᏗ ᎪᏢᏔᏅ]]ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎠᏨᏍᏛ ᏗᏗᎦᎴᏴ ᏂᏛᎴᏅᏓ ᎤᏃᎴ [[bubble|ᎥᏝ ᎪᎱᏍᏗ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏰᎵ [[medula]] ᎯᎠ ᎤᏍᏗᏰᎬ ᎠᏍᏗ ᎪᏢᏔᏅ. ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] [[hair loss|ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ]] ᎠᎴ thinning ᏂᎦᎥᏊ accompanies aging ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎠᏍᎦᏯ ᎠᎴ ᎠᎨᏴ, ᎠᎴ ᎾᏍᎩ ᎤᏤᎵ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎠᏰᎵ ᎢᏴ ᏂᎦᏛ ᎠᏂᏍᎦᏯ ᎠᎴ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[male pattern baldness|ᎠᏍᎦᏯ ᏗᏟᎶᏍᏙᏗ baldness]] ᎾᎥᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᎤᏅᏌ ᎠᎴ 50<ref name="halfofmen">[http://nl.newsbank.com/nl-search/we/Archives?s_site=ozarksnow&f_site=ozarksnow&f_sitename=Springfield+News-Leader+%28MO%29&p_theme=gannett&p_product=SNLB&p_action=search&p_field_base-0=&p_text_base-0=baldness&Search=Search&p_perpage=10&p_maxdocs=200&p_queryname=700&s_search_type=keyword&p_sort=_rank_%3AD&p_field_date-0=YMD_date&p_params_date-0=date%3AB%2CE&p_text_date-0= "Uncovering the bald truth about hair loss."] ''Springfield ᏗᏤᎢ-ᏗᏓᏘᏁᎯ'', ᎠᎾᏍᎬᏘ 10, 2005.  "ᎠᏰᎵ ᎢᏴ ᎠᏂᏍᎦᏯ" ᎠᎦᏎᏍᏙᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎯᎠ ᏴᏩᏁᎬ ᎢᎬᎢ ᎤᏔᎾ ᏧᎾᏕᎶᏆᏍᏗ ᎠᏰᎵ ᎠᎴ ᎧᎵ ᏗᎪᎥᎯ ᎠᎦᏎᏍᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ ᎾᏂᎥ ᏴᏫ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎪᎯ ᎢᏳᏗᎾ ᏄᏍᏛ ᏨᏓᏓ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏂᎪᏗᏗ ᎭᏫᎾᏗᏢ ᏐᎢ ᎾᏂᎥ ᏴᏫ.</ref>. ᎯᎠ ᏫᏚᏳᎪᏛ ᏫᏚᏳᎪᏛ [[baldness]] ᎨᏒᎢ ᏫᏚᏳᎪᏛ shared ᎾᎥᎢ ᏎᏍᏗ ᏐᎢ [[primate|ᎠᎵᏣᏙᎲᏍᎩ]] [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]], ᎠᎴ ᎨᏒᎢ ᏁᎵᏒ ᎤᎭ evolutionary ᎠᎲᏏᏓᏍᏗ.
 
-ᎾᏍᎩ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎠᏆᏤᎵ ᎤᏛᏅᎩ Ꮎ ᎤᏍᏗᏰᎬ ᎠᎴ ᏴᎩ ᏫᎵ ᎬᎵᏱᎵᏒ ᎠᏛᏏᏒ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎯᎸᏍᎩ ᎢᎦ ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎪᎯ ᎨᏒᎢ [[myth|ᎢᏰᎵᏍᏗᎢ]]; ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎦᏁᎦ ᏥᏄᏍᏗ ᎯᎠ dagatuwisdisgv ᏂᎦᏛ [[dehydrate]], ᎠᏃᏢᏍᎬ ᏴᎩ ᎠᎴ ᎤᏍᏗᏰᎬ ᎤᏟ ᎢᎦᎢ ᏧᏓᏃᏣᎵ.
+ᎾᏍᎩ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎠᏆᏤᎵ ᎤᏛᏅᎩ Ꮎ ᎤᏍᏗᏰᎬ ᎠᎴ ᏴᎩ ᏫᎵ ᎬᎵᏱᎵᏒ ᎠᏛᏏᏒ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎯᎸᏍᎩ ᎢᎦ ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎪᎯ ᎨᏒᎢ [[myth|ᎢᏰᎵᏍᏗᎢ]]; ᎯᎠ ᎦᎾᏄᎪᏨᎢ ᎤᏛᏏᏗᏒ ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎦᏁᎦ ᏥᏄᏍᏗ ᎯᎠ ᏓᎦᏚᏫᏍᏗᏍᎬ ᏂᎦᏛ [[dehydrate]], ᎠᏃᏢᏍᎬ ᏴᎩ ᎠᎴ ᎤᏍᏗᏰᎬ ᎤᏟ ᎢᎦᎢ ᏧᏓᏃᏣᎵ.
 
 === Pathological ᏓᏓᏛᎾᏍᏗᏍᎬ ᎾᎿ ᎤᏍᏗᏰᎬ ===
-ᏄᏬᏗ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[cancer|ᎠᏓᏰᏍᎩ]] [[chemotherapy]] ᎢᏳᏓᎵᎭ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, noticeable ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ [[eyebrow]], ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎠᏓᎯᏍᏗ ᏂᎦᏛ ᎤᎵᏍᏓᎯᎨ dividing ᎦᏁᎸ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎯᎠ cancerous ᎠᏂᏏᏴᏫᎭ. ᏐᎢ [[disease|ᎥᏳᎩ]]ᎠᎴ [[Physical trauma|trauma]]ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎠᎴ ᏂᎪᎯᎸ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, ᎢᏳᏍᏗᏊ ᏂᎦᎥᏊ ᎠᎴ ᎭᏫᎾᏗᏢ patches.
+ᏄᏬᏗ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[cancer|ᎠᏓᏰᏍᎩ]] [[chemotherapy]] ᎢᏳᏓᎵᎭ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, noticeable ᎾᎿ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ [[eyebrow]], ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎠᏓᎯᏍᏗ ᏂᎦᏛ ᎤᎵᏍᏓᎯᎨ dividing ᎦᏁᎸ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎯᎠ cancerous ᎠᏂᏏᏴᏫᎭ. ᏐᎢ [[disease|ᎥᏳᎩ]] ᎠᎴ [[Physical trauma|trauma]]ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᎢᎬᏱ ᎨᏰᎯ ᎠᎴ ᏂᎪᎯᎸ ᎤᏲᎱᏎᎸ ᎤᏍᏗᏰᎬ, ᎢᏳᏍᏗᏊ ᏂᎦᎥᏊ ᎠᎴ ᎭᏫᎾᏗᏢ patches.
 
-ᎯᎠ ᎤᏍᏗᏰᎬ ᎤᏒᏙᏂ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎾᏅ ᎤᏙᎯᏳ [[poison|ᎠᏓᎯᎯ]]ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎢᏧᎳᎭ ᎯᏍᎩ, ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ Col. [[Lafayette Baker]], ᎦᎪ ᎤᏲᎱᏒ [[July 3|ᎫᏰᏉᏂ 3]], [[1868]], ᎬᏙᏗ [[atomic|ᎠᏍᏓᏩᏛᏍᏗ]] [[absorption|ᎤᎾᏓᏟᏌᏅ]] [[spectrophotometer]] ᎤᏓᏎᎮᎸᎩ ᎯᎠ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᎸᎩ ᎾᎥᎢ ᎤᏁᎬ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]]. ᎯᎠ ᎠᎴᏂᏍᎬ ᎠᏓᎳᏩᏎᏗ ᏥᏄᏍᏛᎩ [[Wallace Pollock|Wally Pollack]], Baker ᎤᏤᎵ ᏗᎾᏓᏅᏟ-ᎭᏫᎾᏗᏢ-ᏗᎧᎿᏩᏛᏍᏗ. ᎧᎵ ᏗᏙᎳᎩ ᏗᏕᎶᏆᏍᎩ. ᎠᏨᏍᏛ . Neff, Pollack ᎠᏰᎲ ᎦᏅᎾᏩ Baker ᎤᏤᎵ [[beer|ᎠᏬᎩᎸᏍᎩ]] ᎬᏙᏗ ᎾᏍᎩ ᎦᏬᎯᎸᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏯᏅᏓ, ᎠᎴ sqohitsuqui tsudetiyvdi ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎢᏯᏔᏬᏍᏔᏅ ᏕᎬᏔᏛ ᎠᏍᎩᎾᏗᏍᏗ ᎤᏓᏎᎮᎸᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏲᎱᏒ ᎠᏍᎦᏯ ᎤᏤᎵ ᎤᏍᏗᏰᎬ. ᎠᎨᏴ. Baker ᎤᏤᎵ [[diary|ᎢᏳ ᎢᎪᎯ]] ᎤᏁᎵᏒᎯ ᎦᎫᏍᏛᏗ Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎠᏍᎩᎾᏗᏍᏗ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎪᏪᎵᎠ ᎯᎳᎪ ᎾᏍᎩ ᎠᎨᏴ ᎠᏩᏛᏗ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᎨᏴ ᏗᎾᏓᏅᏟ ᎤᏤᎵ suitcoat ᏌᏊ ᎢᎦ.
+ᎯᎠ ᎤᏍᏗᏰᎬ ᎤᏒᏙᏂ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎾᏅ ᎤᏙᎯᏳ [[poison|ᎠᏓᎯᎯ]]ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎢᏧᎳᎭ ᎯᏍᎩ, ᎤᎶᏐᏅ ᎠᏲᎱᎯᏍᏗ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ Col. [[Lafayette Baker]], ᎦᎪ ᎤᏲᎱᏒ [[July 3|ᎫᏰᏉᏂ 3]], 1868, ᎬᏙᏗ [[atomic|ᎠᏍᏓᏩᏛᏍᏗ]] [[absorption|ᎤᎾᏓᏟᏌᏅ]] [[spectrophotometer]] ᎤᏓᏎᎮᎸᎩ ᎯᎠ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᎸᎩ ᎾᎥᎢ ᎤᏁᎬ [[arsenic|ᎠᏍᎩᎾᏗᏍᏗ]]. ᎯᎠ ᎠᎴᏂᏍᎬ ᎠᏓᎳᏩᏎᏗ ᏥᏄᏍᏛᎩ [[Wallace Pollock|Wally Pollack]], Baker ᎤᏤᎵ ᏗᎾᏓᏅᏟ-ᎭᏫᎾᏗᏢ-ᏗᎧᎿᏩᏛᏍᏗ. ᎧᎵ ᏗᏙᎳᎩ ᏗᏕᎶᏆᏍᎩ. ᎠᏨᏍᏛ . Neff, Pollack ᎠᏰᎲ ᎦᏅᎾᏩ Baker ᎤᏤᎵ [[beer|ᎠᏬᎩᎸᏍᎩ]] ᎬᏙᏗ ᎾᏍᎩ ᎦᏬᎯᎸᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎢᏯᏅᏓ, ᎠᎴ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎣᏂᏯᎨᏍᏙᏗ ᎢᏯᏔᏬᏍᏔᏅ ᏕᎬᏔᏛ ᎠᏍᎩᎾᏗᏍᏗ ᎤᏓᏎᎮᎸᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏲᎱᏒ ᎠᏍᎦᏯ ᎤᏤᎵ ᎤᏍᏗᏰᎬ. ᎠᎨᏴ. Baker ᎤᏤᎵ [[diary|ᎢᏳ ᎢᎪᎯ]] ᎤᏁᎵᏒᎯ ᎦᎫᏍᏛᏗ Ꮎ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎠᏍᎩᎾᏗᏍᏗ, ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎪᏪᎵᎠ ᎯᎳᎪ ᎾᏍᎩ ᎠᎨᏴ ᎠᏩᏛᏗ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎠᎨᏴ ᏗᎾᏓᏅᏟ ᎤᏤᎵ suitcoat ᏌᏊ ᎢᎦ.
 
 === ᎾᏯᏛᎲᎢ ===
 
@@ -67,27 +67,27 @@ g ᎤᏍᏗᏰᎬ]]
 [[Image:Hair.jpg|right|thumb|120px|ᏴᏫ ᏂᏛᎴᏅᏓ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎤᎭ ᎦᎾᎬᎢ ᏧᏓᎴᏅᏓ ᏫᎦᎶᎯᏍᏗ  ᎠᏓᏁᎶᏗ, ᎠᎴ "ᎠᏣᏅᏗ," ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ.]]
 ᎯᎠ ᎤᏍᏆᏂᎪᏗᏳ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᏂᏴᏫ ᎤᎭ ᎤᏁᏉᏤᎸ ᎤᎵᏍᎨᏛ ᎦᏛᎬᎢ ᎭᏫᎾᏗᏢ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎡᏙᎠ societies ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏓᏁᎸ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎠᎴᏫᏍᏙᏗ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ. ᎯᎠ [[haircut]] ᎤᎭ ᏂᎪᎯᎸᎢ ᏚᎾᏁᎶᏅ ᎦᏛᎬᎢ [[cultural]] ᎠᎴ [[social role of hair|ᎠᎾᏓᏟᏏᏍᎬ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ]]. 
 
-ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]] ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ shaved, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᏗᏂᏲᎵ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎤᏦᎠᏎᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ. ᏗᏂᏲᎵ ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎠᎦᏍᎦᏂ ᎬᏙᏗ ᎦᏅᎯᏓ ᏓᎦᏏ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᏂᏛᎴᏅᏓ ᏌᏊ ᎢᎦᏛ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎠᎴᏂᏙᎲ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᏣᏔᏊ Ꮎ ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎭᏫᎾᏗᏢ Egyptian ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ ᏓᎾᏛᏁᎵᏍᎬ ᎢᏯᏓᏛᏁᎸ ᏗᏂᏲᎵ ᏥᏄᏍᏗ ᏂᎪᎯᎸᎢ ᏙᏄᏭᎢ ᎪᎯ "[[sidelock]]". ᎤᎪᏗᏗ ᎤᏔᎾ ansigaya ᎠᎴ ᎠᏂᎨᏴ ᎠᏍᏆᏂᎪᏔᏅ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ ᏂᎪᎯᎸᎢ shaved ᎾᏍᎩᎾᎢ ᏄᏦᏎᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎠᏍᎪᎵ ᎠᏎᏊᎢ [[lice|ᏘᎾ]], ᎾᎯᏳᎢ ᏙᏄᏭᎢ [[wig|ᎫᏢᎥᏍᎬ]] ᎭᏫᎾᏗᏢ ᏴᏫ ᎤᏁᏓᏍᏗ. 
+ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]] ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ shaved, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ ᏗᏂᏲᎵ, ᏥᏄᏍᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎤᏦᎠᏎᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ. ᏗᏂᏲᎵ ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎠᎦᏍᎦᏂ ᎬᏙᏗ ᎦᏅᎯᏓ ᏓᎦᏏ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᏂᏛᎴᏅᏓ ᏌᏊ ᎢᎦᏛ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ ᎠᎴᏂᏙᎲ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏧᏣᏔᏊ Ꮎ ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ ᎭᏫᎾᏗᏢ Egyptian ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩᎾᎢ ᏓᎾᏛᏁᎵᏍᎬ ᎢᏯᏓᏛᏁᎸ ᏗᏂᏲᎵ ᏥᏄᏍᏗ ᏂᎪᎯᎸᎢ ᏙᏄᏭᎢ ᎪᎯ "[[sidelock]]". ᎤᎪᏗᏗ ᎤᏔᎾ ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ ᎠᏍᏆᏂᎪᏔᏅ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ ᏂᎪᎯᎸᎢ shaved ᎾᏍᎩᎾᎢ ᏄᏦᏎᏛᎾ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎦᎾᏭ ᎠᎴ ᎠᏍᏆᏂᎪᏙᏗ ᎯᎠ ᎠᏍᎪᎵ ᎠᏎᏊᎢ [[lice|ᏘᎾ]], ᎾᎯᏳᎢ ᏙᏄᏭᎢ [[wig|ᎫᏢᎥᏍᎬ]] ᎭᏫᎾᏗᏢ ᏴᏫ ᎤᏁᏓᏍᏗ. 
 
-ᎭᏫᎾᏗᏢ [[ancient Greece|ᎯᎸᎯᏳᎢ Greece]] ᎠᎴ [[ancient Rome|ᎯᎸᎯᏳᎢ Rome]] ansigaya ᎠᎴ ᎠᏂᎨᏴ ᎦᏳᎳ differed ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ haircuts. ᎯᎠ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᏂᎨᏴ ᏥᏄᏍᏛᎩ ᎦᏅᎯᏓ ᎠᎴ ᎤᎾᏌᏁᏒ ᎦᏐᎯ ᎾᎾᎯ [[chignon|ᎫᏢᎥᏍᎬ]]. ᎤᎪᏗᏗ ᏄᎵᏂᎬᎬ ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎩᎦᎨ ᎬᏙᏗ [[henna]] ᎠᎴ sprinkled ᎾᏍᎩ ᎬᏙᏗ [[gold|ᎠᏕᎸ ᏓᎶᏂᎨ]] ᏓᏪᎳᎩᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏣᏅᏗ ᎾᏍᎩ ᎬᏙᏗ ᎢᏤᎢ ᎠᏂᏥᎸᏍᎩ. Men’s ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᏍᏆᎳᎢ ᎠᎴ ᎢᏧᎳᎭ ᎢᏳᏓᎵᎭᏊ shaved. ᎭᏫᎾᏗᏢ Rome [[hairdressing]] ᎠᏓᏁᏟᏴᏍᏗ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎠᎴ ᎯᎠ [[upper class|ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]es ᎨᏒᎩ ᎤᏁᏙᎸ ᎾᎥᎢ [[slavery|ᎠᏥᎾᏝᎢ]]ᎠᎴ ᎤᏓᏩᏛᎯᏙᎸᎩ ᏴᏫ ᎤᏁᏓᏍᏗ [[barber|ᏗᏓᏍᏙᏰᏍᎩ]] ᏧᏂᎸᏫᏍᏓᏁᏗ. 
+ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Greece|ᎪᎢ]] ᎠᎴ ᎯᎸᎯᏳᎢ [[Rome|ᎶᎻ]] ᎠᏂᏍᎦᏯ ᎠᎴ ᎠᏂᎨᏴ ᎦᏳᎳ differed ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᏗᎬᏩᎶᏒ ᎤᎾᏤᎵ haircuts. ᎯᎠ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ ᎠᏂᎨᏴ ᏥᏄᏍᏛᎩ ᎦᏅᎯᏓ ᎠᎴ ᎤᎾᏌᏁᏒ ᎦᏐᎯ ᎾᎾᎯ [[chignon|ᎫᏢᎥᏍᎬ]]. ᎤᎪᏗᏗ ᏄᎵᏂᎬᎬ ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎩᎦᎨ ᎬᏙᏗ [[henna]] ᎠᎴ sprinkled ᎾᏍᎩ ᎬᏙᏗ [[gold|ᎠᏕᎸ ᏓᎶᏂᎨ]] ᏓᏪᎳᎩᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏣᏅᏗ ᎾᏍᎩ ᎬᏙᏗ ᎢᏤᎢ ᎠᏂᏥᎸᏍᎩ. Men’s ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᏍᏆᎳᎢ ᎠᎴ ᎢᏧᎳᎭ ᎢᏳᏓᎵᎭᏊ shaved. ᎭᏫᎾᏗᏢ Rome [[hairdressing]] ᎠᏓᏁᏟᏴᏍᏗ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᎠᎴ ᎯᎠ [[upper class|ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]]es ᎨᏒᎩ ᎤᏁᏙᎸ ᎾᎥᎢ [[slavery|ᎠᏥᎾᏝᎢ]] ᎠᎴ ᎤᏓᏩᏛᎯᏙᎸᎩ ᏴᏫ ᎤᏁᏓᏍᏗ [[barber|ᏗᏓᏍᏙᏰᏍᎩ]] ᏧᏂᎸᏫᏍᏓᏁᏗ. 
 [[Image:Maasai_tribe.jpg|left|thumb|170px|Maasai ᏓᏄᏩ ᎠᎾᎵᎯ ᎬᏙᏗ ᎤᎾᏤᎵ ᎧᏃᎮᎸᎯ ᎤᏍᏗᏰᎬ styling]]
 
 <!-- The tradition of women having long hair and men having short hair is usually traced back to times of war, where having long hair meant that one was weak and was to be spared. Generally men, being viewed as strong and dominant, would cut their hair short, while women who were considered inferior and weaker, would keep their hair long so that they would be spared. -->
 
-ᎯᎠ ᎧᏃᎮᎸᎯ ᎤᏍᏗᏰᎬ styling ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᎦᏛᎭ [[Africa]] ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏁᏗ ᎤᏍᏆᏂᎪᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎳᎪ ᏴᏫ dealt ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎯᎠ [[Maasai]] [[warrior|ᏓᏄᏩ ᎠᎾᎵᎯ]]ᏗᎧᏁᎸ ᎯᎠ ᎢᎬᏱᏗᏢ ᎤᏍᏗᏰᎬ ᎾᎾᎯ ᎾᎿ ᏕᎨᏒ ᎤᏍᏗ [[braid|ᎤᏇᎷᎬ]]ᎾᎯᏳᎢ ᎯᎠ ᎦᏐᎯ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᎾᏓᏁᎲ ᎠᏛᏍᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎠᏂᎨᏴ ᎠᎴ ᎬᏙᏗ-ᏓᏄᏩ ᎠᎾᎵᎯ, ᏱᏂᎬᏛᎾ, shaved ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ. ᎤᎪᏗᏗ ᎠᏂᎳᏍᏓᎸ ᏄᎵᏂᎬᎬ ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ ᎩᎦᎨ ᎡᎶᎯ ᎠᎴ [[grease|ᎪᎢ]]; ᎢᎦᏛ stiffened ᎾᏍᎩ ᎬᏙᏗ [[animal|gantlai]] [[dung|ᎦᎳᏅᎯ]]. 
+ᎯᎠ ᎧᏃᎮᎸᎯ ᎤᏍᏗᏰᎬ styling ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᎦᏛᎭ [[Africa]] ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏁᏗ ᎤᏍᏆᏂᎪᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎳᎪ ᏴᏫ dealt ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎯᎠ [[Maasai]] [[warrior|ᏓᏄᏩ ᎠᎾᎵᎯ]]ᏗᎧᏁᎸ ᎯᎠ ᎢᎬᏱᏗᏢ ᎤᏍᏗᏰᎬ ᎾᎾᎯ ᎾᎿ ᏕᎨᏒ ᎤᏍᏗ [[braid|ᎤᏇᎷᎬ]]ᎾᎯᏳᎢ ᎯᎠ ᎦᏐᎯ ᎤᏍᏗᏰᎬ ᏥᏄᏍᏛᎩ ᎠᎾᏓᏁᎲ ᎠᏛᏍᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎠᏂᎨᏴ ᎠᎴ ᎬᏙᏗ-ᏓᏄᏩ ᎠᎾᎵᎯ, ᏱᏂᎬᏛᎾ, shaved ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ. ᎤᎪᏗᏗ ᎠᏂᎳᏍᏓᎸ ᏄᎵᏂᎬᎬ ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ ᎩᎦᎨ ᎡᎶᎯ ᎠᎴ [[grease|ᎪᎢ]]; ᎢᎦᏛ stiffened ᎾᏍᎩ ᎬᏙᏗ [[animal|ᎦᏂᏝᎢ]] [[dung|ᎦᎳᏅᎯ]]. 
 
-ᎠᎵᎪᏁᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ cultural ᏄᏍᏗᏓᏅ ᎤᎭ ᏂᎪᎯᎸᎢ influenced ᎤᏂᎸᏉᏗ ᎤᏍᏗᏰᎬ ᏧᎾᏣᏅᏙᏗ. ᏂᏛᎴᏅᏓ ᎯᎠ [[17th Century|17th sqohitsuqui tsudetiyvdi]] ᎾᎾᎯ ᎯᎠ ᎢᎬᏱ [[19th Century|19th sqohitsuqui tsudetiyvdi]] ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ansigaya ᎤᎭ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎢᏳᏓᎵᎭ ᏗᎧᏁᎸ-ᎦᏐᎯ ᎾᎾᎯ [[ponytail]]. ᏗᎦᏃᏣᎵ ᎦᏅᎯᏓ-haired ansigaya ᎠᏠᏯᏍᏛ [[Oliver Cromwell]], [[George Washington]] ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᏤᎵ ᎠᏲᎵᎨ ᏧᏕᏘᏴᏓ [[Napoleon Bonaparte|ᎠᏍᏆᏂᎪᏒᏗ Bonaparte]] ᎠᏰᎲ ᎦᏅᎯᏓ ᎠᎴ flamboyant ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎤᏓᎷᎸ [[World War I|ᎡᎶᎯ ᏓᏄᏩ ᎠᏯ]] ansigaya ᏂᎦᎥᏊ ᎠᏰᎲ ᎦᏅᎯᏓᎨ ᎤᏍᏗᏰᎬ ᎠᎴ [[beard|ᎠᎭᏄᎸᏒ]]. ᎯᎠ [[trench warfare|ᎦᏓᎷᎦᏅ ᏓᎾᏩᏄᏁᎯ]] ᎠᏰᎵ [[1914]] ᎠᎴ [[1918]] ᏗᏄᏪᏍᏗ ansigaya [[lice|ᏘᎾ]] ᎠᎴ [[flea|ᏣᏑᎦ]] [[infestation|ᎥᏳᎩ]], ᎦᏙ ᎤᏍᏗ prompted ᎯᎠ ᎠᏓᏅᏍᏗ ᎠᏰᎳᏍᏗ ᎤᏍᏗᏰᎬ ᏍᏆᎳᎢ, ᎠᏃᏢᏍᎬ ᎢᏚᏳᎪᏛ Ꮎ ᎤᎭ persisted.
+ᎠᎵᎪᏁᏗ ᎠᎾᏓᏟᏏᏍᎬ ᎠᎴ cultural ᏄᏍᏗᏓᏅ ᎤᎭ ᏂᎪᎯᎸᎢ influenced ᎤᏂᎸᏉᏗ ᎤᏍᏗᏰᎬ ᏧᎾᏣᏅᏙᏗ. ᏂᏛᎴᏅᏓ ᎯᎠ [[17th Century|17th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎾᎾᎯ ᎯᎠ ᎢᎬᏱ [[19th Century|19th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]] ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎯᎠ ᎢᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ᎠᏂᏍᎦᏯ ᎤᎭ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎢᏳᏓᎵᎭ ᏗᎧᏁᎸ-ᎦᏐᎯ ᎾᎾᎯ [[ponytail]]. ᏗᎦᏃᏣᎵ ᎦᏅᎯᏓ-haired ᎠᏂᏍᎦᏯ ᎠᏠᏯᏍᏛ [[Oliver Cromwell]], [[George Washington]] ᎠᎴ ᎾᎯᏳᎨᏒ ᎤᏤᎵ ᎠᏲᎵᎨ ᏧᏕᏘᏴᏓ [[Napoleon Bonaparte]] ᎠᏰᎲ ᎦᏅᎯᏓ ᎠᎴ flamboyant ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᎤᏓᎷᎸ [[World War I|ᎡᎶᎯ ᏓᏄᏩ ᎠᏯ]] ᎠᏂᏍᎦᏯ ᏂᎦᎥᏊ ᎠᏰᎲ ᎦᏅᎯᏓᎨ ᎤᏍᏗᏰᎬ ᎠᎴ [[beard|ᎠᎭᏄᎸᏒ]]. ᎯᎠ [[trench warfare|ᎦᏓᎷᎦᏅ ᏓᎾᏩᏄᏁᎯ]] ᎠᏰᎵ 1914 ᎠᎴ 1918 ᏗᏄᏪᏍᏗ ᎠᏂᏍᎦᏯ [[lice|ᏘᎾ]] ᎠᎴ [[flea|ᏣᏑᎦ]] [[infestation|ᎥᏳᎩ]], ᎦᏙ ᎤᏍᏗ prompted ᎯᎠ ᎠᏓᏅᏍᏗ ᎠᏰᎳᏍᏗ ᎤᏍᏗᏰᎬ ᏍᏆᎳᎢ, ᎠᏃᏢᏍᎬ ᎢᏚᏳᎪᏛ Ꮎ ᎤᎭ persisted.
 
-ᏱᏂᎬᏛᎾ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ Ꮎ ᏍᏆᎳᎢ ᎤᏍᏗᏰᎬ ᎾᎿ ansigaya ᎤᎭ ᏭᏪᏙᎢ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᎨᏔᏗᏍᏗ, ᏥᏄᏍᏗ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᏗᏓᏂᏱᏍᎩ ᎠᎴ ᏐᎢ ᎠᏂᏌᏙᏯᏍᎩ Ꮎ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎪᎯᏳᎯ ᎠᎴ ᏓᏕᏲᎲᏍᎬ. ᏗᎦᏟᏌᏅᎯ, ᏗᎨᏥᎾᏝᎢ ᎠᎴ ᎤᏄᎸᎲᏍᎩ armies ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎵᏍᏙᏯᏗ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[medieval|lyudetiyvda]] [[Europe]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].
+ᏱᏂᎬᏛᎾ ᎾᏍᎩ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᏓᏌᎳᏙᏗ Ꮎ ᏍᏆᎳᎢ ᎤᏍᏗᏰᎬ ᎾᎿ ᎠᏂᏍᎦᏯ ᎤᎭ ᏭᏪᏙᎢ ᎦᏌᏙᏯᏍᏗ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᎨᏔᏗᏍᏗ, ᏥᏄᏍᏗ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᏗᏓᏂᏱᏍᎩ ᎠᎴ ᏐᎢ ᎠᏂᏌᏙᏯᏍᎩ Ꮎ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎪᎯᏳᎯ ᎠᎴ ᏓᏕᏲᎲᏍᎬ. ᏗᎦᏟᏌᏅᎯ, ᏗᎨᏥᎾᏝᎢ ᎠᎴ ᎤᏄᎸᎲᏍᎩ armies ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᎵᏍᏙᏯᏗ ᎤᎾᏤᎵ ᏗᏂᏍᎪᎵ, ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-[[medieval|ᎢᏳᏕᏘᏴᏓ]] [[Europe|ᏳᎳᏛ]] ᎠᎴ [[China|ᎠᎦᎾᏫᏗᏍᎩ]].
 
-ᎠᏛᏏᏒ ᎠᎴ ᏙᏄᏭᎢ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎨᏒᎢ lifestyle ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᏧᏆᏗᏅᏓ ᏗᏍᏆᎸᏙᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏄᎾᏛᏅ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ [[Western Culture|ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ]] ᎢᏳᏩᎣᏗ [[World War One|ᎡᎶᎯ ᏓᏄᏩ ᏌᏊ]]. ᎤᎪᏗᏗ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ ᎠᏂᏙᎾᎥ [[Pentecostal]] ᏚᎾᏓᏟᏌᎲ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ [[trim|ᎪᏢᎯᏐᏗ]]ming ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎤᎶᏐᏅ ᏧᎾᏍᏗ. ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏕᏲᎲ ᎯᎠ [[1960s]] ᎤᏗᏅᏒᎩ ᏅᎪᏢᎯᏐᏗᏱ tohi adedi ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ.  ᎤᏍᏗᏰᎬ ᏂᎦᏅᎯᏒ ᎨᏒᎢ ᎡᎷᏪᎢ (ᎭᏫᎾᏗᏢ ᎢᏯᏏᏔᏗᏍᏗ ᎠᎴ centimeters) ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] ᎠᏍᏓᏅᏅ ᎾᎿ ᎯᎠ [[forehead|ᎢᎬᏱᏗᏢ ᎠᏍᎪᎵ]] ᎦᎸᎳᏗᏢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ ᎡᎳᏗ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᎠᏯᏖᏃᎯ. ᏰᎵᏊ ᏗᏙᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᎠᎴ lyudetiyvda ᏂᎦᏅᎯᏒ (midpoint ᎾᎿ ᎯᎠ ᎠᏰᎸ, ᎭᏢᏃ ᎯᎠ [[buttock|ᎣᏂᏗᏢ]]ᏗᏠᎯᏍᏗ ᎯᎠ [[thigh]]), [[waist|ᎤᏓᏠᏍᏛ]] ᏂᎦᏅᎯᏒ, [[hip|ᎠᎧᏍᎨᏂ]] ᏂᎦᏅᎯᏒ, ᎠᎴ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-thigh. ᎾᏍᎩ ᎠᎩᏍᎪᎢ ᎬᏩᏚᏫᏛ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᎢᏳᏓᎵᎭ ᎪᏢᎯᏐᏗ, ᎠᏛᏍᎬ ᏌᏊ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎤᎵᏍᏛ ᏂᎦᏅᎯᏒ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ ᎧᎵ ᏗᏙᎳᎩ [[genetics|ᎠᏛᎯᏍᏙᏗ]] ᎠᎴ overall ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎡᏆ [[internet communities|ᎧᎾᏁᏍ ᎾᎥ ᏄᎾᏓᎸ]] ᎠᎴ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ lifestyle.
+ᎠᏛᏏᏒ ᎠᎴ ᏙᏄᏭᎢ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ ᎨᏒᎢ lifestyle ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᏧᏆᏗᏅᏓ ᏗᏍᏆᎸᏙᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏄᎾᏛᏅ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ [[Western Culture|ᏭᏕᎵᎬᏗᏢ ᎥᎦᏔᎲᎢ]] ᎢᏳᏩᎪᏗ [[World War One|ᎡᎶᎯ ᏓᏄᏩ ᏌᏊ]]. ᎤᎪᏗᏗ ᎠᏂᎨᏴ ᎭᏫᎾᏗᏢ ᎠᏂᏙᎾᎥ [[Pentecostal]] ᏚᎾᏓᏟᏌᎲ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ trimming ᎤᎾᏤᎵ ᎤᏍᏗᏰᎬ ᎤᎶᏐᏅ ᏧᎾᏍᏗ. ᎯᎠ ᎠᎾᏓᏟᏏᏍᎬ ᎠᏕᏲᎲ ᎯᎠ 1960s ᎤᏗᏅᏒᎩ ᏅᎪᏢᎯᏐᏗᏱ ᏙᎯ ᎠᏕᏗ ᎤᏍᏗᏰᎬ ᎤᏛᏏᏗᏒ. ᎤᏍᏗᏰᎬ ᏂᎦᏅᎯᏒ ᎨᏒᎢ ᎡᎷᏪᎢ (ᎭᏫᎾᏗᏢ ᎢᏯᏏᏔᏗᏍᏗ ᎠᎴ centimeters) ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ [[scalp|ᎠᏥᏍᏓᏁᎦᎸᏓ]] ᎠᏍᏓᏅᏅ ᎾᎿ ᎯᎠ [[forehead|ᎢᎬᏱᏗᏢ ᎠᏍᎪᎵ]] ᎦᎸᎳᏗᏢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎠᏍᎪᎵ ᎠᎴ ᎡᎳᏗ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᎠᏯᏖᏃᎯ. ᏰᎵᏊ ᏗᏙᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎤᏍᏗᏰᎬ ᎠᏛᏏᏒ ᎠᎴ ᎢᏳᏕᏘᏴᏓ ᏂᎦᏅᎯᏒ (midpoint ᎾᎿ ᎯᎠ ᎠᏰᎸ, ᎭᏢᏃ ᎯᎠ [[buttock|ᎣᏂᏗᏢ]]ᏗᏠᎯᏍᏗ ᎯᎠ [[thigh]]), [[waist|ᎤᏓᏠᏍᏛ]] ᏂᎦᏅᎯᏒ, [[hip|ᎠᎧᏍᎨᏂ]] ᏂᎦᏅᎯᏒ, ᎠᎴ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-thigh. ᎾᏍᎩ ᎠᎩᏍᎪᎢ ᎬᏩᏚᏫᏛ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ, ᎠᏠᏯᏍᏗᏍᎩ ᎢᏳᏓᎵᎭ ᎪᏢᎯᏐᏗ, ᎠᏛᏍᎬ ᏌᏊ ᎤᏤᎵ ᎤᏍᏗᏰᎬ ᎤᏓᏠᏍᏛ ᏂᎦᏅᎯᏒ. ᎤᎵᏍᏛ ᏂᎦᏅᎯᏒ varies ᏂᏛᎴᏅᏓ ᎠᏏᏴᏫ ᎠᏏᏴᏫ ᎧᎵ ᏗᏙᎳᎩ [[genetics|ᎠᏛᎯᏍᏙᏗ]] ᎠᎴ overall ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎡᏆ [[internet communities|ᎧᎾᏁᏍ ᎾᎥ ᏄᎾᏓᎸ]] ᎠᎴ ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎠᏓᎦᎳᏍᏓᏗᏍᏗ ᎠᎴ ᎠᎵᏍᏕᎸᏗ ᎦᏅᎯᏓ ᎤᏍᏗᏰᎬ lifestyle.
 
 === ᎠᏰᎸ ᎤᏍᏗᏰᎬ ===
-ᎯᎠ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎾᏍᎩ ᎾᏍᏇ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎠᎴ ᎢᏧᏩᎣᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎤᏂᎪᏗᏗ [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]] ᎾᎿ ansigaya ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ [[virility|ᎤᏂᎪᏗᏗ]] ᎠᎴ [[masculinity]]; ᏐᎢ societies ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎪᏪᎶᏗ youthfulness.
+ᎯᎠ ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎤᏍᏗᏰᎬ ᎾᎿ ᎯᎠ ᏴᏫ ᎠᏰᎸ ᎾᏍᎩ ᎾᏍᏇ ᏧᏓᎴᎾᎯ ᎠᏰᎵ ᏄᏓᎴᎿᎥ ᎥᎦᏔᎲᎢ ᎠᎴ ᎢᏧᏩᎪᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎤᏂᎪᏗᏗ [[chest hair|ᎦᏁᏥ ᎤᏍᏗᏰᎬ]] ᎾᎿ ᎠᏂᏍᎦᏯ ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ [[virility|ᎤᏂᎪᏗᏗ]] ᎠᎴ [[masculinity]]; ᏐᎢ societies ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎪᏪᎶᏗ youthfulness.
 
-ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], ᏴᏫ ᎾᏍᎩ ᎠᏰᎸᏅ ᎠᎧᎵᏬᎯ ᎤᏩᎾᏕᏍᎩ, ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ [[beauty|ᎤᏬᏚ]]. ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Egyptian ᎠᎨᏴ ᎤᎩᏒᎩ ᎡᏆ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏏᏴᏫ ᎤᏍᏗᏰᎬ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ ᎠᏰᎸ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎠᎨᏴ ᎠᏍᎪᎵ (ᎠᎴ ᎢᏧᎳᎭ ᎪᎯ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎫᏢᎥᏍᎬ<ref name="egypt">Dersin, Denise, ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ. (Eds.) (1996). ''ᎦᏙ ᎤᏍᏗ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏛᎩ ᎾᏍᎩᏯᎢ ᎾᎿ ᎯᎠ adel didiyi ᎯᎠ Nile''. Richmond, Virginia: iyuwakodi-ᎥᎴᏂᏙᎲ ᏗᎪᏪᎵ.</ref>). ᎯᎠ [[ancient Greece|ᎯᎸᎯᏳᎢ ᎠᎪᎢ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎯ ᎤᏩᎾᏕᏍᎩ ᎤᎵᎶᎯ, ᎠᎦᏎᏍᏗᏍᎬ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᎾᏍᏋ ᏗᎦᎳᏫᎩ [[youth|ᎠᏛᏍᎩ]] ᎠᎴ ᎤᏬᏚ. ᎪᎯ ᎨᏒᎢ reflected ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎠᎨᏴ ᎤᏙᏢᏒ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ pubic ᎤᏍᏗᏰᎬ. [[Islam]] ᏓᏓᏁᏤᎸ ᎤᎪᏗᏗ ᎤᏬᎯᏳᏒ ᎬᏙᏗ ᎪᎯᏳᎯ ᎤᏍᏗᏰᎬ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎫᏢᎥᏍᎬ ᎤᏍᏗᏰᎬ ᎾᎥᎢ ᎠᏂᎨᏴ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ armpit ᎠᎴ pubic ᎤᏍᏗᏰᎬ (ᎠᎪᏩᏛᏗ [[fitrah|ᎯᏍᎩ ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ᏫᏚᏳᎪᏛ  fitrah]]). 
+ᎭᏫᎾᏗᏢ [[ancient Egypt|ᎯᎸᎯᏳᎢ Egypt]], ᏴᏫ ᎾᏍᎩ ᎠᏰᎸᏅ ᎠᎧᎵᏬᎯ ᎤᏩᎾᏕᏍᎩ, ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᏥᏄᏍᏗ ᎯᎠ ᏰᎵᏊ ᏗᏙᎳᎩ [[beauty|ᎤᏬᏚ]]. ᎦᎸᎳᏗᏢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Egyptian ᎠᎨᏴ ᎤᎩᏒᎩ ᎡᏆ ᎤᏓᏍᏓᏲᎯᏎᏗ ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎾᏍᎩ ᎠᎨᏴ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎭ ᏏᏴᏫ ᎤᏍᏗᏰᎬ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ ᎠᏰᎸ, ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᏚᎢ ᎾᏍᎩ ᎠᎨᏴ ᎠᏍᎪᎵ (ᎠᎴ ᎢᏧᎳᎭ ᎪᎯ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎫᏢᎥᏍᎬ<ref name="egypt">Dersin, Denise, ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ. (Eds.) (1996). ''ᎦᏙ ᎤᏍᏗ ᎥᎴᏂᏙᎲ ᏥᏄᏍᏛᎩ ᎾᏍᎩᏯᎢ ᎾᎿ ᎯᎠ adel didiyi ᎯᎠ Nile''. Richmond, Virginia: ᎢᏳᏩᎪᏗ-ᎥᎴᏂᏙᎲ ᏗᎪᏪᎵ.</ref>). ᎯᎠ [[ancient Greece|ᎯᎸᎯᏳᎢ ᎠᎪᎢ]] ᎣᏂᏯᎨᏍᏙᏗ ᎠᏠᏯᏍᏔᏅᎯ ᎪᎯ ᎤᏩᎾᏕᏍᎩ ᎤᎵᎶᎯ, ᎠᎦᏎᏍᏗᏍᎬ ᏗᏄᏪᏍᏗ ᎠᏰᎸ ᎾᏍᏋ ᏗᎦᎳᏫᎩ [[youth|ᎠᏛᏍᎩ]] ᎠᎴ ᎤᏬᏚ. ᎪᎯ ᎨᏒᎢ reflected ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎠᎨᏴ ᎤᏙᏢᏒ ᎦᏙ ᎤᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ pubic ᎤᏍᏗᏰᎬ. [[Islam]] ᏓᏓᏁᏤᎸ ᎤᎪᏗᏗ ᎤᏬᎯᏳᏒ ᎬᏙᏗ ᎪᎯᏳᎯ ᎤᏍᏗᏰᎬ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎫᏢᎥᏍᎬ ᎤᏍᏗᏰᎬ ᎾᎥᎢ ᎠᏂᎨᏴ ᎠᎴ ᎯᎠ ᎠᎲᏏᏓᏍᏗ armpit ᎠᎴ pubic ᎤᏍᏗᏰᎬ (ᎠᎪᏩᏛᏗ [[fitrah|ᎯᏍᎩ ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ᏫᏚᏳᎪᏛ fitrah]]). 
 
-ᎭᏫᎾᏗᏢ [[Western world|ᏭᏕᎵᎬᏗᏢ]] societies ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᏴᏫ ᎤᏁᏓᏍᏗ ᏫᏚᏳᎪᏛ ᎾᎯᏳᎨᏒ ᎯᎠ ᎣᏂᏱᏳ [[twentieth century|ᏔᎵᏍᎪᎯᏁ sqohitsuqui tsudetiyvdi]], ᎾᏍᎩᎾ ᎨᏒ ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ, ᎠᎦᏲᎳᏅ ᎠᎴ ᎠᎲᏍᏗ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᎯᎠ [[bikini]] ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ sexual ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ advertising ᎠᎴ ᏓᎾᏛᏁᎵᏍᎬ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎪᎯ ᏚᏙᎳᏩᏛᎲ. ᎪᎯ media ᏫᏚᏳᎪᏛ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎨᏒᎢ ᏗᎾᏙᎳᎩ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᏂᎦᏅᎯᏒ ᏐᎢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎴᏂᏍᎬ ᎤᏁᏉᎢᏍᏗ ᏕᎦᏃᏣᎸ ᏄᎾᏛᏅ ansigaya, ᏄᎾᏛᏅ ᎦᎪᏃ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎴ ᎠᏍᏛᎢ ᏌᏊ ᎤᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏬᏢᏗ ᎤᏯᏅᎲ "[[manscaping]]".
+ᎭᏫᎾᏗᏢ [[Western world|ᏭᏕᎵᎬᏗᏢ]] societies ᎾᏍᎩ ᎠᏓᏁᏟᏴᏍᏗ ᏴᏫ ᎤᏁᏓᏍᏗ ᏫᏚᏳᎪᏛ ᎾᎯᏳᎨᏒ ᎯᎠ ᎣᏂᏱᏳ [[twentieth century|ᏔᎵᏍᎪᎯᏁ sᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ]], ᎾᏍᎩᎾ ᎨᏒ ᎾᏍᎩᎾᎢ ᎠᏂᎨᏴ, ᎠᎦᏲᎳᏅ ᎠᎴ ᎠᎲᏍᏗ ᎤᎾᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ. ᎯᎠ [[bikini]] ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ sexual ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ advertising ᎠᎴ ᏓᎾᏛᏁᎵᏍᎬ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏓᏅᏖᏍᎬ ᎾᏍᎩᎾᎢ ᎪᎯ ᏚᏙᎳᏩᏛᎲ. ᎪᎯ media ᏫᏚᏳᎪᏛ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎨᏒᎢ ᏗᎾᏙᎳᎩ ᎢᏳᏊ ᎤᏟ ᎢᎦᎢ ᎤᏂᎸᏉᏗ ᏂᎦᏅᎯᏒ ᏐᎢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᎴᏂᏍᎬ ᎤᏁᏉᎢᏍᏗ ᏕᎦᏃᏣᎸ ᏄᎾᏛᏅ ᎠᏂᏍᎦᏯ, ᏄᎾᏛᏅ ᎦᎪᏃ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎴ ᎠᏍᏛᎢ ᏌᏊ ᎤᏤᎵ ᎠᏰᎸ ᎤᏍᏗᏰᎬ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎤᏬᏢᏗ ᎤᏯᏅᎲ "[[manscaping]]".
 
 === ᎤᏍᏗᏰᎬ ᏥᏄᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ===
 [[Hair care|ᎤᏍᏗᏰᎬ ᎠᎦᏎᏍᏙᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ ᎨᏒᎢ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎡᎶᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ specialized ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ, chemicals ᎠᎴ techniques. 
@@ -95,7 +95,7 @@ g ᎤᏍᏗᏰᎬ]]
 {{Sectstub}}
 
 ==ᏙᎪᏩᎸ ᏴᏫ ᎠᎴ fictional ᎠᎦᏓᏅᏖᏗ ᎬᏙᏗ ᏗᎦᏃᏣᎵ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ==
-ᎪᎯ ᏙᎪᏩᎸ ᎾᏍᎩ ᎤᏩᏒ ᎠᏠᏯᏍᏗ ᏗᎦᏃᏣᎵ ᏴᏫ ᎠᎴ fictional ᎠᎦᏓᏅᏖᏗ ᎬᏙᏗ ᎢᎦᏪᏛ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᏗᎦᏃᏣᎵ ansigaya ᎬᏙᏗ ᏗᎦᏃᏣᎵ ᎦᏅᏙᎬ ᎠᎴ/ᎠᎴ ᎠᎭᏄᎸᏒ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎿᎢ ᏙᎪᏩᎸ. ᎾᏍᎩ ᎠᏠᏯᏍᏔᏅ ᎠᎭᏂ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎤᎾᏤᎵ ᏗᎪᏍᎩ ᏗᎦᎪᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎤᏍᏗᏰᎬ ᎠᏣᏅᏗ.
+ᎪᎯ ᏙᎪᏩᎸ ᎾᏍᎩ ᎤᏩᏒ ᎠᏠᏯᏍᏗ ᏗᎦᏃᏣᎵ ᏴᏫ ᎠᎴ fictional ᎠᎦᏓᏅᏖᏗ ᎬᏙᏗ ᎢᎦᏪᏛ ᎠᏍᎪᎵ ᎤᏍᏗᏰᎬ. ᏗᎦᏃᏣᎵ ᎠᏂᏍᎦᏯ ᎬᏙᏗ ᏗᎦᏃᏣᎵ ᎦᏅᏙᎬ ᎠᎴ/ᎠᎴ ᎠᎭᏄᎸᏒ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎿᎢ ᏙᎪᏩᎸ. ᎾᏍᎩ ᎠᏠᏯᏍᏔᏅ ᎠᎭᏂ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎢᏗᎦᏘᎭ ᎬᏙᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎤᎾᏤᎵ ᏗᎪᏍᎩ ᏗᎦᎪᏗ ᎤᏍᏗᏰᎬ ᎠᎴ ᎤᏍᏗᏰᎬ ᎠᏣᏅᏗ.
 
 * [[Absalom]]
 * [[The Beatles|ᎯᎠ Beatles]]
@@ -109,7 +109,7 @@ g ᎤᏍᏗᏰᎬ]]
 * [[George Clooney]], ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ [[Caesar cut|ᎡᎯᏍᏛ ᎠᏰᎳᏍᏗ]]
 * [[Angela Davis]]
 * [[Robert De Niro|Robert ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Niro]] ᏥᏄᏍᏗ [[Travis Bickle|ᎠᎵᏍᏕᎸᏗ Bickle]] ᎭᏫᎾᏗᏢ [[Taxi Driver|Taxi ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]
-* [[Bo Derek|ᎠᎵᎦᎵᏴᎯ Derek]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎾᏛᏁᎶᏗ [[Ten|ᏍᎪᎯ]] ([[1979]])
+* [[Bo Derek|ᎠᎵᎦᎵᏴᎯ Derek]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎾᏛᏁᎶᏗ [[Ten|ᏍᎪᎯ]] (1979)
 * [[Dido (singer)|Dido (ᏗᏂᏃᎩᏍᏗᏍᎩ)]], ᎤᏓᏁᎸ ᏚᏙᎥ ᎯᎠ [[Dido flip|Dido ᎠᏗᏅᏗ]]
 * [[Albert Einstein]]
 * [[Farrah Fawcett]]
@@ -126,7 +126,7 @@ g ᎤᏍᏗᏰᎬ]]
 * [[Jommeke]], Belgian ᎤᎸᏓᎴᏍᎩ ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[Jef Nys]].
 * [[Don King|ᎫᏢᎥᏍᎬ ᎤᎬᏫᏳᎯ]]
 * [[Elsa Lanchester]] ᏥᏄᏍᏗ ᎯᎠ ᏣᎦᏨᏍᏗᏍᎩ ᎠᎨᏴ ᎭᏫᎾᏗᏢ ᎯᎠ ᏫᏚᏳᎪᏛ [[The Bride of Frankenstein|ᎯᎠ ᏣᎦᏨᏍᏗᏍᎩ ᎠᎨᏴ  Frankenstein]]
-* [[Tom Lanoye|ᏗᏂᏤᎷᎯᏍᎩ Lanoye]], Belgian ᎪᏪᎵ Ꭺgoweli gowlisgi, ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏓᎦᏘᎴᎬ hearstyles
+* [[Tom Lanoye|ᏗᏂᏤᎷᎯᏍᎩ Lanoye]], Belgian ᎪᏪᎵ ᎠᎪᏪᎵ ᎠᏪᎵ ᎪᏪᎵᏍᏗ, ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏓᎦᏘᎴᎬ hearstyles
 * [[Pippi Longstocking]]
 * [[Princess Leia|ᎤᎬᏫᏳ ᎤᏪᏥᎠᏘ Leia]] ᏂᏛᎴᏅᏓ [[Star Wars|ᏃᏈᏏ ᏓᏄᏩ]]
 * [[John Lydon|ᎦᎳᏅᎯ Lydon]]/[[Johnny Rotten|Johnny ᎤᎪᏏᏛ]] ᏂᏛᎴᏅᏓ [[The Sex Pistols|ᎯᎠ ᏧᏠᎯᏍᏗ ᏍᏆᎳ ᎦᎶᏇ]]
@@ -158,10 +158,10 @@ g ᎤᏍᏗᏰᎬ]]
 * [[Chuck Norris|ᎦᏌᏙᏯᏍᏗ Norris]]
 * [[Jimi Hendrix]]
 
-== gantlai ᎤᏍᏗᏰᎬ ==
-ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-ᏴᏫ [[mammals|gantlai]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[pelage]], [[fur|ᎤᏭᏯᏔᏅ]] ᎠᎴ [[wool|ᎤᏩᏅ]]. ᎢᎦᏛ ᎯᎠ ᏧᏓᎴᏅᏓ ᏚᏙᏢᏒ ᎤᏍᏗᏰᎬ Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ pelage ᎠᎴ ᎠᎦᏘᏯ ᎤᏍᏗᏰᎬ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎪᏍᏓᏱ [[porcupine|ᏧᏣᏯᏍᏘ ᎤᏁ]]) ᎠᎴ ᎪᏍᏓᏱ (ᎦᏙ ᎤᏍᏗ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ [[mane|ᎦᏅᏙᎬ]][[lion|ᏢᏓᏥ]]). ᎯᎠ [[polar bear|ᎦᏚᎢ ᎠᎵᏐᏆᎸᏗ]] ᎤᎭ ᎤᏙᏢᏒ pelage ᎭᏢᏃ ᎤᎸᏑᏘ ᎠᎴ [[pigmentation|unpigmented]] ᎤᏍᏗᏰᎬ ᎠᎯᏴᏍᏗ [[sunlight]], ᎾᏍᎩᎾ ᎨᏒ [[ultraviolet]] [[light|ᎠᏨᏍᏛ]], ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏫᏒᏗ ᎤᏭᏯᏔᏅ ᎯᎠ ᎦᏁᎦ. 
+== ᎦᏂᏝᎢ ᎤᏍᏗᏰᎬ ==
+ᎯᎠ ᎤᏍᏗᏰᎬ ᎬᏙᏗ-ᏴᏫ [[mammals|ᎦᏂᏝᎢ]] ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[pelage]], [[fur|ᎤᏭᏯᏔᏅ]] ᎠᎴ [[wool|ᎤᏩᏅ]]. ᎢᎦᏛ ᎯᎠ ᏧᏓᎴᏅᏓ ᏚᏙᏢᏒ ᎤᏍᏗᏰᎬ Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ pelage ᎠᎴ ᎠᎦᏘᏯ ᎤᏍᏗᏰᎬ (ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎪᏍᏓᏱ [[porcupine|ᏧᏣᏯᏍᏘ ᎤᏁ]]) ᎠᎴ ᎪᏍᏓᏱ (ᎦᏙ ᎤᏍᏗ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ [[mane|ᎦᏅᏙᎬ]][[lion|ᏢᏓᏥ]]). ᎯᎠ [[polar bear|ᎦᏚᎢ ᎠᎵᏐᏆᎸᏗ]] ᎤᎭ ᎤᏙᏢᏒ pelage ᎭᏢᏃ ᎤᎸᏑᏘ ᎠᎴ [[pigmentation|unpigmented]] ᎤᏍᏗᏰᎬ ᎠᎯᏴᏍᏗ [[sunlight]], ᎾᏍᎩᎾ ᎨᏒ [[ultraviolet]] [[light|ᎠᏨᏍᏛ]], ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏫᏒᏗ ᎤᏭᏯᏔᏅ ᎯᎠ ᎦᏁᎦ. 
 
-ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ gantlai ᎤᎭ ᎤᎭᎨᏛ ᎤᏭᏯᏔᏅ. ᎤᎪᏗᏗ aquatic gantlai, ᏯᏛᎿ ᏥᏄᏍᏗ [[whale|ᎤᏔᎾ ᎠᏣᏗ]]ᎠᎴ [[dolphin|ᎠᎺᏉᎯ]], ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎦᏂ ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ, ᏥᏄᏍᏗ ᎯᎠ [[pinniped]]ᎠᎴ [[Mustelidae|ᏥᏯ]]ᎠᏓᏃᎮᏗ). ᏂᎦᎥ ᎠᏨᏍᏙᏗ ᏫᏚᏳᎪᏛ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎠᏰᎵ ᎠᏰᎸ ᏂᎬᎢ ᎠᎴ ᎯᎠ ᎾᏯᏛᎲᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎡᎷᏪᎢ ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏅᎩ ᏧᏅᏏᏯ centimeter). ᎡᏆ ᎡᎿᎢ ᎡᎥ ᏯᏛᎿ ᏥᏄᏍᏗ [[elephant|ᎧᎹᎹ]]ᎠᎴ [[rhinoceros|ᎳᏃᏏᎳ]] Ꮎ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎦᏚᎢ ᎡᏍᎦᏂ (ᎠᎴ Ꮎ ᎤᏚᎳᏗ ᎠᏍᏆᏂᎪᏙᏗ ᏂᏛᎴᏅᏓ overheating) ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ.
+ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎦᏂᏝᎢ ᎤᎭ ᎤᎭᎨᏛ ᎤᏭᏯᏔᏅ. ᎤᎪᏗᏗ aquatic ᎦᏂᏝᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ [[whale|ᎤᏔᎾ ᎠᏣᏗ]] ᎠᎴ [[dolphin|ᎠᎺᏉᎯ]], ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎦᏂ ᎤᏍᏗᏰᎬ ᎤᏲᎱᏎᎸ, ᏥᏄᏍᏗ ᎯᎠ [[pinniped]] ᎠᎴ [[Mustelidae|ᏥᏯ]] ᎠᏓᏃᎮᏗ). ᏂᎦᎥ ᎠᏨᏍᏙᏗ ᏫᏚᏳᎪᏛ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎠᏰᎵ ᎠᏰᎸ ᏂᎬᎢ ᎠᎴ ᎯᎠ ᎾᏯᏛᎲᎢ ᎠᏰᎸ ᎤᏍᏗᏰᎬ (ᎡᎷᏪᎢ ᎭᏫᎾᏗᏢ ᎤᏍᏗᏰᎬ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏅᎩ ᏧᏅᏏᏯ centimeter). ᎡᏆ ᎡᎿᎢ ᎡᎥ ᏯᏛᎿ ᏥᏄᏍᏗ [[elephant|ᎧᎹᎹ]] ᎠᎴ [[rhinoceros|ᎳᏃᏏᎳ]] Ꮎ ᎤᎭ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏰᎸ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎦᏚᎢ ᎡᏍᎦᏂ (ᎠᎴ Ꮎ ᎤᏚᎳᏗ ᎠᏍᏆᏂᎪᏙᏗ ᏂᏛᎴᏅᏓ overheating) ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᏍᏗ ᎠᎴ Ꮭ ᎠᏰᎸ ᎤᏍᏗᏰᎬ.
 
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
 
@@ -192,9 +192,7 @@ g ᎤᏍᏗᏰᎬ]]
 * [[Poliosis]]
 
 ==ᏫᏓᏎᎸᎢ==
-<div class="references-small">
 <references />
-</div>
 
 ==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
 *[http://answers.google.com/answers/threadview?id=122411 Discussion about shaving and cultures]
