/* ᎠᏒᎾᏍᏗ */ correcting ref, translating "catnip" with ref

--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -140,7 +140,7 @@
 
 ᎯᎳᎪ ᎢᏳ ᏪᏒ ᎠᏛ ᎨᏒᎢ ᏚᏅᎦᎸᎲ ᎾᎥᎢ Ꮝ ᎤᏂᏥ, ᎾᏍᎩ ᎠᎨᏴ ᎠᎾᏍᎬᏘ ᎠᎵᏍᏓᏴᏗ ᎤᏣᏘᎾ ᎢᎦᏛ ᎠᎴ ᏂᎦᏛ ᎯᎠ ᎠᎭᏄᎸᏒ.
 
-ᏪᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏎᏍᏗ reinforced ᎤᏍᏗᏰᎬ ᎤᏠᏱ ᎠᎭᏄᎸᏒ ᎾᎿ ᏐᎢ ᎢᎦᏛᎭ ᎤᎾᏤᎵ ᏗᏂᏰᎸ: ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏗᎦᏙᎵ, ᎾᎿ ᎯᎠ ᎠᏂᎭᏳᎨᏂ ᎠᎴ ᎾᎾᎢ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᏗᏂᏅᏍᎨᏂ.<ref>[http://www.moggies.co.uk/html/whiskers.html]<ref>
+ᏪᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏎᏍᏗ reinforced ᎤᏍᏗᏰᎬ ᎤᏠᏱ ᎠᎭᏄᎸᏒ ᎾᎿ ᏐᎢ ᎢᎦᏛᎭ ᎤᎾᏤᎵ ᏗᏂᏰᎸ: ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏗᎦᏙᎵ, ᎾᎿ ᎯᎠ ᎠᏂᎭᏳᎨᏂ ᎠᎴ ᎾᎾᎢ ᎯᎠ ᎦᏐᎯ ᎯᎠ ᏗᏂᏅᏍᎨᏂ.<ref>[http://www.moggies.co.uk/html/whiskers.html]/<ref>
 
 ==== ᏄᏍᏛ ᎠᎩᏍᏗ ====
 ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ 8 ᎥᏍᎩᏱ 8 2005 ᎢᏳᏍᏗ ᎧᏃᎮᏗ ''[[National Geographic|ᎬᎾᏕᎾ Geographic]]'',  ᏪᏌ ᏝᏰᎵ ᏄᏍᏛ ᎠᎩᏍᏗ sugary ᎤᏂᎩᏍᏘ ᎤᏍᏆᎸᎲ ᎦᏬᏂᎯᏍᏗ ᎠᏕᎶᏆᏍᏗ [[sweetness|ᎤᎦᎾᏍᏛ]] receptor [[gene]]. ᎢᎦᏛ ᎧᏃᎮᎸᏗ ᎤᏬᎯᏳ ᎪᎯ ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᏪᏌ ᎤᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᎴᏂᏙᎲ ᎢᎬᏩᏍᏗᎭ ᎦᎸᎳᏗ ᎭᏫᎾᏗᏢ [[protein|ᏤᎵ]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᏍᎩ ᎨᏒᎢ unclear ᎢᏳᏃ ᎾᏍᎩ ᎨᏒᎢ ᏂᎬᏂᏏᏍᎬ ᎠᎴ ᏄᎵᏍᏔᏅ ᎾᏍᎩ.
@@ -160,7 +160,7 @@
 
 ᎢᎦᏛ houseplants ᎠᎴ ᏗᏄᏬ ᏗᎦᏛᏗ ᏪᏌ. ᎯᎠ ᏧᎦᎶᎦ ᎯᎠ [[Lilium longiflorum|ᏥᏌ ᏕᎴᎯᏌᏅ ᎤᎾᏥ]] ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᏂᎪᎯᎸ ᎠᎴ ᎥᎴᏂᏙᎲ-ᎦᏂᏰᎩ ᏧᏓᎵ ᎤᏲᏨᎯ ᏪᏌ. [[Philodendron]] ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏗᏄᏬ ᏗᎦᏛᏗ ᏪᏌ. ''[[Cat Fancy|ᏪᏌ ᎦᎸᏉᏗᏍᎬ]]'' ᎤᎭ ᎧᎵ ᏙᎪᏩᎸ.<ref>[http://www.cfainc.org/articles/plants.html plants harmful to cats]</ref>
 
-ᎢᎦᏛ ᏪᏌ ᎤᎭ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ [[catnip|ᎠᏅᏬᏗ]]. ᎾᎯᏳᎢ ᎤᏅᏌ ᏂᎦᎥᏊ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏲᏨᎯ ᎾᏍᎩ, ᎤᏅᏌ ᏫᎵ ᎢᏳᏓᎵᎭ ᎠᏲᏛᎯ ᎭᏫᎾᏗᏢ ᎾᏍᎩ, ᎤᏩᏱ ᎾᎾᎢ ᎾᏍᎩ, ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎠᎵᏍᏓᏴᏗ ᎾᎿ ᎾᏍᎩ (ᏥᏄᏍᏗ ᎠᏅᏬᏗ ᎨᏒᎢ sensed ᎾᎥᎢ ᎯᎠ ᏪᏌ ᎤᏤᎵ [[Vomeronasal organ|Vomeronasal ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ]]). ᎯᎠ ᎢᏳᎵᏍᏙᏗ ᎨᏒᎢ ᎤᏠᏱᎭ ᏗᎦᏃᏢᎩ ᏍᏆᎳᎢ, ᏰᎵᏊ ᎢᎦᎢ ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ. ᎤᎶᏐᏅ ᏔᎵ ᎢᏧᏟᎶᏛ ᎠᎴ ᎦᏲᎵᎨ, ᏄᏍᏛ ᏁᎵᏍᎬ ᏪᏌ ᎤᏁᏉᎢᏍᏗ ᎤᏁᏉᏨ ᎠᏏᏇ. ᎯᎸᏍᎩ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ digakohidi ᏂᎬᏂᏏᏍᎬ ᎪᎯ ᎢᏳᎵᏍᏙᏗ, ᎠᏓᏙᎳᏍᏗᏍᎩ ᎢᎦᎢ ᎢᎦᏘ.
+ᎢᎦᏛ ᏪᏌ ᎤᎭ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ [[catnip|ᏪᏓᎤᏂᎨᏍᏗ]].<ref>Translation for catnip: Banks, William H. ''Plants of the Cherokee.'' Gatlinburg, TN, 2004: 95.</ref> ᎾᎯᏳᎢ ᎤᏅᏌ ᏂᎦᎥᏊ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏲᏨᎯ ᎾᏍᎩ, ᎤᏅᏌ ᏫᎵ ᎢᏳᏓᎵᎭ ᎠᏲᏛᎯ ᎭᏫᎾᏗᏢ ᎾᏍᎩ, ᎤᏩᏱ ᎾᎾᎢ ᎾᏍᎩ, ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎠᎵᏍᏓᏴᏗ ᎾᎿ ᎾᏍᎩ (ᏥᏄᏍᏗ ᎠᏅᏬᏗ ᎨᏒᎢ sensed ᎾᎥᎢ ᎯᎠ ᏪᏌ ᎤᏤᎵ [[Vomeronasal organ|Vomeronasal ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ]]). ᎯᎠ ᎢᏳᎵᏍᏙᏗ ᎨᏒᎢ ᎤᏠᏱᎭ ᏗᎦᏃᏢᎩ ᏍᏆᎳᎢ, ᏰᎵᏊ ᎢᎦᎢ ᎾᏍᎩᎾᎢ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ. ᎤᎶᏐᏅ ᏔᎵ ᎢᏧᏟᎶᏛ ᎠᎴ ᎦᏲᎵᎨ, ᏄᏍᏛ ᏁᎵᏍᎬ ᏪᏌ ᎤᏁᏉᎢᏍᏗ ᎤᏁᏉᏨ ᎠᏏᏇ. ᎯᎸᏍᎩ ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ digakohidi ᏂᎬᏂᏏᏍᎬ ᎪᎯ ᎢᏳᎵᏍᏙᏗ, ᎠᏓᏙᎳᏍᏗᏍᎩ ᎢᎦᎢ ᎢᎦᏘ.
 
 ᏪᏌ ᏰᎵᏇ ᎾᏍᏋ ᎠᎵᏍᎦᏃᏍᎩ ᎡᎳᏗ ᎾᏅᎡᏁᎲ. ᎪᎯ ᏰᎵᏇ ᏄᎵᏍᏔᏅ ᎯᎳᎪ ᎢᏳ ᎯᎠ [[vomeronasal organ|vomeronasal, ᎠᎴ Jacobson', ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ]] ᏗᏙᎳᎩ ᎣᎩᏌᏛ ᏗᎪᏍᎩ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᎢᏳᏃ ᎯᎠ ᏪᏌ ᎠᎴ ᎤᏲᏨᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᎤᎾᏤᎵᎢ, ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎪᏍᏓᏱ ᎯᎠ ᏪᏌ ᏫᎵ ᎠᏓᏯᏍᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᎵᏍᏓᏴᏗ Ꮎ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᎢᎩᏛ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎾᏍᎩ ᎨᏒᎢ ᎤᏚᎩ ᎤᏩ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ ᏪᏌ ᏄᏓᎴ ᏂᎨᏒᎾ ᏗᏙᎳᎩ ᎤᏔᎴᏒ ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏓᏁᎸ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᏗᎫᎪᏙᏗ ᎠᎴᏫᏍᏙᏗ ᎠᎵᏍᏓᏴᎲᏍᎬ ᎢᏳᏩᎪᏗ ᎤᏅᏌ ᎠᎴ ᎠᏓᎪᎵᏰᏛ ᎾᎾᎯ ᎠᎵᏍᏓᏴᎲᏍᎬ ᎠᏏᏇ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎧᏁᎳ ᎾᏍᎩᎾᎢ ᎠᏂ ᎠᎪᎾ ᎠᏲᎱᎯᏍᏗ ᎤᏅᏌ ᎠᏲᎱᎯᏍᏗ ᎾᎾᏛᏁᎲ ᎪᎯ; ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎢᏳᏓᎵᎭ ᎾᏍᎩᎾᎢ ᏪᏌ ᎤᏓᎪᏂᏲᎢᏍᏗ ᎠᎪᎾ ᎠᏲᎱᎯᏍᏗ ᎤᏩᏌᏊ ᎯᎠ ᎪᏍᏓᏱ ᎠᏥᏐᏅᏅ, ᎯᎠ ᎤᎳᏂᎩᏓ ᎤᏲᎱᏎᎸ ᏄᏓᎨᏒ ᏰᎵᏇ ᏂᎬᏂᏏᏍᎬ ᎤᎲᏲᎵᏍᏗ ᏄᏍᏗᏓᏅ ᎤᏯᏅᎲ hepatic lipidosis, ᎤᏪᎳ dysfunction ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ pathological ᎤᏲᎱᏎᎸ ᎣᏲᎢᏏᎬ. ᏗᎦᏟᏌᏅᎯ, ᏪᏌ ᎤᎭ ᏭᏪᏙᎢ ᎤᎾᏅᏛ ᎤᏙᎷᏬᏗ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ "ᏴᏫ ᎠᎵᏍᏓᏴᏗ" ᏯᏛᎿ ᏥᏄᏍᏗ ᏥᏔᎦ, ᎦᏚ, ᎠᎦᎸᏥ fries, pizza, ᎤᏁᏍᏓᎳ ᎠᎦᏓᏢᏓ, tomato ᎤᎦᎹ, ᎭᏫᏯ ᎤᎧᏲᏒ, carrot ᎦᏁᎲ, ᎠᏂᏁᏉᎬ, ᏓᏬᎵ,ᎠᎴ carnitas burritos, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᏪᏌ ᎠᎵᏍᏓᏴᏗ exotica ᏯᏛᎿ ᏥᏄᏍᏗ ᏎᎷ ᏚᎷᏍᏘ ᎠᎴ diced cantaloupe ᎠᎴ cantaloupe ᎦᏁᎦ. ᎤᎪᏗᏗ "ᏴᏫ ᎤᏂᎩᏍᏘ" ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎣᏍᏛ ᎾᏍᎩᎾᎢ ᏪᏌ; [[chocolate|ᏬᏗᎨᎧᎵᏤᏥ]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᏰᎵᏇ ᎾᏍᏋ ᎤᎲᏲᎵᏍᏗ ᎤᏍᏆᎸᎲ ᎯᎠ ᎡᏙᎲᎩ [[theobromine]] (ᎠᎪᏩᏛᏗ [[theobromine poisoning|theobromine ᎠᏲᎶᎬ]]), ᎾᏍᎩ ᎤᏁᎳᎩ ᎦᏲᎵ ᏪᏌ ᏫᎵ ᎠᎩᏍᏗ ᏬᏗᎨᎧᎵᏤᏥ. [[Paracetamol]], ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏓᏙᎳᎩ ᎦᏬᎯᎸᏙᏗ-ᎯᎠ-ᏗᏎᎯᎯ ᎠᏅᏬᏗ ᎤᎾᏛᎯᏍᏔᏅ ᏯᏛᎿ ᏥᏄᏍᏗ Tylenol, ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎠᏓᎯᎯ ᏪᏌ. ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎢᎬᏩᏍᏗᎭ ᎦᎷᎶᎩ enzymes ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎠᏓᏁᎳᏅᎯ ᎾᏍᎩ, ᎢᏧᎳᎭ ᎢᏯᏔᏬᏍᏔᏅ ᎢᎦᏛ ᎢᎦᎢ ᎠᎩᎯᏍᏗ ᏂᎦᎾᏰᎬᎾ ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ ᏰᎵᏇ ᎾᏍᏋ ᎤᎲᏲᎵᏍᏗ.<ref name="CanVetJ2003-Allen">{{cite journal | author=Allen AL | title=The diagnosis of acetaminophen toxicosis in a cat | journal=Can Vet J | year=2003 | pages=509-10 | volume=44 | issue=6 | id=PMID 12839249 [http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=12839249 Full text]}}</ref> ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏥᎳᏫᏎᎸ ᏛᏓᏓᏂᎸᎬ ᎠᏓᏂᏴᏙᏗ ᏄᎵᏍᏛ veterinary ᎠᎦᏎᏍᏙᏗ. <ref name="VetHumToxicol1998-Villar">{{cite journal | author=Villar D, Buck WB, Gonzalez JM | title=Ibuprofen, aspirin and acetaminophen toxicosis and treatment in dogs and cats | journal=Vet Hum Toxicol | year=1998 | pages=156-62 | volume=40 | issue=3 | id=PMID 9610496}}</ref>
 
