ᎯᎠ ᎤᏓᏡᎬ ᎤᎪᏗ ᏥᏅᎦᎵᎠ.

--- a/ᏓᎬᎾ_ᏥᏳ_ᏗᏔᎳᏗᏍᏗ_ᏚᎦᏘᎸᏒᎢ.mw
+++ b/ᏓᎬᎾ_ᏥᏳ_ᏗᏔᎳᏗᏍᏗ_ᏚᎦᏘᎸᏒᎢ.mw
@@ -33,7 +33,7 @@
 [[File:japanese.aircraft.carrier.zuikaku.jpg|thumb|200px|Zuikaku]]
 [[File:PearlHarborCarrierChart.jpg|right|thumbnail|175px|ᎯᎠ ᏣᏩᏂᏏ ᏥᏳ ᏧᏔᏅ steamed ᏫᏂᏚᏳᎪᏛ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ undetected ᎢᏳᏩᎪᏗ ᎯᎠ ᎣᏂ ᎢᏳᏊ.]]
 
-ᎯᎠ ᎢᏰᎵᏍᏗ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎾᎿ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᏥᏄᏍᏛᎩ ᎥᏓᏓᎫᏴᎡᏗᏱ [[U.S. Pacific Fleet|ᎠᎹᏰᏟ ᎠᏂᎩᏍᏗ ᏥᏳ ᎤᎳᏂᎬᎬ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎷᏪᎢ, ᎢᏳᏃ ᎾᏍᎩ ᎤᏩᏒ ᎢᎬᏱᏊ ᎦᏰᎯ, ᏥᏄᏍᏗ ᎢᎦᏛ [[theater (warfare)|ᎤᎾᏛᏁᎸᏗ]]-ᎠᏯᏖᎾ, ᎾᎥᏂᎨ-ᎠᎵᎪᏁᏗ coordinated ᏗᎦᏘᎸᏍᏗ ᏗᎦᏘᎴᎩ ᎯᎸᏍᎩ ᏄᏓᎴᎿᎥ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. [[Yamamoto|ᏯᎹᎼᏙ]] ᎤᏩᏒᎠᏍᎦᏯ ᎤᏚᎩ ᎤᏩᏒ Ꮎ ᎢᏧᎳᎭ ᎦᏣᏄᎳ ᏗᎦᏘᎸᏍᏗ ᏯᏓᎢᏗᏏ ᎤᏁᏉᎢᏍᏗ ᎾᏍᎩ ᎤᏩᏒ ᏑᏕᏘᏴᏓ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ tohi adedi ᎠᎵᏖᎸᏗ ᎤᏓᎷᎸ ᎯᎠ ᎠᎹᏰᏟ ᏥᏳ ᏧᏔᏅ ᎠᏢᏔᎲᎢ ᏰᎵᏊ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏣᏩᏂᏏ ᎠᏓᏌᎳᏙᏗ. ᎠᎴᏅᏙᏗ ᎠᏛᏂᏍᏗᏍᎩ ᎾᏍᎩᎾᎢ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎵᏍᏕᎸᏗ ᎠᏂᏯᏫᏍᎩ ᎠᏓᏌᎳᏙᏗ ᎠᎴ ᎾᎾᎯᏴ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎤᏃᎸᏔᏂ 1941, ᎠᎴ, ᎤᎶᏐᏅ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ factional infighting, ᎯᎠ ᎠᏎᎸᎯ ᏥᏄᏍᏛᎩ ᏭᎵᏍᏆᏛ ᏗᎫᎪᏔᏅ worthwhile. ᎠᎨᏲᎲᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᎨᏥᏅᏏᏓ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᎶᎯᏍᏗ ᎾᎥᎢ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-ᏑᏕᏘᏴᏓ. ᎯᎠ ᎠᏟᎶᏍᏙᏗ ᏗᎦᏘᎸᏍᏗ depended ᎢᎬᏱᏗᏢ ᎾᎿ torpedoes, ᎠᎴ ᎯᎠ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᎯᎠ ᎢᏳᏩᎪᏗ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏍᏛᎩ ᎠᎹ ᎤᏯᎾᏛᏁᏗ ᎢᏳᏃ ᎤᏃᎴ-launched. ᎪᎯ ᏥᏄᏍᏛᎩ ᎤᏓᏚᎯᏌᏘ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎢᎬᏂᏏᏍᎩ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎨᏒᎢ ᎤᏅᏬᏓ, ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ dredged ᎤᎶᎯᏍᏗ. ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎪᎨᏱ 1941, ᎠᏰᎵ ᎤᏍᏆᏂᎪᏗ ᎪᏢᏅᎯ ᎠᎴ tested ᎠᏍᎩᎾᏗᏍᏗ ᏧᏓᎴᎿᎢ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎤᏚᎩ ᎤᏩᏒ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏗᏙᎳᏤᎩ ᎭᏫᎾᏗᏢ ᎤᏅᏬᏓ ᎠᎹ ᎪᎭᏍᎬ. ᎯᎠ ᎠᏁᎸᏙᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[Type 95 torpedo|ᏗᎦᎪᏗ 95 ᎠᏍᎩᎾᏗᏍᏗ]] ᎦᏙ ᎤᏍᏗ inflicted ᎤᎪᏗᏗ ᎯᎠ ᎤᏲᏨᎯ ᎠᎹᏰᏟ ᏥᏳ ᏧᏔᏅ ᎾᎯᏳᎨᏒ ᎯᎠ ᏗᎦᏘᎸᏍᏗ. ᏣᏩᏂᏏ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ technicians ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᎯᏍᏔᏅ ᎤᏤᎵᏛ ᎤᎵᏍᏕᎸᏗ-ᎤᏴᏢ ᏗᎵᏍᏓᏲᎯᎯ ᎾᎥᎢ ᏰᎵ ᎢᎩᏛ ᏂᎦyeli igidv nigallisdisgv ᎠᏂᎩᏍᏗ ᏥᏳ ᎾᎿ 14 ᎠᎴ 15 ᎢᏯᏏᏔᏛ (356 ᎠᎴ 381 mm) ᎠᏂᎩᏍᏗ ᏥᏳ ᎦᎶᏇ ᎤᏯᏍᎦ. ᎾᏍᎩ ᎯᎠ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏴᏍᏙᏗ ᎯᎠ armored ᎠᎴᏅᏗᏍᎬ battleships ᎠᎴ ᎠᎾᏗᏒᎯᎯ ᎯᎳᎪ ᎢᏳ ᎤᏬᎭᏒᎩ ᏂᏛᎴᏅᏓ 10,000 ᏧᎾᎳᏏᏕᎾ (3,000 m), ᎢᏳᏃ ᎤᏅᏌ ᏰᎵᏇ ᎤᏙᎯᏳᎯᏯ ᎠᏓᏛᎾᏍᏗ ᎠᏂ.
+ᎯᎠ ᎢᏰᎵᏍᏗ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎾᎿ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᏥᏄᏍᏛᎩ ᎥᏓᏓᎫᏴᎡᏗᏱ [[U.S. Pacific Fleet|ᎠᎹᏰᏟ ᎠᏂᎩᏍᏗ ᏥᏳ ᎤᎳᏂᎬᎬ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎷᏪᎢ, ᎢᏳᏃ ᎾᏍᎩ ᎤᏩᏒ ᎢᎬᏱᏊ ᎦᏰᎯ, ᏥᏄᏍᏗ ᎢᎦᏛ [[theater (warfare)|ᎤᎾᏛᏁᎸᏗ]]-ᎠᏯᏖᎾ, ᎾᎥᏂᎨ-ᎠᎵᎪᏁᏗ coordinated ᏗᎦᏘᎸᏍᏗ ᏗᎦᏘᎴᎩ ᎯᎸᏍᎩ ᏄᏓᎴᎿᎥ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. [[Yamamoto|ᏯᎹᎼᏙ]] ᎤᏩᏒᎠᏍᎦᏯ ᎤᏚᎩ ᎤᏩᏒ Ꮎ ᎢᏧᎳᎭ ᎦᏣᏄᎳ ᏗᎦᏘᎸᏍᏗ ᏯᏓᎢᏗᏏ ᎤᏁᏉᎢᏍᏗ ᎾᏍᎩ ᎤᏩᏒ ᏑᏕᏘᏴᏓ ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ tohi adedi ᎠᎵᏖᎸᏗ ᎤᏓᎷᎸ ᎯᎠ ᎠᎹᏰᏟ ᏥᏳ ᏧᏔᏅ ᎠᏢᏔᎲᎢ ᏰᎵᏊ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᏣᏩᏂᏏ ᎠᏓᏌᎳᏙᏗ. ᎠᎴᏅᏙᏗ ᎠᏛᏂᏍᏗᏍᎩ ᎾᏍᎩᎾᎢ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ ᎠᎵᏍᏕᎸᏗ ᎠᏂᏯᏫᏍᎩ ᎠᏓᏌᎳᏙᏗ ᎠᎴ ᎾᎾᎯᏴ ᎤᎴᏅᎲ ᎭᏫᎾᏗᏢ ᎤᏃᎸᏔᏂ 1941, ᎠᎴ, ᎤᎶᏐᏅ ᎢᎦᏛ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ factional infighting, ᎯᎠ ᎠᏎᎸᎯ ᏥᏄᏍᏛᎩ ᏭᎵᏍᏆᏛ ᏗᎫᎪᏔᏅ worthwhile. ᎠᎨᏲᎲᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᎨᏥᏅᏏᏓ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᎶᎯᏍᏗ ᎾᎥᎢ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-ᏑᏕᏘᏴᏓ. ᎯᎠ ᎠᏟᎶᏍᏙᏗ ᏗᎦᏘᎸᏍᏗ depended ᎢᎬᏱᏗᏢ ᎾᎿ torpedoes, ᎠᎴ ᎯᎠ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᎯᎠ ᎢᏳᏩᎪᏗ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎠᏍᏛᎩ ᎠᎹ ᎤᏯᎾᏛᏁᏗ ᎢᏳᏃ ᎤᏃᎴ-launched. ᎪᎯ ᏥᏄᏍᏛᎩ ᎤᏓᏚᎯᏌᏘ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ ᎢᎬᏂᏏᏍᎩ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎨᏒᎢ ᎤᏅᏬᏓ, ᎾᏍᎩ ᎤᏩᏒ ᎭᏫᎾᏗᏢ dredged ᎤᎶᎯᏍᏗ. ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎪᎨᏱ 1941, ᎠᏰᎵ ᎤᏍᏆᏂᎪᏗ ᎪᏢᏅᎯ ᎠᎴ tested ᎠᏍᎩᎾᏗᏍᏗ ᏧᏓᎴᎿᎢ Ꮎ ᏰᎵᏇ ᎾᏍᏋ ᎤᏚᎩ ᎤᏩᏒ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏗᏙᎳᏤᎩ ᎭᏫᎾᏗᏢ ᎤᏅᏬᏓ ᎠᎹ ᎪᎭᏍᎬ. ᎯᎠ ᎠᏁᎸᏙᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[Type 95 torpedo|ᏗᎦᎪᏗ 95 ᎠᏍᎩᎾᏗᏍᏗ]] ᎦᏙ ᎤᏍᏗ inflicted ᎤᎪᏗᏗ ᎯᎠ ᎤᏲᏨᎯ ᎠᎹᏰᏟ ᏥᏳ ᏧᏔᏅ ᎾᎯᏳᎨᏒ ᎯᎠ ᏗᎦᏘᎸᏍᏗ. ᏣᏩᏂᏏ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ technicians ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᎯᏍᏔᏅ ᎤᏤᎵᏛ ᎤᎵᏍᏕᎸᏗ-ᎤᏴᏢ ᏗᎵᏍᏓᏲᎯᎯ ᎾᎥᎢ ᏰᎵ ᎢᎩᏛ ᏂᎦ ᏰᎵ ᎢᎩᏛ ᎾᎦᎵᏍᏗᏍᎬ ᎠᏂᎩᏍᏗ ᏥᏳ ᎾᎿ 14 ᎠᎴ 15 ᎢᏯᏏᏔᏛ (356 ᎠᎴ 381 mm) ᎠᏂᎩᏍᏗ ᏥᏳ ᎦᎶᏇ ᎤᏯᏍᎦ. ᎾᏍᎩ ᎯᎠ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏴᏍᏙᏗ ᎯᎠ armored ᎠᎴᏅᏗᏍᎬ battleships ᎠᎴ ᎠᎾᏗᏒᎯᎯ ᎯᎳᎪ ᎢᏳ ᎤᏬᎭᏒᎩ ᏂᏛᎴᏅᏓ 10,000 ᏧᎾᎳᏏᏕᎾ (3,000 m), ᎢᏳᏃ ᎤᏅᏌ ᏰᎵᏇ ᎤᏙᎯᏳᎯᏯ ᎠᏓᏛᎾᏍᏗ ᎠᏂ.
 
 ᎾᎿ ᏅᏓᏕᏆ 26, 1941, ᏥᏳ ᏧᏔᏅ ᎠᏠᏯᏍᏗᏍᎩ ᏑᏓᎵ [[aircraft carrier|ᏥᏳ ᎦᏃᎯᎵᏙᎯ ᎠᏫᏗᏍᎩ]]ᎠᏓᏁᏤᎸ ᎾᎥᎢ ᏣᏩᏂᏏ ᏔᎵᏁ ᎠᏓᎴᏁ ᏄᎬᏫᏳᏌᏕᎩ [[Chuichi Nagumo]] ᎠᎦᏍᎦᏂ [[Etorofu|Hitokappu ᎥᏓᎵ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Kuril Islands|Kuril ᎯᎸᏍᎩ ᎠᎹᏰᎵ]] ᎭᏫᎾᏗᏢ ᏓᎾᏓᏅᏍᎬᎢ ᎾᏍᎩᎾᎢ ᎠᏓᏅᏖᎯᏌᏛ [[radio|ᎦᏬᏂᏍᎩ]] ᎡᎷᏪᎢ ᏩᎦᏛ ᎾᏍᎩᎾᎢ ᎭᏩᏱ. [[File:Nakajima B5N2 green.jpg|left|200px|thumb|Nakajima B5N2 "Kate".]] ᎯᎠ ᏥᏳ ᎦᏃᎯᎵᏙᎯ ᎠᏫᏗᏍᎩ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎨᏒᎩ: [[Japanese aircraft carrier Akagi|''Akagi'']], [[Japanese aircraft carrier Hiryu|''Hiryu'']], [[Japanese aircraft carrier Kaga|''ᎧᎦ'']], [[Japanese aircraft carrier Shokaku|''Shokaku'']], [[Japanese aircraft carrier Soryu|''Soryu'']], ᎠᎴ [[Japanese aircraft carrier Zuikaku|''Zuikaku'']]. ᏔᎵ ᎦᏣᏄᎳ [[battleship]], ᏔᎵ [[heavy cruiser|ᎦᎨᏛ ᎠᎾᏗᏒᎯᎯ]], ᏌᏊ [[light cruiser|ᎠᏨᏍᏛ ᎠᎾᏗᏒᎯᎯ]], 9 [[destroyer|ᎠᏲᏍᏙᏗ]], ᎠᎴ 3 [[fleet submarine|ᏥᏳ ᏧᏔᏅ ᎤᏒᏙᏂ]]ᎠᏓᏁᎳᏅ ᎤᏓᏘᏅᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏯᏛᏁᏗ ᎠᎲ ᎦᏌᏙᏯᏍᏗ. ᎯᎠ ᎠᏫᏗᏍᎩ ᎠᏰᎲ ᏂᎦᏛ ᎦᏟᏌᏅ 423 ᎦᏃᎯᎵᏙ, ᎠᏠᏯᏍᏗᏍᎩ [[Mitsubishi Zero|Mitsubishi ᏗᎦᎪᏗ 0]] "ᏭᎶᏒᏍᏛ ᎤᏴᏜ" [[Fighter aircraft|ᎠᎾᏗᏒᎯᎯ ᏥᏳ ᎦᏃᎯᎵᏙᎯ]], [[Nakajima B5N|Nakajima ᏗᎦᎪᏗ 97]] "Kate" [[torpedo bomber|ᎠᏍᎩᎾᏗᏍᏗ bomber]], ᎠᎴ [[Aichi D3A|Aichi ᏗᎦᎪᏗ 99]] "Val" [[dive bomber|ᏗᎵᎬᏯᏍᏗ bomber]]. ᎯᎠ ᏣᏩᏂᏏ ᎢᏯᏛᏁᏗ ᎠᎲ ᎦᏌᏙᏯᏍᏗ ᎠᎴ Ꮝ ᎤᏃᎴ ᎤᎾᏓᏟᏌᎲ ᎨᏒᎩ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏧᏩᎫᏔᏅ ᏥᏳ ᎦᏃᎯᎵᏙᎯ ᎠᏫᏗᏍᎩ-ᏚᎳᏏᏔᏅᎩ ᎬᎾᏍᏗ ᎦᏌᏙᏯᏍᏗ. ᎤᎾᏓᏡᎩ ᎯᎠ ᏥᏳ ᏧᏔᏅ ᎨᏒᎩ 8 [[Tanker (ship)|tanker]]ᎾᏍᎩᎾᎢ refueling. ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎯᎠ ᎠᏓᏌᎳᏙᏗ Expeditionary ᎦᏌᏙᏯᏍᏗ ᎠᏠᏯᏍᏔᏅ 20 [[fleet submarine|ᏥᏳ ᏧᏔᏅ ᎤᏒᏙᏂ]]ᎠᎴ ᎯᏍᎩ ᏔᎵ-ᎠᏍᎦᏯ [[Ko-hyoteki class submarine|Ko-hyoteki-ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] [[midget submarine|midget ᎤᏒᏙᏂ]]; ᎤᏅᏌ ᎨᏒᎩ ᎦᏟᏐᏗ ᎪᎱᏍᏗ ᎨᏒ ᎠᎴ ᎡᎳᏗ ᎢᎦᎵᏍᏙᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᎹᏰᏟ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Ꮎ ᏄᎵᏂᎬᎬ ᎠᏁᎸᏙᏗ ᎠᎳᏘᏍᏗ ᏓᎬᎾ ᏥᏳ ᏗᏔᎳᏗᏍᏗ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏃᎴ ᏗᎦᏘᎸᏍᏗ.
 
